--- a/front_end/core/i18n/locales/mr.json
+++ b/front_end/core/i18n/locales/mr.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Web SQL डेप्रिकेट केले. कृपया SQLite WebAssembly किंवा इंडेक्स केलेला डेटाबेस वापरा"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "परवानगी डिस्क्रिप्टरwindow-placement डेप्रिकेट केला आहे. त्याऐवजी window-management वापरा. अधिक मदतीसाठी, https://bit.ly/window-placement-rename पहा."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "परवानगीशी संबधित धोरणwindow-placement हे डेप्रिकेट केले आहे. त्याऐवजी window-management वापरा. अधिक मदतीसाठी, https://bit.ly/window-placement-rename पहा."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "XMLHttpRequest मध्ये UTF-16 ला प्रतिसाद json चा सपोर्ट नाही"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "an insecure"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "प्रायव्हसी सॅंडबॉक्स चा भाग म्हणून Chrome मध्ये तृतीय पक्ष कुकी ब्लॉक केली आहे."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "प्रायव्हसी सॅंडबॉक्स चा भाग म्हणून भविष्यामधील Chrome आवृत्त्यांमध्ये तृतीय पक्ष कुकी ब्लॉक केल्या जातील."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "बग नोंदवा"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer सुरू करत आहे"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "काँप्रेशन डिक्शनरी ट्रान्सपोर्ट"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<निनावी>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "तुमच्या PWA च्या टायटल बारची विंडो नियंत्रणे ओव्हरले कस्टमाइझ करा"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "बॅकग्राउंडचा गडद रंग"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "गडद थीमचा रंग"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "वर्णन"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "रिकर्सिव्ह प्रकारे विस्तार करा"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "कीनुसार फिल्टर करा (जास्त किंवा समान की दाखवा)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "रेंडरपूर्व प्रक्रिया वापरली गेली नव्हती कारण ॲक्टिव्हेशनच्या वेळेदरम्यान, नेव्हिगेशनची सामान्य URL पेक्षा वेगळी परिणामकारक URL होती. (उदाहरणार्थ, नवीन टॅब पेज किंवा होस्ट केलेली ॲप्स.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "अज्ञात"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "रेंडरपूर्व प्रक्रिया केलेल्या पेजने ऑडिओ आउटपुटची विनंती केली, ज्याला सध्या सपोर्ट नाही."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "नेव्हिगेशनची रेंडरपूर्व प्रक्रिया http: किंवा https: स्कीम नसलेल्या URL वर रीडिरेक्ट केली गेल्यामुळे यशस्वी झाली नाही."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "अज्ञात"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "अज्ञात"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "नेव्हिगेशनच्या रेंडरपूर्व प्रक्रियेसाठी HTTP ऑथेंटिकेशन आवश्यक आहे, ज्याला सध्या सपोर्ट नाही."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL नुसार फिल्टर करा"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "प्रकारानुसार फिल्टर कव्हरेज"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "वेबसाइटद्वारे लोड करा"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL आणि एररनुसार फिल्टर करा"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "HTTP(S) डेव्हलपर स्रोत तुम्ही तपासत असलेल्या वेबसाइटद्वारे लोड करा, DevTools द्वारे नाही"
@@ -6387,7 +6402,7 @@
     "message": "संबंधित कोड"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "आणखी चांगल्या इनसाइट तयार करण्यासाठी या मेसेजकरिता संबंधित नेटवर्क विनंती डेटा कॅप्चर करण्यासाठी पेज रीलोड करा."
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "कायद्याशी संबंधित समस्येची तक्रार करा"
@@ -6435,7 +6450,7 @@
     "message": "तुमच्या संस्थेने हे वैशिष्ट्य बंद केले आहे. अधिक माहितीसाठी तुमच्या संस्थेशी संपर्क साधा."
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "हे वैशिष्ट्य सध्या रोल आउट केले जात आहे. संपर्कात रहा."
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "हे वैशिष्ट्य वापरण्यासाठी, DevTools सेटिंग्ज मध्ये तुमचे भाषा प्राधान्य इंग्रजीवर अपडेट करा."
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "समस्या दाखवा"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "परफॉर्मन्स"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "रेकॉर्ड करा"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "परफॉर्मन्स दाखवा"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "अलीकडील टाइमलाइन सेशन दाखवा"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "प्रोफायलिंग सुरू करा आणि पेज रीलोड करा"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "थांबवा"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "कंपोझिटिंगची कारणे"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "स्टॅक ट्रेस:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "लॉग मेसेजनुसार फिल्टर करा"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "माहिती"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "इव्‍हेंटचा स्रोत"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "रेगेक्स वापरून फिल्टर करा (उदाहरणार्थ: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "आयडी"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "फिल्टर करा"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "रेगेक्स वापरून फिल्टर करा (उदाहरणार्थ: (वेब)?सॉकेट)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "लांबी"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "कंटेनमेंट"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "डुप्लिकेट केलेल्या स्ट्रिंग"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "अंतर्गत गोष्टींसंबंधित माहिती द्या (अंमलबजावणीबद्दलच्या अतिरिक्त तपशिलांचा समावेश आहे)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "फिल्टर करा"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "श्रेणीनुसार फिल्टर करा"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "शोधा"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "{PH1} आणि {PH2} यांदरम्यान अ‍ॅलोकेट केलेले ऑब्जेक्ट"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools कन्सोलने राखून ठेवलेले ऑब्जेक्ट"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "डिटॅच केलेल्या DOM नोड द्वारे राखून ठेवलेली ऑब्जेक्ट"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "अपलोड करा: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "अत्यंत धीमा रीप्ले"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "अतिशय धीमा"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "रीप्ले करा"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "अतिशय धीमी गती"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "अतिशय धीमा"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "सामान्य गती"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "सामान्य (डीफॉल्ट)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "धीमा रीप्ले"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "धीमी गती"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "धीमा"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "खूप धीमा रीप्ले"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "खूप धीमी गती"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "खूप धीमा"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "एक्स्टेंशन"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "वेगाशी संबंधित डेटा"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "इंडेक्स करताना व्यत्यय आला."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "केस जुळवा"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "जुळण्या सापडल्या नाहीत."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "रिफ्रेश करा"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "शोधा"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "शोध पूर्ण झाला."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "शोधामध्ये व्यत्यय आला."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "शोध क्वेरी"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "शोधत आहे…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "रेग्युलर एक्स्प्रेशन वापरा"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2} सह {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "url लोड करताना एरर आली {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "एक्स्टेंशन स्क्रिप्टकडे दुर्लक्ष करा"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "या फाइलकडे दुर्लक्ष करा"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "येथे कधीही थांबवू नका"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "इमेज डीकोड"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "इमेजचा आकार बदला"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "टायमर इंस्टॉल करा"
   },
@@ -12555,7 +12591,7 @@
     "message": "मुख्य — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | onIgnoreList": {
-    "message": "दुर्लक्ष करा सूचीवर"
+    "message": "दुर्लक्ष करण्याच्या गोष्टींच्या सूचीवर"
   },
   "panels/timeline/ThreadAppender.ts | raster": {
     "message": "रास्टर"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- पेंट इंस्ट्रुमेंटेशनमुळे लक्षणीय ओव्हरहेड"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "रेकॉर्डिंगनंतर, स्वारस्य असलेला भाग ओव्हरव्ह्यूमध्ये ड्रॅग करून निवडा. त्यानंतर, माउसव्हील किंवा {PH1} की वापरून टाइमलाइन झूम आणि पॅन करा. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "बफरचा वापर"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "साफ करा"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "नवीन रेकॉर्डिंग सुरू करण्यासाठी रेकॉर्ड करा बटण {PH1} यावर क्लिक करा किंवा {PH2} प्रेस करा."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "पेज लोड रेकॉर्ड करण्यासाठी रीलोड बटण {PH1} वर क्लिक करा किंवा {PH2} प्रेस करा."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "बंद करा"
@@ -12750,7 +12777,7 @@
     "message": "प्रगत पेंट इंस्ट्रुमेंटेशन (धीमे) सुरू करा"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSS सिलेक्टर आकडेवारी सुरू करा"
+    "message": "CSS सिलेक्टर आकडेवारी सुरू करा (धीमी)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "टाइमलाइन सेव्ह करता आली नाही: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "प्रोफायलर सुरू करत आहे…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "अधिक जाणून घ्या"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "प्रोफाइल लोड करा…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "वेळ"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "सारणी कॉपी करा"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "ग्रुपिंग नाही"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "ऑप्टिमाइझ न केलेले: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "पेज"
@@ -13077,7 +13095,7 @@
     "message": "आयडी"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "{PH2} वर {PH1}"
+    "message": "{PH2} मध्ये {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "अप्रमाणीकरणे"
@@ -13119,7 +13137,7 @@
     "message": "यावर हलवले"
   },
   "panels/timeline/TimelineUIUtils.ts | networkRequest": {
-    "message": "नेटवर्क विनंती"
+    "message": "नेटवर्कशी संबंधित विनंती"
   },
   "panels/timeline/TimelineUIUtils.ts | networkTransfer": {
     "message": "नेटवर्क ट्रान्सफर"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "कॅशेवरून लोड केलेले स्क्रिप्ट"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "स्क्रिप्ट पात्र नाही"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "सिलेक्टर आकडेवारी"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "एकूण वेळ"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "ट्रेस इव्‍हेंट"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "प्रकार"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "तयार असल्यावर DevTools पुन्हा उघडून पुन्हा कनेक्ट करा."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "रद्द करा"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} जुळण्या"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "शोधा"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "केस जुळवा"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "एक जुळणी"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "मागील शोधा"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "रेग्युलर एक्स्प्रेशन वापरा"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "एक किंवा अधिक सेटिंग्ज बदलली आहेत, जी लागू होण्यासाठी रीलोड केले जाणे आवश्यक आहे."
@@ -13932,7 +13947,10 @@
     "message": "पेज रीलोड केले गेल्यावर, DevTools आपोआप पुन्हा कनेक्ट होईल."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "इनपुट साफ करा"
+    "message": "साफ करा"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "फिल्टर"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "दाबले नाही"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} चा स्क्रीनशॉट - यापूर्वीच्या विनंत्या पाहण्यासाठी निवडा."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "दुर्लक्ष करा सूचीमध्ये स्क्रिप्ट जोडा"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "ट्रॅक कॉन्फिगर करा…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "ट्रॅक कॉन्फिगर करणारे पूर्ण करा"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "फ्लेम चार्ट"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "पुनरावृत्ती होणारे उपघटक लपवा"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "दुर्लक्ष करा सूचीमधून स्क्रिप्ट काढून टाका"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "उपनोंदी रीसेट करा"
