--- a/front_end/core/i18n/locales/ar.json
+++ b/front_end/core/i18n/locales/ar.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "تم إيقاف لغة الاستعلامات البنيوية (SQL) على الويب نهائيًا. يُرجى استخدام SQLite WebAssembly أو Indexed Database."
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "تم إيقاف واصف الأذونات window-placement نهائيًا. يمكنك استخدام window-management كبديل. للحصول على مزيد من المساعدة، يُرجى الاطّلاع على https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "تم إيقاف سياسة الأذونات window-placement نهائيًا. يمكنك استخدام window-management كبديل. للحصول على مزيد من المساعدة، يُرجى الاطّلاع على https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "لا يتوفّر الترميز UTF-16 من خلال استجابة json في واجهة برمجة التطبيقات XMLHttpRequest."
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "سياق غير آمن"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "تم حظر ملف تعريف الارتباط التابع لجهة خارجية في Chrome كجزء من \"مبادرة حماية الخصوصية\"."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "سيتم حظر ملف تعريف الارتباط التابع لجهة خارجية في إصدارات Chrome المستقبلية كجزء من \"مبادرة حماية الخصوصية\"."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "الإبلاغ عن خطأ"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "جارٍ تفعيل SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "نقل قاموس ضغط البيانات"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<مجهول المصدر>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "تخصيص شريط العناوين لواجهة Window Controls Overlay في تطبيق الويب التقدّمي (PWA)"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "لون الخلفية الداكنة"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "لون المظهر الداكن"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "الوصف"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "توسيع متكرّر"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "الفلترة حسب المفتاح (عرض المفاتيح التي تزيد قيمتها عن أو تساوي)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "سطور أوامر DBView المُفهرسة"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "لم يتم استخدام العرض المُسبَق، لأنّ التنقّل أثناء وقت التفعيل يحتوي على عنوان URL فعّال يختلف عن عنوان URL العادي. (على سبيل المثال، صفحة \"علامة تبويب جديدة\" أو التطبيقات المستضافة)."
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "غير معروف"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "تطلّبت الصفحة المعروضة مُسبقًا مصادر لإخراج الصوت، وهي غير متاحة حاليًا."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "تعذَّر الانتقال إلى العرض المُسبَق لأنّه تمت إعادة التوجيه إلى عنوان URL لم يكن مخطَّطه http:‎ أو https:‎."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "غير معروف"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "غير معروف"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "تطلَّبَ الانتقال إلى العرض المُسبَق مصادقة HTTP، وهي غير متاحة حاليًا."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "صفحات الأنماط المتتالية (CSS)"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "الفلترة حسب عنوان URL"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "فلترة التغطية حسب النوع"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "تحميل من خلال الموقع الإلكتروني"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "الفلترة حسب عنوان URL والخطأ"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "يجب تحميل موارد HTTP(S) الخاصة بالمطوّرين من خلال الموقع الإلكتروني الذي تفحصه، وليس من خلال \"أدوات مطوري البرامج\"."
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "عرض أداة \"المشاكل\""
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "الأداء"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "تسجيل"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "عرض أداة \"الأداء\""
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "عرض جلسات المخطط الزمني الأخيرة"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "بدء التحليل وإعادة تحميل الصفحة"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "إيقاف"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "أسباب التركيب"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "تتبُّع تسلسل استدعاء الدوال البرمجية:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "الفلترة حسب الرسائل المسجّلة"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "معلومات"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "مصدر الحدث"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "الفلترة باستخدام تعبير عادي (مثال: ?https)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "رقم التعريف"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "فلتر"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "الفلترة باستخدام التعبير العادي (مثال: ‎(web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "المدّة"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "الحاوية"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "سلاسل مكرّرة"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "عرض البيانات الداخلية (بما في ذلك تفاصيل إضافية خاصة بعملية التنفيذ)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "فلتر"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "الفلترة حسب الفئة"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "بحث"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "الكائنات التي تم تخصيصها بين {PH1} و{PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "الكائنات التي تحتفظ بها وحدة التحكُّم في أدوات مطوّري البرامج"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "الكائنات التي تحتفظ بها عُقد DOM المنفصلة"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "سرعة التحميل: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "إعادة التشغيل بمستوى سرعة بطيء للغاية"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "مستوى سرعة بطيء للغاية"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "إعادة التشغيل"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "مستوى سرعة منخفض بشدة"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "مستوى سرعة بطيء للغاية"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "مستوى سرعة عادي"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "مستوى سرعة عادي (الخيار التلقائي)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "إعادة التشغيل بمستوى سرعة بطيء"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "مستوى سرعة منخفض"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "مستوى سرعة بطيء"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "إعادة التشغيل بمستوى سرعة بطيء جدًا"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "مستوى سرعة منخفض جدًا"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "مستوى سرعة بطيء جدًا"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "الإضافات"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "السرعة"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "توقفت الفهرسة."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "مطابقة الحالة"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "لم يتم العثور على نتائج مطابقة."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "إعادة تحميل"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "بحث"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "انتهت عملية البحث."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "توقفت عملية البحث."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "طلب البحث"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "جارٍ البحث…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "استخدِم التعبير العادي"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} مع {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "حدث خطأ أثناء تحميل عنوان URL {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "تجاهُل النصوص البرمجية للإضافات"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "تجاهُل هذا الملف"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "عدم الإيقاف المؤقت هنا مرة أخرى"
   },
@@ -12144,7 +12183,7 @@
     "message": "الصور المتحركة"
   },
   "panels/timeline/AppenderUtils.ts | sSelfS": {
-    "message": "‫{PH1} (الوقت المستغرق في هذه العقدة وحدها {PH2})"
+    "message": "{PH1} (الوقت المستغرق في هذه العقدة {PH2})"
   },
   "panels/timeline/CountersGraph.ts | documents": {
     "message": "المستندات"
@@ -12313,9 +12352,6 @@
   },
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "فك ترميز الصور"
-  },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "تغيير حجم الصورة"
   },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "تثبيت موقِّت"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- أعباء كبيرة على الأداء بسبب قياس سرعة عرض محتوى الصفحة"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "بعد التسجيل، اختَر منطقة معيّنة ضمن صفحة النظرة العامة من خلال السحب. بعد ذلك، كبّر صورة المخطط الزمني واعرضها عرضًا شاملاً باستخدام بكرة الماوس أو مفاتيح {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "استخدام المخزن المؤقت"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "محو"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "انقر على زر التسجيل {PH1} أو اضغط على {PH2} لبدء تسجيل جديد."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "انقر على زر إعادة التحميل {PH1} أو اضغط على {PH2} لتسجيل تحميل الصفحة."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "إغلاق"
@@ -12750,7 +12777,7 @@
     "message": "تفعيل قياس سرعة العرض المتقدم (بطيء)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "تفعيل إحصاءات أداة اختيار لغة CSS"
+    "message": "تفعيل إحصاءات أداة اختيار لغة CSS (قد يؤدي ذلك إلى حدوث بطء في الأداء)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "تعذَّر حفظ المخطّط الزمني: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "جارٍ إعداد المحلّل…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "مزيد من المعلومات"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "تحميل الملف التعريفي…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "الوقت"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "نسخ الجدول"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "بلا تجميع"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "غير محسّن: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "الصفحة"
@@ -13077,7 +13095,7 @@
     "message": "رقم التعريف"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "‫{PH1} في {PH2}"
+    "message": "‫\"{PH1}\" في \"{PH2}\""
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "عمليات إلغاء الصلاحية"
@@ -13191,7 +13209,7 @@
     "message": "تمّ تجميع {PH1}."
   },
   "panels/timeline/TimelineUIUtils.ts | sOfS": {
-    "message": "{PH1} من {PH2}"
+    "message": "‫{PH1} من إجمالي {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | sS": {
     "message": "{PH1}: {PH2}"
@@ -13200,7 +13218,7 @@
     "message": "({PH1}، {PH2})"
   },
   "panels/timeline/TimelineUIUtils.ts | sSDimensions": {
-    "message": "{PH1} × {PH2}"
+    "message": "‫{PH1} × {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | sSSquareBrackets": {
     "message": "{PH1} [{PH2}…]"
@@ -13222,6 +13240,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "تم تحميل النص البرمجي من ذاكرة التخزين المؤقت"
+  },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "النص البرمجي غير صالح."
   },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "إحصاءات أداة الاختيار"
@@ -13248,7 +13269,7 @@
     "message": "الوقت المستغرق في العرض"
   },
   "panels/timeline/TimelineUIUtils.ts | timeout": {
-    "message": "المهلة"
+    "message": "انتهى الموقّت"
   },
   "panels/timeline/TimelineUIUtils.ts | timerId": {
     "message": "رقم تعريف الموقّت"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "الوقت الإجمالي"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "تتبُّع الحدث"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "نوع"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "عندما تكون مستعدًا، أعِد فتح أدوات مطوري البرامج للاتصال بها مرة أخرى."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "إلغاء"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "عدد النتائج المطابِقة: {PH1}"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "بحث"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "مطابقة الحالة"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "مطابقة واحدة"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "البحث في مثال سابق"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "استخدِم التعبير العادي"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "تم تغيير إعداد أو أكثر، ما يتطلّب إعادة التحميل لتصبح هذه الإعدادات سارية المفعول."
@@ -13932,7 +13947,10 @@
     "message": "بعد إعادة تحميل الصفحة، ستتم إعادة الاتصال بأدوات مطوري البرامج."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "محو الإدخال"
+    "message": "محو"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "فلتر"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "غير مضغوط"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "لقطة شاشة لمدة {PH1}، اختَر لعرض الطلبات السابقة."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "إضافة النص البرمجي إلى قائمة التجاهل"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "ضبط إعدادات قنوات الإصدار…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "إنهاء إعداد قنوات الإصدار"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "رسم بياني مفصَّل لأداء الرموز"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "إخفاء العناصر الثانوية المتكررة"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "إزالة النص البرمجي من قائمة التجاهل"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "إعادة ضبط العنصر الثانوي"
