--- a/front_end/core/i18n/locales/as.json
+++ b/front_end/core/i18n/locales/as.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "ৱেবৰ SQL অপ্ৰচলিত কৰা হৈছে। অনুগ্ৰহ কৰি SQLite WebAssembly অথবা Indexed Database ব্যৱহাৰ কৰক"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "অনুমতিৰ বিৱৰণ window-placement অপ্ৰচলিত হৈছে। ইয়াৰ পৰিৱৰ্তে window-management ব্যৱহাৰ কৰক। অধিক সহায়ৰ বাবে, https://bit.ly/window-placement-rename চাওক।"
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "অনুমতিৰ নীতি window-placement অপ্ৰচলিত হৈছে। ইয়াৰ পৰিৱৰ্তে window-management ব্যৱহাৰ কৰক। অধিক সহায়ৰ বাবে, https://bit.ly/window-placement-rename চাওক।"
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "XMLHttpRequestত json সঁহাৰিয়ে UTF-16 সমৰ্থন নকৰে"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "এটা অসুৰক্ষিত"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "প্ৰাইভেচি ছেণ্ডবক্সৰ অংশ হিচাপে Chromeত তৃতীয়-পক্ষৰ কুকি অৱৰোধ কৰা হয়।"
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "প্ৰাইভেচি ছেণ্ডবক্সৰ অংশ হিচাপে ভৱিষ্যতৰ Chrome সংস্কৰণত তৃতীয়-পক্ষৰ কুকি অৱৰোধ কৰা হ’ব।"
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "বাগ ফাইল কৰক"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer সক্ষম কৰি থকা হৈছে"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "কম্প্ৰেশ্বন ডিক্সনাৰী ট্ৰান্সপ’ৰ্ট"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<বেনামী>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "আপোনাৰ PWAৰ শিৰোনামৰ বাৰ ৱিণ্ড’ নিয়ন্ত্ৰণৰ অ’ভাৰলে’ কাষ্টমাইজ কৰক"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "নেপথ্যৰ ৰং গাঢ়"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "গাঢ় ৰঙৰ থীম"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "বিৱৰণ"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "পুনৰাবৃত্তি হোৱাকৈ বিস্তাৰ কৰক"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "কী অনুসৰি ফিল্টাৰ কৰক (ডাঙৰ বা সমান কী দেখুৱাওক)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "প্ৰিৰেণ্ডাৰটো ব্যৱহাৰ কৰা হোৱা নাছিল, কাৰণ সক্ৰিয় কৰাৰ সময়ত, নেভিগেশ্বনৰ স্বাভাৱিক URLতকৈ পৃথক অন্য এটা কাৰ্যকৰী URL আছে। (যেনে, নতুন টেবৰ পৃষ্ঠা অথয়া হ’ষ্ট কৰা এপ্।)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "অজ্ঞাত"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "প্ৰিৰেণ্ডাৰ কৰা পৃষ্ঠাখনে অডিঅ’ ইনপুটৰ বাবে অনুৰোধ কৰিছে, যিটো বৰ্তমান সমৰ্থিত নহয়।"
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "প্ৰিৰেণ্ডাৰিঙৰ নেভিগেশ্বন বিফল হৈছে কাৰণ এইটোৱে এনে এটা URLলৈ ৰিডাইৰেক্ট কৰিছে, যাৰ আঁচনিখন http: অথবা https: নহয়।"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "অজ্ঞাত"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "অজ্ঞাত"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "প্ৰিৰেণ্ডাৰিঙৰ নেভিগেশ্বনৰ বাবে HTTP বিশ্বাসযোগ্যতা প্ৰমাণীকৰণৰ আৱশ্যক হয়, যিটো বৰ্তমান সমৰ্থিত নহয়।"
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL অনুসৰি ফিল্টাৰ কৰক"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "প্ৰকাৰ অনুসৰি ফিল্টাৰৰ ক’ভাৰেজ"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "ৱেবছাইটৰ জৰিয়তে ল’ড কৰক"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL আৰু আঁসোৱাহ অনুসৰি ফিল্টাৰ কৰক"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "বিকাশকৰ্তাৰ সঁজুলিটোৰ সলনি আপুনি নিৰীক্ষণ কৰা ৱেবছাইটটোৰ জৰিয়তে HTTP(S) বিকাশকৰ্তাৰ সম্পদসমূহ ল’ড কৰক"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "সমস্যা দেখুৱাওক"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "কাৰ্যক্ষমতা"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "ৰেকৰ্ড কৰক"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "পাৰদৰ্শিতা দেখুৱাওক"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "শেহতীয়া টাইমলাইন ছেশ্বন দেখুৱাওক"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "প্ৰ’ফাইল কৰা আৰম্ভ কৰক আৰু পৃষ্ঠা পুনৰ ল’ড কৰক"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "বন্ধ কৰক"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "একত্ৰিত কৰাৰ কাৰণ"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "ষ্টেকট্ৰে’চ:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "লগ বাৰ্তা অনুসৰি ফিল্টাৰ কৰক"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "তথ্য"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "অনুষ্ঠানৰ উৎস"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "regex (উদাহৰণ: https?) ব্যৱহাৰ কৰি ফিল্টাৰ কৰক"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "আইডি"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "ফিল্টাৰ"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "regex (উদাহৰণ: (ৱেব)?ছকেট) ব্যৱহাৰ কৰি ফিল্টাৰ কৰক"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "দৈৰ্ঘ্য"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "কণ্টেইনমেণ্ট"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "ডুপ্লিকেট কৰা ষ্ট্ৰিংসমূহ"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "অভ্যন্তৰীণ ডেটা ফাদিল কৰক (অতিৰিক্ত প্ৰণয়ন-নিৰ্দিষ্ট সবিশেষ অন্তৰ্ভুক্ত)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "ফিল্টাৰ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "শ্ৰেণী অনুসৰি ফিল্টাৰ কৰক"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "বিচাৰক"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "{PH1} আৰু {PH2}ৰ মাজত বস্তু আৱণ্টন কৰা হৈছে"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools কনছ’লৰ দ্বাৰা ৰখা বস্তুসমূহ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "অসংলগ্ন DOM ন’ডৰ দ্বাৰা ৰখা বস্তুসমূহ"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "আপল’ড কৰক: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "অত্যধিক লেহেমীয়া পুনৰ প্লে’"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "অত্যধিক লেহেমীয়া"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "পুনৰ প্লে’ কৰক"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "অতি লেহেমীয়া গতি"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "অত্যধিক লেহেমীয়া"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "স্বাভাৱিক গতিবেগ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "সাধাৰণ (ডিফ’ল্ট)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "লেহেমীয়া পুনৰ প্লে’"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "লেহেমীয়া গতি"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "লেহেমীয়া"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "অতি লেহেমীয়া পুনৰ প্লে’"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "অতি লেহেমীয়া গতি"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "অতি লেহেমীয়া"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "এক্সটেনশ্বন"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "গতিবেগ"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "ইণ্ডেক্সিং ব্যাহত হৈছে।"
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "কে’ছ মিলাওক"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "কোনো মিল থকা বস্তু বিচাৰি পোৱা নাই।"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "ৰিফ্ৰেশ্ব কৰক"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "সন্ধান কৰক"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "সন্ধান কৰাটো সম্পূৰ্ণ হ’ল।"
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "সন্ধান কৰাটো ব্যাহত হৈছে।"
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "সন্ধান কৰা প্ৰশ্ন"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "সন্ধান কৰি থকা হৈছে…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "নিয়মীয়া বিন্যাস ব্যৱহাৰ কৰক"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2}ৰ জৰিয়তে {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "URL {PH1} ল’ড কৰোঁতে আসোঁৱাহ হৈছে: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "এক্সটেনশ্বন স্ক্ৰিপ্ট উপেক্ষা কৰক"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "এই ফাইলটো উপেক্ষা কৰক"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "ইয়াত কেতিয়াও পজ নকৰিব"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "প্ৰতিচ্ছবি ডিক’ড কৰক"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "প্ৰতিচ্ছবিৰ আকাৰ সলনি"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "টাইমাৰ ইনষ্টল কৰক"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- পেইণ্ট ইনষ্ট্ৰুমেণ্টেশ্বনৰ বাবে গুৰুত্বপূৰ্ণ অ’ভাৰহেড"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "ৰেকৰ্ডিঙৰ পাছত ৰূপৰেখাত পচন্দৰ এটা ক্ষেত্ৰ টানি আনি বাছনি কৰক। তাৰ পাছত মাউছহুইল অথবা {PH1} কীৰ সৈতে টাইমলাইনটো জুম আৰু পেন কৰক। {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "বাফাৰৰ ব্যৱহাৰ"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "মচক"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "ৰেকৰ্ড কৰা বুটামটোত {PH1} ক্লিক কৰক অথবা এটা নতুন ৰেকৰ্ডিং আৰম্ভ কৰিবলৈ {PH2}ত টিপক।"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "পুনৰ ল’ড কৰা বুটামটোত {PH1} ক্লিক কৰক অথবা ল’ড কৰা পৃষ্ঠাখন ৰেকৰ্ড কৰিবলৈ {PH2}ত টিপক।"
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "বন্ধ কৰক"
@@ -12750,7 +12777,7 @@
     "message": "উচ্চখাপৰ পেইণ্ট ইনষ্ট্ৰুমেণ্টেশ্বন সক্ষম কৰক (লেহেমীয়া)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSSৰ বাছনিকৰ্তাৰ পৰিসংখ্যা সক্ষম কৰক"
+    "message": "CSSৰ বাছনিকৰ্তাৰ পৰিসংখ্যা সক্ষম কৰক (লেহেমীয়া)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "টাইমলাইন ছেভ কৰিব পৰা নগ’ল: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "প্ৰ’ফাইলাৰ আৰম্ভ কৰি থকা হৈছে…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "অধিক জানক"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "প্ৰ’ফাইল ল’ড কৰক…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "সময়"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "টেবুল প্ৰতিলিপি কৰক"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "কোনো গোট কৰা হোৱা নাই"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "অপ্টিমাইজ নকৰা: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "পৃষ্ঠা"
@@ -13077,7 +13095,7 @@
     "message": "আইডি"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "{PH2} ত {PH1}"
+    "message": "{PH2}ত {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "অমান্যকৰণ"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "কেশ্বৰ পৰা ল’ড কৰা স্ক্ৰীপ্ট"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "স্ক্ৰিপ্ট যোগ্য নহয়"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "বাছনিকৰ্তাৰ পৰিসংখ্যা"
   },
@@ -13248,7 +13269,7 @@
     "message": "ৰেণ্ডাৰিং কৰোঁতে খৰচ হোৱা সময়"
   },
   "panels/timeline/TimelineUIUtils.ts | timeout": {
-    "message": "সময় উকলা"
+    "message": "টাইমআউট"
   },
   "panels/timeline/TimelineUIUtils.ts | timerId": {
     "message": "টাইমাৰ আইডি"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "মুঠ সময়"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "ট্ৰে’চ ইভেণ্ট"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "প্ৰকাৰ"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "সাজু হ’লে DevToolsৰ দ্বাৰা পুনৰ খুলি সংযোগ কৰক।"
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "বাতিল কৰক"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} টা মিল"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "বিচাৰক"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "কে’ছ মিলাওক"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "১ টা মিল"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "পূৰ্বৱৰ্তী উদাহৰণ সন্ধান কৰক"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "নিয়মীয়া বিন্যাস ব্যৱহাৰ কৰক"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "এটা অথবা একাধিক ছেটিং সলনি কৰা হৈছে, যিবোৰে কাম কৰিবলৈ এবাৰ পুনৰ ল’ড কৰিব লাগিব।"
@@ -13932,7 +13947,10 @@
     "message": "এবাৰ পৃষ্ঠাখন পুনৰ ল’ড হ’লে, DevTools স্বয়ংক্ৰিয়ভাৱে পুনৰ সংযোগ হ’ব।"
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "ইনপুট মচক"
+    "message": "মচক"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "ফিল্টাৰ"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "হেঁচা নিদিয়া"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1}ৰ বাবে স্ক্ৰীনশ্বট - পূৰ্বৱৰ্তী অনুৰোধসমূহ চাবলৈ বাছনি কৰক।"
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "উপেক্ষিত সূচীত স্ক্ৰিপ্ট যোগ দিয়ক"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "ট্ৰেক কনফিগাৰ কৰক…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "ট্ৰেকসমূহ কনফিগাৰ কৰা সমাপ্ত কৰক"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "ফ্লেম চাৰ্ট"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "শিশুৰ পুনৰাবৃতি হোৱাটো লুকুৱাওক"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "উপেক্ষিত সূচীৰ পৰা স্ক্ৰিপ্ট আঁতৰাওক"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "শিশু ৰিছেট কৰক"
