--- a/front_end/core/i18n/locales/cs.json
+++ b/front_end/core/i18n/locales/cs.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Technologie Web SQL je zastaralá. Použijte SQLite WebAssembly nebo rozhraní Indexed Database"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Deskriptor oprávnění window-placement je zastaralý. Použijte místo něj deskriptor window-management. Další informace najdete na stránce https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Zásada oprávnění window-placement je zastaralá. Použijte místo ní zásadu window-management. Další informace najdete na stránce https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "Kódování UTF-16 není v objektech JSON odpovědí rozhraní XMLHttpRequest podporováno."
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "nezabezpečeného"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Soubor cookie třetí strany je v Chromu v rámci iniciativy Privacy Sandbox blokován."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Soubory cookie třetích stran budou v budoucích verzích Chromu v rámci iniciativy Privacy Sandbox blokovány."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Nahlásit chybu"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Aktivace SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Compression Dictionary Transport"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonymní>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Přizpůsobte si překryvné vrstvy s ovládacími prvky oken v záhlaví své progresivní webové aplikace"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Tmavá barva pozadí"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Tmavá barva motivu"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Popis"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Rekurzivně rozbalit"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Filtrovat podle klíče (zobrazit klíče větší nebo rovné)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "Indexované nástroje DBview"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Předběžné vykreslení nebylo použito, protože adresa URL navigace se při aktivaci liší od její běžné adresy URL (jako například u stránky Nová karta nebo u hostovaných aplikací)."
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Není známo"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Předběžně vykreslená stránka požadovala zvukový výstup, což momentálně není podporováno."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Navigace v rámci předběžného vykreslování se nezdařila, protože došlo k přesměrování na adresu URL s jiným schématem než http: nebo https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Není známo"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Není známo"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Navigace v rámci předběžného vykreslování vyžadovala ověření HTTP, které v současnosti není podporováno."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Filtrovat podle URL"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Filtrovat pokrytí podle typu"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Načíst přes web"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Filtrujte podle adresy URL a chyby"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Načíst vývojářské zdroje HTTP(S) přes kontrolovaný web, nikoliv přes Nástroje pro vývojáře"
@@ -6387,7 +6402,7 @@
     "message": "Související kód"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "Pokud chcete získat lepší statistiky, načtěte stránku znovu, aby bylo možné získat data o souvisejících síťových požadavcích."
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "Nahlásit právní problém"
@@ -6435,7 +6450,7 @@
     "message": "Vaše organizace tuto funkci vypnula. Další informace získáte od svých administrátorů."
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "Tato funkci se současné době postupně vydává. Sledujte novinky."
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "Pokud chcete tuto funkci používat, aktualizujte v nastavení Nástrojů pro vývojáře jazyk na angličtinu."
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Zobrazit problémy"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Výkon"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Zaznamenat"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Zobrazit nástroj Výkon"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Zobrazit nedávné relace časové osy"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Spustit profilování a znovu stránku načíst"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Ukončit"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Důvody skládání"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Trasování zásobníku:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Filtrovat podle zpráv protokolu"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Informace"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Zdroj události"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Filtrovat pomocí regulárního výrazu (příklad: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Filtrovat"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Filtrovat pomocí regulárního výrazu (příklad: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Délka"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Zahrnutí"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Duplicitní řetězce"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Zobrazit interní (včetně dalších podrobností o implementaci)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Filtrovat"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Filtrovat podle třídy"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Najít"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Objekty alokované mezi {PH1} a {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Objekty uchovávané konzolí DevTools"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Objekty uchovávané odpojenými uzly DOM"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1} %"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Nahrát: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Extrémně pomalé přehrávání"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Mimořádně pomalé"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Přehrát znovu"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Extrémně pomalu"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Mimořádně pomalé"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Běžná rychlost"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Normální (výchozí)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Pomalé přehrávání"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Nízká rychlost"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Pomalé"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Velmi pomalé přehrávání"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
     "message": "Velmi pomalé"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
+    "message": "Velmi pomalé"
+  },
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Rozšíření"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Rychlost"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Indexování bylo přerušeno."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Rozlišovat malá a velká písmena"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Nebyly nalezeny žádné shody."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Obnovit"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Hledat"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Vyhledávání bylo dokončeno."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Vyhledávání přerušeno."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Vyhledávací dotaz"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Vyhledávání…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Použít regulární výraz"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} s {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Chyba při načítání adresy URL {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Ignorovat skripty rozšíření"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Ignorovat tento soubor"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Zde nepozastavovat"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Dekódování obrázku"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Změna velikosti obrázku"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Nainstalovat časovač"
   },
@@ -12588,7 +12624,7 @@
     "message": "Worker — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | workerSS": {
-    "message": "Worker: {PH1} – {PH2}"
+    "message": "Worker: {PH1} – {PH2}"
   },
   "panels/timeline/ThreadAppender.ts | workletService": {
     "message": "Služba aukčního workletu"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "– Významná režie v důsledku instrumentace vykreslování"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Po pořízení záznamu vyberte přetažením oblast zájmu. Poté časovou osu přibližujte a posouvejte kolečkem myši nebo klávesami {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Využití vyrovnávací paměti"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Vymazat"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Nový záznam zahájíte kliknutím na tlačítko záznamu {PH1} nebo stisknutím {PH2}."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Pokud chcete zaznamenat načítání stránky, klikněte na tlačítko opětovného načtení {PH1} nebo stiskněte {PH2}."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Zavřít"
@@ -12750,7 +12777,7 @@
     "message": "Zapnout pokročilou instrumentaci vykreslování (pomalé)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Zapnout statistiky selektorů CSS"
+    "message": "Aktivovat mapy zdrojů CSS (pomalé)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Časovou osu se nepodařilo uložit: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Inicializace profileru…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Další informace"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Načíst profil…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Čas"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Zkopírovat tabulku"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Žádné seskupení"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Neoptimalizováno: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Stránka"
@@ -13191,7 +13209,7 @@
     "message": "Shromážděno {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | sOfS": {
-    "message": "{PH1} z {PH2}"
+    "message": "{PH1} / {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | sS": {
     "message": "{PH1}: {PH2}"
@@ -13222,6 +13240,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "Načtení skriptu z mezipaměti"
+  },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "skript není podporován"
   },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statistiky selektorů"
@@ -13262,11 +13283,14 @@
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Celkový čas"
   },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Událost trasování"
+  },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Typ"
   },
   "panels/timeline/TimelineUIUtils.ts | url": {
-    "message": "Adresa URL"
+    "message": "URL"
   },
   "panels/timeline/TimelineUIUtils.ts | warning": {
     "message": "Varování"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Až budete připraveni, znovu se připojte tím, že znovu otevřete nástroje DevTools."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Zrušit"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "Nalezené výsledky: {PH1}"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Najít"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Rozlišovat malá a velká písmena"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 shoda"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Vyhledat předchozí"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Použít regulární výraz"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Změnilo se jedno nebo více nastavení, což vyžaduje opětovné načtení, aby se změny projevily."
@@ -13932,7 +13947,10 @@
     "message": "Po opětovném načtení stránky se nástroje DevTools automaticky znovu připojí."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Vymazat zadání"
+    "message": "Vymazat"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Filtrování"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "nestisknuto"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Snímky obrazovky za {PH1} – výběrem zobrazíte předchozí požadavky."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Přidat skript do seznamu ignorovaných"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Konfigurovat kanály…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Dokončit konfiguraci kanálů"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Graf flame"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Skrýt opakující se podřízené položky"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Odstranit skript ze seznamu ignorovaných"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Resetovat podřízené položky"
