--- a/front_end/core/i18n/locales/cy.json
+++ b/front_end/core/i18n/locales/cy.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Mae Web SQL yn anghymeradwy. Defnyddiwch SQLite WebAssembly neu Gronfa Ddata wedi'i Mynegeio"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Mae'r disgrifydd caniatâd window-placement wedi'i anghymeradwyo. Defnyddiwch window-management yn lle hynny. Am ragor o help, gwiriwch https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Mae'r polisi caniatâd window-placement wedi'i anghymeradwyo. Defnyddiwch window-management yn lle hynny. Am ragor o help, gwiriwch https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "Ni chefnogir UTF-16 gan ymateb json yn XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "anniogel"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Mae cwci trydydd parti wedi'i rwystro yn Chrome fel rhan o Privacy Sandbox."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Bydd cwci trydydd parti yn cael ei rwystro mewn fersiynau Chrome yn y dyfodol fel rhan o Privacy Sandbox."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Ffeilio byg"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Wrthi'n galluogi SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Cludiant Geiriadur Cywasgu"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<dienw>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Addaswch droshaen rheolaethau ffenestr bar teitl eich PWA"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Lliw cefndir tywyll"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Lliw thema dywyll"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Disgrifiad"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Ehangu'n gylchol"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Hidlo yn ôl allwedd (dangoswch yr allweddau sy'n fwy neu'n hafal i)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "Dileu'r Eitemau a Ddewisir"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "Hidlo yn ôl Llwybr"
+    "message": "Hidlo yn ôl llwybr"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "Penynnau"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Ni ddefnyddiwyd y rhagrendwr oherwydd, yn ystod amser gweithredu, mae gan lywio URL effeithiol sy'n wahanol i'w URL arferol. (Er enghraifft, y Dudalen Tab Newydd, neu apiau a gynhelir.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Anhysbys"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Roedd y dudalen a ragrendrwyd yn gofyn am allbwn sain, nad yw'n cael ei gefnogi ar hyn o bryd."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Methodd y llywio rhagrendro oherwydd iddo ailgyfeirio i URL nad oedd ei gynllun yn http: neu https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Anhysbys"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Anhysbys"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Roedd angen dilysiad HTTP ar gyfer llywio rhagrendro, nad yw'n cael ei gefnogi ar hyn o bryd."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Hidlo yn ôl URL"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Hidlo cwmpas yn ôl math"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Llwytho trwy wefan"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Hidlo yn ôl URL a gwall"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Llwythwch adnoddau datblygwr HTTP(S) trwy'r wefan rydych chi'n ei harolygu, nid trwy DevTools"
@@ -5757,7 +5772,7 @@
     "message": "datgelu"
   },
   "panels/elements/ElementsTreeOutline.ts | showAllNodesDMore": {
-    "message": "Dangos Pob Nod ({PH1} Arall)"
+    "message": "Dangos pob nod ({PH1} arall)"
   },
   "panels/elements/ElementsTreeOutline.ts | storeAsGlobalVariable": {
     "message": "Storio fel newidyn byd-eang"
@@ -5865,7 +5880,7 @@
     "message": "{PH1}[Arddull Priodweddau]"
   },
   "panels/elements/StylePropertiesSection.ts | showAllPropertiesSMore": {
-    "message": "Dangos Pob Priodwedd ({PH1} arall)"
+    "message": "Dangos pob priodwedd ({PH1} arall)"
   },
   "panels/elements/StylePropertiesSection.ts | styleAttribute": {
     "message": "priodwedd style"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Dangos problemau"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Perfformiad"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Recordio"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Dangos Perfformiad"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Dangos sesiynau llinell amser diweddar"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Dechreuwch broffilio ac ail-lwythwch y dudalen"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Stopio"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Rhesymau Cyfuno"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Ôl pentwr:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Hidlo yn ôl negeseuon log"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Gwybodaeth"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Ffynhonnell y Digwyddiad"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Hidlo gan ddefnyddio regex (enghraifft: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Dull adnabod"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Hidlo"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Hidlo gan ddefnyddio regex (enghraifft: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Hyd"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Cyfyngiant"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Llinynnau dyblyg"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Datgelu mewnol (yn cynnwys manylion sy'n benodol i'r gweithrediad ychwanegol)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Hidlo"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Hidlo yn ôl dosbarth"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Chwilio"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Gwrthrychau sydd wedi'u dyrannu rhwng {PH1} a {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Gwrthrychau a gedwir gan y consol DevTools"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Gwrthrychau yn cael eu cadw gan nodau DOM ar wahân"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Uwchlwytho: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Ailchwarae yn hynod o araf"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Hynod o araf"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Ailchwarae"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Cyflymder hynod o araf"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Hynod o araf"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Cyflymder arferol"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Normal (Diofyn)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Ailchwarae araf"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Cyflymder araf"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Araf"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Ailchwarae yn hynod o araf"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Cyflymder araf iawn"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Araf iawn"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Estyniadau"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Cyflymder"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Ymyrwyd ar y mynegeio."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Cyfateb Priflythrennau"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Heb ganfod unrhyw ganlyniadau sy'n cyfateb."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Ail-lwytho"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Chwilio"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Wedi gorffen chwilio."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Ymyrrwyd ar y chwiliad."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Ymholiad Chwilio"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Wrthi'n chwilio…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Defnyddio Mynegiad Arferol"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} gyda {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Gwall wrth lwytho url {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Anwybyddu sgriptiau estyniad"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Anwybyddu'r ffeil hon"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Peidio byth â seibio yma"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Dadgodio Llun"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Newid Maint y Llun"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Amserydd Gosod"
   },
@@ -12558,10 +12594,10 @@
     "message": "Ar y rhestr anwybyddu"
   },
   "panels/timeline/ThreadAppender.ts | raster": {
-    "message": "Raster"
+    "message": "Rastero"
   },
   "panels/timeline/ThreadAppender.ts | rasterizerThreadS": {
-    "message": "Trywydd Rastereiddio {PH1}"
+    "message": "Rastereiddio Trywydd {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | sellerWorklet": {
     "message": "Gweithlen Gwerthwr"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- Gorbenion sylweddol oherwydd offer peintio"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Ar ôl recordio, dewiswch ardal o ddiddordeb yn y trosolwg drwy lusgo. Yna chwyddwch a phaniwch y llinell amser gan ddefnyddio olwyn y llygoden neu fysellau {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Defnydd byffro"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Clirio"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Cliciwch y botwm recordio {PH1} neu pwyswch {PH2} i ddechrau recordiad newydd."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Cliciwch y botwm ail-lwytho {PH1} neu pwyswch {PH2} i gofnodi llwyth y dudalen."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Cau"
@@ -12750,7 +12777,7 @@
     "message": "Galluogi offerwaith peintio uwch (araf)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Galluogi ystadegau dewisydd CSS"
+    "message": "Galluogi ystadegau dewisydd CSS (araf)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Wedi methu â chadw'r llinell amser: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Wrthi'n cychwyn y proffiliwr…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Dysgu rhagor"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Llwytho proffil…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Amser"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Copïo Tabl"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Dim Grwpio"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Heb ei optimeiddio: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Tudalen"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "mae'r sgript wedi'i llwytho o'r storfa"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "nid yw'r sgript yn gymwys"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Ystadegau Dewisydd"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Cyfanswm yr Amser"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Digwyddiad Olrhain"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Math"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Ailgysylltwch pan fyddwch yn barod drwy ailagor DevTools."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Canslo"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} o ganlyniadau sy'n cyfateb"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Chwilio"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Cyfateb Priflythrennau"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 yn cyfateb"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Chwilio'r blaenorol"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Defnyddio Mynegiad Arferol"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Mae un neu fwy o osodiadau wedi newid a bydd rhaid ail-lwytho cyn iddynt ddod i rym."
@@ -13932,7 +13947,10 @@
     "message": "Ar ôl i'r dudalen ail-lwytho, bydd DevTools yn ailgysylltu'n awtomatig."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Clirio mewnbwn"
+    "message": "Clirio"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Hidlo"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "heb ei bwyso"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Sgrinlun ar gyfer {PH1} - dewiswch i weld ceisiadau blaenorol."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Ychwanegu sgript at y rhestr anwybyddu"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Ffurfweddu traciau…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Gorffen ffurfweddu traciau"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Siart Fflam"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Cuddio plant sy'n ailadrodd"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Tynnu'r sgript o'r rhestr anwybyddu"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Ailosod plant"
