--- a/front_end/core/i18n/locales/et.json
+++ b/front_end/core/i18n/locales/et.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Web SQL-i tugi on katkestatud. Kasutage SQLite WebAssemblyt või indekseeritud andmebaasi"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Loa deskriptori window-placement tugi on katkestatud. Kasutage selle asemel deskriptorit window-management. Lisaabi saamiseks külastage saiti https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Loa reegli window-placement tugi on katkestatud. Kasutage selle asemel reeglit window-management. Lisaabi saamiseks külastage saiti https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "JSON-vastus ei toeta vormingut UTF-16 atribuudis XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "ebaturvaline"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Kolmanda osapoole küpsisefail on Chrome'is Privaatsuse liivakastiga blokeeritud."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Kolmanda osapoole küpsisefailid blokeeritakse Chrome'i tulevastes versioonides Privaatsuse liivakastiga."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Veast teavitamine"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Üksuse SharedArrayBuffer lubamine"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Tihendamissõnastiku transpordifunktsioon"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonüümne>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Kohandage oma PWA pealkirjariba akna juhtelementide ülekatet"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Tumeda tausta värv"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Tumeda teema värv"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Kirjeldus"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Laienda rekursiivselt"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Filtreeri võtme järgi (näitab võtmeid, mis on suuremad või võrdsed kui antud väärtus)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "Kustuta valitud"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "Filtreeri tee alusel"
+    "message": "Filtreeri tee järgi"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "Päised"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Eelrenderdust ei kasutatud, kuna aktiveerimise ajal oli navigeerimisel kehtiv URL, mis erineb selle tavalisest URL-ist. (Näiteks uue vahelehe leht või hostitud rakendused.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Teadmata"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Eelrenderdatud leht taotles heliväljundit, mida praegu ei toetata."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Eelrenderdamise navigeerimine ebaõnnestus, kuna see suunati ümber URL-ile, mille skeem ei olnud http: või https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Teadmata"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Teadmata"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Eelrenderduse navigeerimine nõudis HTTP autentimist, mida praegu ei toetata."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Filtreeri URL-i järgi"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Filtreeri katvus tüübi alusel"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Laadige veebisaidi kaudu"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Filtreeri URL-i ja vea järgi"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Laadige arendaja HTTP(S) ressursse kontrollitud veebisaidi kaudu, mitte arendaja tööriistade kaudu"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Kuva probleemid"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Toimivus"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Salvesta"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Kuva tööriist Toimivus"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Kuva hiljutised ajaskaala seansid"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Alusta profileerimist ja laadi leht uuesti"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Katkesta"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Liitmise põhjused"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Virna jälg:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Filtreeri logisõnumite järgi"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Teave"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Sündmuse allikas"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Filtreeri regulaaravaldisega (näide: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Filtreeri"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Filtreeri regulaaravaldisega (näide: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Pikkus"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Sisaldamine"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Duplikaatstringid"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Sisemiste andmete avaldamine (hõlmab täiendavaid juurutamisandmeid)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Filtreeri"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Filtreeri klassi järgi"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Otsi"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Profiilide {PH1} ja {PH2} vahel jaotatud objektid"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Arendaja tööriistade konsooli säilitatud objektid"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Eemaldatud DOM-i sõlmede säilitatud objektid"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Üleslaadimine: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Väga aeglane taasesitus"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Äärmiselt aeglane"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Esita"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Äärmiselt aeglane kiirus"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Äärmiselt aeglane"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Tavakiirus"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Tavaline (vaikeseade)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Aeglane taasesitus"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Aeglane kiirus"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Aeglane"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Väga aeglane taasesitus"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Väga aeglane kiirus"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Väga aeglane"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Laiendused"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Kiirus"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Indekseerimine katkestati."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Erista suur- ja väiketähti"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Vasteid ei leitud."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Värskenda"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Otsing"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Otsing jõudis lõpule."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Otsing katkestati."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Otsingupäring"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Otsimine …"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Kasuta regulaaravaldist"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} ({PH2})"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Viga URL-i {PH1} laadimisel: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Ignoreeri laiendusskripte"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Ignoreeri seda faili"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Ära kunagi siin peatu"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Pildi dekodeerimine"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Pildi suuruse muutmine"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Taimeri installimine"
   },
@@ -12585,7 +12621,7 @@
     "message": "Oksjoni töök — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | workerS": {
-    "message": "Worker – {PH1}"
+    "message": "Worker — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | workerSS": {
     "message": "Worker: {PH1} – {PH2}"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- Märkimisväärne ressursikasutus värvimisseadmestiku tõttu"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Pärast salvestamist valige ülevaates lohistades huvipakkuv piirkond. Seejärel suumige ja paanige ajaskaalat hiirerattaga või klahvidega {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Puhvri kasutus"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Kustuta"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Klõpsake salvestamisnupul {PH1} või vajutage klahve {PH2}, et alustada uut salvestist."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Klõpsake uuesti laadimise nupul {PH1} või vajutage klahve {PH2}, et lehe laadimine salvestada."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Sule"
@@ -12750,7 +12777,7 @@
     "message": "Luba täiustatud värvimise seadmestik (aeglane)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Luba CSS-i valija statistika"
+    "message": "Lülita CSS-i valija statistika sisse (aeglane)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Ajaskaala salvestamine nurjus: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Profileerija lähtestamine …"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Lisateave"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Laadi profiil …"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Aeg"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Kopeeri tabel"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Rühmitamata"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Pole optimeeritud: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Leht"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "skript laaditi vahemälust"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "skript ei ole sobilik"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Valija statistika"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Aeg kokku"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Jälgimissündmus"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Tüüp"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Kui olete valmis, avage taas ühenduse loomiseks DevTools uuesti."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Tühista"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} vastet"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Otsi"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Erista suur- ja väiketähti"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 vaste"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Otsi eelmist"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Kasuta regulaaravaldist"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Vähemalt üht seadet on muudetud ja selle jõustamiseks tuleb DevTools uuesti laadida."
@@ -13932,7 +13947,10 @@
     "message": "Pärast lehe uuesti laadimist loob DevTools automaatselt uuesti ühenduse."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Tühjenda sisend"
+    "message": "Kustuta"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Filter"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "pole vajutatud"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Üksuse {PH1} ekraanipilt – valige eelnevate päringute vaatamiseks."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Lisa skript eiramisloendisse"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Radade seadistamine …"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Viige radade seadistamine lõpule"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Tulpdiagramm"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Korduvate alamkirjete peitmine"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Eemalda skript eiramisloendist"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Lähtesta alamüksused"
