--- a/front_end/core/i18n/locales/fi.json
+++ b/front_end/core/i18n/locales/fi.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Web SQL on poistettu käytöstä. Käytä SQLite WebAssemblya tai Indexed Databasea"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Lupakuvaus window-placement on poistettu käytöstä. Valitse sen sijaan window-management. Lue lisäohjeita osoitteesta https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Lupakäytäntö window-placement on poistettu käytöstä. Valitse sen sijaan window-management. Lue lisäohjeita osoitteesta https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "Vastaus-JSON ei tue UTF-16:ta kohteessa XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "epävarma"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Kolmannen osapuolen eväste on estetty Chromessa osana Privacy Sandboxia."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Kolmannen osapuolen evästeet estetään tulevissa Chrome-versioissa osana Privacy Sandboxia."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Ilmoita virheestä"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer otetaan käyttöön"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Pakkaussanakirjan kuljetus"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonyymi>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Muokkaa PWA:n otsikkopalkissa olevia Window Controls Overlay ‑valintoja"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Tumma taustaväri"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Tumman teeman väri"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Kuvaus"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Laajenna jälkeenpäin"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Suodata avaimen mukaan (näytä näppäimet, jotka ovat suurempia tai yhtä suuria)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Esirenderöintiä ei käytetty, koska aktivoinnin aikana navigoinnissa on lopullinen URL-osoite, joka poikkeaa sen tavallisesta URL-osoitteesta. (Esimerkiksi Uusi välilehti ‑sivu tai hostatut sovellukset)."
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Tuntematon"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Esirenderöity sivu pyysi audion toistoa, jota ei tällä hetkellä tueta."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Esirenderöinnin siirtyminen epäonnistui, koska se uudelleenohjasi URL-osoitteeseen, jonka muoto ei ollut http: tai https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Tuntematon"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Tuntematon"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Esirenderöinnin siirtyminen edellytti HTTP-todennusta, jota ei tällä hetkellä tueta."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Suodata URL-osoitteen mukaan"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Suodata kattavuus tyypin mukaan"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Lataa verkkosivuston kautta"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Suodata URL-osoitteen ja virheen mukaan"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Lataa HTTP(S)-kehittäjäresurssit tarkastelemasi verkkosivuston kautta, ei DevToolsin kautta"
@@ -5757,7 +5772,7 @@
     "message": "näytä"
   },
   "panels/elements/ElementsTreeOutline.ts | showAllNodesDMore": {
-    "message": "Näytä kaikki noodit ({PH1} lisää)"
+    "message": "Näytä kaikki solmut ({PH1} lisää)"
   },
   "panels/elements/ElementsTreeOutline.ts | storeAsGlobalVariable": {
     "message": "Tallenna globaalina muuttujana"
@@ -6387,7 +6402,7 @@
     "message": "Tähän liittyvä koodi"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "Päivitä sivu tallentaaksesi tähän viestiin liittyvä verkkopyyntödata parempien tietojen saamiseksi."
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "Ilmoita oikeudellisesta ongelmasta"
@@ -6435,7 +6450,7 @@
     "message": "Organisaatio laittoi tämän ominaisuuden pois päältä. Pyydä lisätietoja järjestelmänvalvojilta."
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "Tätä ominaisuutta ollaan parhaillaan ottamassa käyttöön. Pysy kuulolla."
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "Jos haluat käyttää tätä ominaisuutta, vaihda kieleksi englanti DevTools-asetuksissa."
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Näytä ongelmat"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Suorituskyky"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Tallenna"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Näytä suorituskyky"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Näytä viimeaikaiset aikajanaistunnot"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Aloita profilointi ja lataa sivu uudelleen"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Lopeta"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Yhdistämissyyt"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Pinon jälki:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Suodata lokiviestien mukaan"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Tiedot"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Tapahtuman lähde"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Suodata säännöllisen lausekkeen avulla (esim. https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Tunnus"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Suodata"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Suodata säännöllisen lausekkeen avulla (esim. (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Pituus"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Säilytys"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Päällekkäiset merkkijonot"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Näytä sisäiset tiedot (sisältää muita toteutuskohtaisia tietoja)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Suodata"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Suodata luokan mukaan"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Hae"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Objektit jaettu näiden välillä: {PH1} ja {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools-konsolin säilyttämät objektit"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Irrotettujen DOM-solmujen säilyttämät objektit"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1} %"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Lataa: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Erittäin hidas toisto"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Erittäin hidas"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Toista uudelleen"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
-    "message": "Normaali (oletus)"
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Erittäin hidas nopeus"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Hidas uudelleentoisto"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
-    "message": "Hidas"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Erittäin hidas uudelleentoisto"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
     "message": "Erittäin hidas"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Normaali nopeus"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
+    "message": "Normaali (oletus)"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Hidas nopeus"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
+    "message": "Hidas"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Erittäin hidas nopeus"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
+    "message": "Erittäin hidas"
+  },
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Laajennukset"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Nopeus"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Hakemiston luominen keskeytetty."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Ota kirjainkoko huomioon"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Osumia ei löydy"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Päivitä"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Haku"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Haku on valmis."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Haku keskeytettiin."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Hakulauseke"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Haetaan…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Käytä säännöllistä lauseketta"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1}, {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Virhe ladattaessa URL-osoitetta {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Ohita laajennusskriptit"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Ohita tämä tiedosto"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Älä koskaan keskeytä tässä"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Kuvan purkaminen"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Kuvan koon muuttaminen"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Asenna ajastin"
   },
@@ -12555,7 +12591,7 @@
     "message": "Ensisijainen — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | onIgnoreList": {
-    "message": "Ohituslistassa"
+    "message": "Ohitusluettelossa"
   },
   "panels/timeline/ThreadAppender.ts | raster": {
     "message": "Rasteri"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "– Merkittävää resurssien käyttöä piirron instrumentoinnin vuoksi"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Tallennuksen jälkeen valitse kiinnostava alue yleiskatsauksesta vetämällä. Sitten zoomaa ja panoroi aikajanaa hiiren rullalla tai näppäinyhdistelmällä {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Puskurin käyttö"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Poista"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Klikkaa tallennuspainiketta {PH1} tai paina {PH2}, kun haluat aloittaa uuden tallennuksen."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Klikkaa uudelleenlatauspainiketta {PH1} tai paina {PH2}, jos haluat tallentaa sivun latauksen."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Sulje"
@@ -12750,7 +12777,7 @@
     "message": "Ota edistynyt piirtämisen instrumentointi (hidas) käyttöön"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Ota CSS-valitsimen tilastot käyttöön"
+    "message": "Ota CSS-valitsimen tilastot käyttöön (hidas)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Aikajanan tallennus epäonnistui: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Alustetaan profiloijaa…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Lue lisää"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Lataa profiili…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Aika"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Kopioi taulukko"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Ei ryhmittelyä"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Ei optimoitu: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Sivu"
@@ -13200,7 +13218,7 @@
     "message": "({PH1}, {PH2})"
   },
   "panels/timeline/TimelineUIUtils.ts | sSDimensions": {
-    "message": "{PH1} × {PH2}"
+    "message": "{PH1} × {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | sSSquareBrackets": {
     "message": "{PH1} [{PH2}…]"
@@ -13222,6 +13240,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "komentosarja ladattu välimuistista"
+  },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "komentosarja ei kelpaa"
   },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Valitsimen tilastot"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Kokonaisaika"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Jäljitä tapahtuma"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Tyyppi"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Kun valmista, muodosta uusi yhteys avaamalla DevTools uudelleen."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Peru"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} tulosta"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Hae"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Ota kirjainkoko huomioon"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 tulos"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Etsi edellinen"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Käytä säännöllistä lauseketta"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Ainakin yhtä asetusta on muutettu. Voimaantulo edellyttää päivitystä."
@@ -13933,6 +13948,9 @@
   },
   "ui/legacy/Toolbar.ts | clearInput": {
     "message": "Tyhjennä"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Suodata"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "ei painettu"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Kuvakaappaus: {PH1} – valitse nähdäksesi edeltävät pyynnöt."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Lisää skripti ohituslistalle"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Määritä kanavat…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Viimeistele kanavien määritys"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Liekkikaavio"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Piilota toistuvat alatasot"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Poista skripti ohituslistalta"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Nollaa alatasot"
