--- a/front_end/core/i18n/locales/fil.json
+++ b/front_end/core/i18n/locales/fil.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Hindi na ginagamit ang Web SQL. Gumamit ng SQLite WebAssembly o Indexed Database"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Hindi na ginagamit ang window-placement ng descriptor ng pahintulot. window-management na lang ang gamitin. Para sa higit pang tulong, tingnan ang https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Hindi na ginagamit ang window-placement ng patakaran sa pahintulot. window-management na lang ang gamitin. Para sa higit pang tulong, tingnan ang https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "Hindi sinusuportahan ang UTF-16 ng sagot na json sa XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "isang hindi secure"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Naka-block ang third-party na cookie sa Chrome bilang bahagi ng Privacy Sandbox."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Ibo-block ang third-party na cookie sa mga bersyon ng Chrome sa hinaharap bilang bahagi ng Privacy Sandbox."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Mag-file ng bug"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Pag-enable sa SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Pag-transport ng Compression Dictionary"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonymous>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "I-customize ang overlay ng mga kontrol sa window ng title bar ng iyong PWA"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Madilim na kulay ng background"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Kulay ng madilim na tema"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Paglalarawan"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Palawakin sa Recursive na Paraan"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "I-filter ayon sa key (magpakita ng mga key na mas mataas o katumbas ng)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "I-delete ang Pinili"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "I-filter ayon sa Path"
+    "message": "I-filter ayon sa path"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "Mga Header"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Hindi ginamit ang prerender dahil noong panahon ng pag-activate, mayroong may bisang URL ang pag-navigate na iba sa normal nitong URL. (Halimbawa, ang Page ng Bagong Tab, o mga hino-host na app.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Hindi Alam"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Nag-request ang na-prerender na page ng audio output, na kasalukuyang hindi sinusuportahan."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Hindi naisagawa ang pag-navigate sa pag-prerender dahil nag-redirect ito sa isang URL na hindi http: o https: ang scheme."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Hindi Alam"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Hindi Alam"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Nag-require ang pag-navigate sa pag-prerender ng pag-authenticate ng HTTP, na kasalukuyang hindi sinusuportahan."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "I-filter ayon sa URL"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "I-filter ang sakop ayon sa uri"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "I-load sa pamamagitan ng website"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "I-filter ayon sa URL at error"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "I-load ang mga resource ng developer ng HTTP(S) sa pamamagitan ng website na sinisiyasat mo, hindi sa pamamagitan ng DevTools"
@@ -5757,7 +5772,7 @@
     "message": "ipakita"
   },
   "panels/elements/ElementsTreeOutline.ts | showAllNodesDMore": {
-    "message": "Ipakita ang Lahat ng Node ({PH1} Pa)"
+    "message": "Ipakita ang lahat ng node ({PH1} pa)"
   },
   "panels/elements/ElementsTreeOutline.ts | storeAsGlobalVariable": {
     "message": "I-store bilang pangkalahatang variable"
@@ -5865,7 +5880,7 @@
     "message": "{PH1}[Istilo ng Mga Attribute]"
   },
   "panels/elements/StylePropertiesSection.ts | showAllPropertiesSMore": {
-    "message": "Ipakita ang Lahat ng Property ({PH1} pa)"
+    "message": "Ipakita ang lahat ng property ({PH1} pa)"
   },
   "panels/elements/StylePropertiesSection.ts | styleAttribute": {
     "message": "Attribute na style"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Ipakita ang Mga Isyu"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Performance"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "I-record"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Ipakita ang Performance"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Ipakita ang mga kamakailang session sa timeline"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Simulan ang pag-profile at i-reload ang page"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Ihinto"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Mga Dahilan sa Pag-composite"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Stacktrace:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "I-filter ayon sa mga mensahe sa log"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Impormasyon"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Source ng Event"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Mag-filter gamit ang regex (halimbawa: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Id"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "I-filter"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Mag-filter gamit ang regex (halimbawa: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Haba"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Containment"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Mga na-duplicate na string"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "I-expose ang mga internal (kabilang ang mga karagdagang detalyeng partikular sa pagpapatupad)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "I-filter"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "I-filter ayon sa class"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Maghanap"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Mga object na na-allocate sa pagitan ng {PH1} at {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Mga object na pinapanatili ng DevTools console"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Mga object na pinapanatili ng mga naka-detach na node ng DOM"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "I-upload: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Napakabagal na pag-replay"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Napakabagal"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "I-replay"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
-    "message": "Normal (Default)"
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Talagang napakabagal"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Mabagal na pag-replay"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
-    "message": "Mabagal"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Napakabagal na pag-replay"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
     "message": "Napakabagal"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Normal na bilis"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
+    "message": "Normal (Default)"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Mabagal"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
+    "message": "Mabagal"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Napakabagal"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
+    "message": "Napakabagal"
+  },
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Mga Extension"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Bilis"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Naantala ang pag-index."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Magtugma ng Case"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Walang nakitang tugma."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "I-refresh"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Maghanap"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Tapos na ang paghahanap."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Naantala ang paghahanap."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Query sa Paghahanap"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Naghahanap…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Gumamit ng Karaniwang Expression"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} gamit ang {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Nagka-error sa pag-load ng url na {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Balewalain ang mga script ng extension"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Balewalain ang file na ito"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Huwag na huwag mag-pause dito"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Pag-decode ng Larawan"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Pag-resize sa Larawan"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Pag-install ng Timer"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- May malaking overhead dahil sa instrumentation ng paint"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Pagkatapos mag-record, pumili ng lugar ng interes sa pangkalahatang-ideya sa pamamagitan ng pag-drag. Pagkatapos, i-zoom at i-pan ang timeline gamit ang mousewheel o key na {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Paggamit ng buffer"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "I-clear"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "I-click ang button na i-record {PH1} o pindutin ang {PH2} para magsimula ng bagong recording."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "I-click ang button na i-reload {PH1} o pindutin ang {PH2} para i-record ang pag-load ng page."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Isara"
@@ -12750,7 +12777,7 @@
     "message": "I-enable ang advanced na instrumentation ng paint (mabagal)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "I-enable ang mga istatistika ng CSS selector"
+    "message": "I-enable ang mga istatistika ng CSS selector (mabagal)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Hindi na-save ang timeline na: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Sinisimulan ang profiler…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Matuto pa"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "I-load ang profile…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Oras"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Kopyahin ang Talahanayan"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Walang Paggrupo"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Hindi naka-optimize: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Page"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "na-load ang script mula sa cache"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "hindi kwalipikado ang script"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Mga Istatistika ng Selector"
   },
@@ -13248,7 +13269,7 @@
     "message": "Oras na ginugol sa pag-render"
   },
   "panels/timeline/TimelineUIUtils.ts | timeout": {
-    "message": "Timeout"
+    "message": "Naka-timeout"
   },
   "panels/timeline/TimelineUIUtils.ts | timerId": {
     "message": "Timer ID"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Kabuuang Oras"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Event ng Pag-trace"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Uri"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Kumonekta ulit kapag handa na sa pamamagitan ng pagbubukas ulit sa DevTools."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Kanselahin"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} (na) tugma"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Maghanap"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Magtugma ng Case"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 tugma"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Hanapin ang nakaraan"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Gumamit ng Karaniwang Expression"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "May nagbagong isa o higit pang setting na nangangailangan ng pag-reload para magkaroon ng bisa."
@@ -13932,7 +13947,10 @@
     "message": "Kapag na-reload na ang page, awtomatikong kokonekta ulit ang DevTools."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "I-clear ang input"
+    "message": "I-clear"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "I-filter"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "hindi pinindot"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "I-screenshot sa loob ng {PH1} - piliin para makita ang mga naunang kahilingan."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Magdagdag ng script sa listahan ng babalewalain"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Mag-configure ng mga track…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Tapusin ang pag-configure ng mga track"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Chart ng Flame"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "I-hide ang mga umuulit na child"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Mag-alis ng script sa listahan ng babalewalain"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "I-reset ang mga child"
