--- a/front_end/core/i18n/locales/gu.json
+++ b/front_end/core/i18n/locales/gu.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "વેબ SQL ટાળવામાં આવ્યું છે. કૃપા કરીને SQLite WebAssembly અથવા અનુક્રમિત ડેટાબેઝનો ઉપયોગ કરો"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "પરવાનગી વર્ણનકર્તા window-placement બંધ કરવામાં આવ્યું છે. તેને બદલે window-managementનો ઉપયોગ કરો. વધુ સહાય માટે, https://bit.ly/window-placement-rename પર ચેક કરો."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "પરવાનગી સંબંધિત પોલિસી window-placement બંધ કરવામાં આવી છે. તેને બદલે window-managementનો ઉપયોગ કરો. વધુ સહાય માટે, https://bit.ly/window-placement-rename પર ચેક કરો."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16ને XMLHttpRequestમાં રિસ્પૉન્સ json દ્વારા સપોર્ટ આપવામાં આવતો નથી"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "અસુરક્ષિત"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Privacy Sandboxના ભાગ તરીકે Chromeમાં ત્રીજા પક્ષની કુકીને બ્લૉક કરવામાં આવે છે."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Privacy Sandboxના ભાગ તરીકે Chromeના ભવિષ્યના વર્ઝનમાં ત્રીજા પક્ષની કુકીને બ્લૉક કરવામાં આવશે."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "કોઈ ખામીની જાણ કરો"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer ચાલુ કરવી"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "કમ્પ્રેશન ડિક્શનરી ટ્રાન્સ્પોર્ટ"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<અનામ>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "તમારા PWAના શીર્ષક બારની વિન્ડોના નિયંત્રણો સંબંધિત ઓવરલેને કસ્ટમાઇઝ કરો"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "બૅકગ્રાઉન્ડનો ઘેરો રંગ"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "ઘેરી થીમનો રંગ"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "વર્ણન"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "વારંવાર મોટું કરો"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "કી પ્રમાણે ફિલ્ટર કરો (વધુ મોટી કે બરાબર કી બતાવો)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "પ્રીરેંડરનો ઉપયોગ કરવામાં આવ્યો ન હતો કારણ કે સક્રિય કરવાના સમય દરમિયાન, નૅવિગેશનમાં કોઈ એવું અસરકારક URL હોય છે, જે તેના સામાન્ય URLથી અલગ હોય છે. (ઉદાહરણ તરીકે, નવું ટૅબ પેજ અથવા હોસ્ટ કરેલી ઍપ.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "અજાણ"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "પ્રીરેંડર કરેલા પેજ ઑડિયો આઉટપુટની વિનંતી કરી, જે હાલમાં સપોર્ટ કરતું નથી."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "પ્રીરેંડરિંગ નૅવિગેશન નિષ્ફળ રહ્યું કારણ કે તે એક URL પર રીડાયરેક્ટ કરવામાં આવ્યું જેની સ્કીમ http: અથવા https: નહોતી."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "અજાણ"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "અજાણ"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "પ્રીરેંડરિંગ નૅવિગેશનને HTTP પ્રમાણીકરણની જરૂર છે જે હાલમાં સપોર્ટ કરતું નથી."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL પ્રમાણે ફિલ્ટર કરો"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "પ્રકાર મુજબ ફિલ્ટરનું કવરેજ"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "વેબસાઇટ મારફતે લોડ કરો"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL અને ભૂલ પ્રમાણે ફિલ્ટર કરો"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "તમે તપાસો છો તે વેબસાઇટ મારફતે HTTP(S) ડેવલપરના સંસાધનો લોડ કરો, DevTools મારફતે નહીં"
@@ -6387,7 +6402,7 @@
     "message": "સંબંધિત કોડ"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "બહેતર જાણકારી જનરેટ કરવા માટે આ મેસેજ સંબંધિત નેટવર્કની વિનંતીનો ડેટા કૅપ્ચર કરવા, પેજને ફરી લોડ કરો."
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "કાનૂની સમસ્યાની જાણ કરો"
@@ -6435,7 +6450,7 @@
     "message": "તમારી સંસ્થાએ આ સુવિધા બંધ કરી છે. વધુ માહિતી માટે તમારા ઍડમિનિસ્ટ્રેટરનો સંપર્ક કરો."
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "આ સુવિધા હાલમાં સાર્વજનિક રીતે રિલીઝ કરવામાં આવી રહી છે. જોડાયેલા રહો."
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "આ સુવિધાનો ઉપયોગ કરવા માટે, DevTools સેટિંગમાં તમારી પસંદગીની ભાષાને અંગ્રેજી પર અપડેટ કરો."
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "સમસ્યાઓ બતાવો"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "કાર્યપ્રદર્શન"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "રેકોર્ડ કરો"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "પર્ફોર્મન્સ બતાવો"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "તાજેતરની સમયરેખાના સત્રો બતાવો"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "પ્રોફાઇલ બનાવવાનું શરૂ કરો અને પેજને ફરીથી લોડ કરો"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "રોકો"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "કમ્પોઝિટ કરવાના કારણો"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "સ્ટૅકટ્રેસ:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "લૉગ મેસેજ પ્રમાણે ફિલ્ટર કરો"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "માહિતી"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "ઇવેન્ટનો સૉર્સ"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "સામાન્ય બોલચાલના શબ્દોનો ઉપયોગ કરીને ફિલ્ટર કરો (ઉદાહરણ: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "ફિલ્ટર"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "સામાન્ય બોલચાલના શબ્દો (ઉદાહરણ: (વેબ)?સૉકેટ)નો ઉપયોગ કરીને ફિલ્ટર કરો"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "લંબાઈ"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "કંટેન્મેન્ટ"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "ડુપ્લિકેટ કરેલી સ્ટ્રિંગ"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "એક્સપોઝ ઇન્ટર્નલ (અમલીકરણ સંબંધિત વિગતોનો સમાવેશ થાય છે)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "ફિલ્ટર"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "વર્ગ પ્રમાણે ફિલ્ટર કરો"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "શોધો"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "{PH1} અને {PH2} વચ્ચે ફાળવવામાં આવેલા ઑબ્જેક્ટ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools કન્સોલ દ્વારા જાળવી રખાયેલા ઑબ્જેક્ટ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "ડિટૅચ થયેલા DOM નોડ દ્વારા જાળવી રખાયેલા ઑબ્જેક્ટ"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "અપલોડ: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "ફરીથી ચલાવવાની ઝડપ અત્યંત ધીમી છે"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "અત્યંત ધીમી ઝડપ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "ફરીથી ચલાવો"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "અત્યંત ધીમી સ્પીડ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "અત્યંત ધીમી ઝડપ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "સામાન્ય સ્પીડ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "સામાન્ય (ડિફૉલ્ટ)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "ફરીથી ચલાવવાની ઝડપ ધીમી કરો"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "ધીમી સ્પીડ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "ધીમી"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "ફરીથી ચલાવવાની ઝડપ ખૂબ ધીમી છે"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "બહુ ધીમી ઝડપ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "ખૂબ જ ધીમી"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "એક્સ્ટેન્શન"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "ઝડપ"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "અનુક્રમિત કરવાની ક્રિયામાં વિક્ષેપ આવ્યો."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "કેસ મેળવી જુઓ"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "કોઈ મેળ મળ્યો નથી."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "રિફ્રેશ કરો"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "શોધ"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "શોધ સમાપ્ત થઈ."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "શોધમાં વિક્ષેપ આવ્યો."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "શોધ ક્વેરી"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "શોધી રહ્યાં છીએ…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "રેગ્યુલર એક્સપ્રેશનનો ઉપયોગ કરો"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2} સાથે {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "{PH1} url લોડ કરવામાં ભૂલ: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "એક્સ્ટેન્શન સ્ક્રિપ્ટને અવગણો"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "આ ફાઇલને અવગણો"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "અહીં ક્યારેય થોભાવશો નહીં"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "છબી ડિકોડ"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "છબીનું કદ બદલો"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "ટાઇમર ઇન્સ્ટૉલ કરો"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- પેઇન્ટ ઇન્સ્ટ્રુમેન્ટેશનને કારણે નોંધપાત્ર ઑવરહેડ"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "રેકોર્ડિંગ થઈ જાય પછી, તેને ખેંચીને ઓવરવ્યૂમાં ગમતો વિસ્તાર પસંદ કરો. ત્યાર પછી, માઉસવ્હીલ કે {PH1} કી વડે સમયરેખા નાની-મોટી કરો અથવા પૅન કરો. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "બફરનો વપરાશ"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "સાફ કરો"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "નવું રેકોર્ડિંગ શરૂ કરવા માટે, રેકોર્ડ કરો બટન {PH1} પર ક્લિક કરો અથવા {PH2} દબાવો."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "પેજ લોડ કરવાની પ્રક્રિયાને રેકોર્ડ કરવા માટે, ફરીથી લોડ કરો બટન {PH1} પર ક્લિક કરો અથવા {PH2} દબાવો."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "બંધ કરો"
@@ -12750,7 +12777,7 @@
     "message": "વિગતવાર પેઇન્ટ ઇન્સ્ટ્રુમેન્ટેશન ચાલુ કરો (ધીમું)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSS પસંદગીકર્તાની આંકડાકીય માહિતીની સુવિધા ચાલુ કરો"
+    "message": "CSS પસંદગીકર્તાની આંકડાકીય માહિતી ચાલુ કરો (ધીમી)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "ટાઇમલાઇન સાચવવામાં નિષ્ફળ રહ્યાં: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "પ્રોફાઇલર શરૂ કરી રહ્યાં છીએ…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "વધુ જાણો"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "પ્રોફાઇલ લોડ કરો…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "સમય"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "ટેબલ કૉપિ કરો"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "કોઈ ગ્રૂપ નથી."
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "આને ઑપ્ટિમાઇઝ કરેલું નથી: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "પેજ"
@@ -13191,7 +13209,7 @@
     "message": "{PH1} એકત્રિત કર્યા"
   },
   "panels/timeline/TimelineUIUtils.ts | sOfS": {
-    "message": "{PH2}માંથી {PH1}"
+    "message": "{PH2}નો {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | sS": {
     "message": "{PH1}: {PH2}"
@@ -13222,6 +13240,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "કૅશ મેમરીમાંથી સ્ક્રિપ્ટ લોડ કરી"
+  },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "સ્ક્રિપ્ટ યોગ્યતા ધરાવતી નથી"
   },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "પસંદગીકર્તાની આંકડાકીય માહિતી"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "કુલ સમય"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "ઇવેન્ટને ટ્રેસ કરો"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "પ્રકાર"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "તૈયાર હોય ત્યારે DevToolsને ફરીથી ખોલીને ફરી કનેક્ટ કરો."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "રદ કરો"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} મેળ"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "શોધો"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "કેસ મેળવી જુઓ"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 મેળ"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "પાછલી શોધો"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "રેગ્યુલર એક્સપ્રેશનનો ઉપયોગ કરો"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "એક કે વધુ સેટિંગમાં ફેરફાર થયો છે, જે ફરીથી લોડ કરવાનું જરૂરી બનાવે છે."
@@ -13932,7 +13947,10 @@
     "message": "એક વાર પેજ ફરીથી લોડ થઈ જાય, પછી DevTools ઑટોમૅટિક રીતે ફરીથી કનેક્ટ થઈ જશે."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "ઇનપુટ સાફ કરો"
+    "message": "સાફ કરો"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "ફિલ્ટર"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "દબાવેલું નથી"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} માટે સ્ક્રીનશૉટ - અગાઉની વિનંતીઓ જોવા માટે પસંદ કરો."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "અવગણવાની સૂચિમાં સ્ક્રિપ્ટ ઉમેરો"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "ટ્રૅકને ગોઠવો…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "ટ્રૅકને ગોઠવવાનું પૂર્ણ કરો"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "ફ્લેમ ચાર્ટ"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "પુનરાવર્તિત બાળકો છુપાવો"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "અવગણવાની સૂચિમાંથી સ્ક્રિપ્ટ કાઢી નાખો"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "બાળકો પર રીસેટ કરો"
