--- a/front_end/core/i18n/locales/hr.json
+++ b/front_end/core/i18n/locales/hr.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Web SQL je obustavljen. Upotrijebite SQLite WebAssembly ili indeksiranu bazu podataka"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Obustavljen je opisnik dopuštenja window-placement. Umjesto toga upotrijebite pravilo window-management. Za dodatnu pomoć posjetite https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Obustavljeno je pravilo o dopuštenjima window-placement. Umjesto toga upotrijebite pravilo window-management. Za dodatnu pomoć posjetite https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16 is not supported by response json in XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "nesiguran"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Kolačić treće strane blokiran je u Chromeu u okviru Privacy Sandboxa."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Kolačić treće strane blokirat će se u budućim verzijama Chromea u okviru Privacy Sandboxa."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Prijavite programsku pogrešku"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Omogućavanje SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Prijenos kompresijskog rječnika"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonymous>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Prilagodite sloj s preklapanjem kontrolama u prozoru trake naslova PWA-a"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Tamna boja pozadine"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Boja tamne teme"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Opis"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Proširi ponavljajuće"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Filtriranje po ključu (prikaži tipke veće ili jednako)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "Izbriši odabrano"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "Filtriraj prema putu"
+    "message": "Filtriranje prema putu"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "Zaglavlja"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Predrenderiranje nije upotrijebljeno jer navigacija tijekom vremena aktivacije ima efektivan URL koji se razlikuje od uobičajenog URL-a. (Na primjer, stranica Nova kartica ili hostirane aplikacije.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Nepoznato"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Stranica za koju je izrađen predprikaz zahtijevala je audioizlaz, što trenutačno nije podržano."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Kretanje predprikaza nije uspjelo jer je preusmjeren na URL čija shema nije http: ili https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Nepoznato"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Nepoznato"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Kretanje predprikaza zahtijevalo je HTTP autentifikaciju koja trenutačno nije podržana."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Filtriranje po URL-u"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Pokrivenost filtrom prema vrsti"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Učitaj putem web-lokacije"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Filtriranje po URL-u i pogrešci"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Učitajte resurse za razvojne programere (HTTP(S)) putem web-lokacije koju pregledavate, a ne putem Razvojnih alata"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Prikaži probleme"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Izvedba"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Snimaj"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Prikaži izvedbu"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Prikaži nedavne sesije na vremenskoj traci"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Započni profiliranje i ponovo učitaj stranicu"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Zaustavi"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Razlozi sastavljanja"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Praćenje stoga:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Filtriranje po porukama zapisnika"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Informacije"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Izvor događaja"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Filtriranje pomoću regularnih izraza (primjer: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Filtar"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Filtriranje pomoću regularnog izraza (primjer: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Duljina"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Zadržavanje"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Duplicirani nizovi"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Otkrivanje unutarnjih komponenti (uključuje dodatne pojedinosti o implementaciji)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Filtar"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Filtriranje po klasi"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Potraži"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Objekti dodijeljeni između {PH1} i {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Objekti koje zadržava konzola razvojnih alata"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Objekti koje zadržavaju odvojeni čvorovi DOM-a"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Prijenos: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Iznimno sporo ponavljanje"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Iznimno sporo"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Ponovi"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Iznimno mala brzina"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Iznimno sporo"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Normalna brzina"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Uobičajena (zadana)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Spora ponovna reprodukcija"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
     "message": "Sporo"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Vrlo spora ponovna reprodukcija"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
+    "message": "Sporo"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Vrlo mala brzina"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Vrlo sporo"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Proširenja"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Brzina"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Indeksiranje je prekinuto."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Razlikuj veliko i malo slovo"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Nema podudarajućih rezultata."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Osvježi"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Pretraživanje"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Pretraživanje je završeno."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Pretraživanje je prekinuto."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Upit za pretraživanje"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Pretraživanje…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Upotrijebite regularni izraz"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} s {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Pogreška tijekom učitavanja URL-a {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Zanemari skripte proširenja"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Zanemari datoteku"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Nikad ne pauziraj ovdje"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Dekodiranje slika"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Promjena veličine slike"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Odbrojavanje za instalaciju"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "– -Značajna prekomjerna vrijednost zbog instrumentacije renderiranja"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Nakon snimanja povlačenjem odaberite područje interesa u pregledu. Zatim zumirajte i pomičite vremensku traku kotačićem miša ili tipkama {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Upotreba međuspremnika"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Izbriši"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Kliknite gumb za snimanje {PH1} ili pritisnite {PH2} za početak novog snimanja."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Kliknite gumb za ponovno učitavanje {PH1} ili pritisnite {PH2} da biste snimili učitavanje stranice."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Zatvori"
@@ -12750,7 +12777,7 @@
     "message": "Omogući naprednu instrumentaciju renderiranja (sporo)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Omogući statističke podatke selektora CSS-a"
+    "message": "Omogući statističke podatke selektora CSS-a (sporo)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Spremanje vremenske trake nije uspjelo: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Inicijalizacija profilera…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Saznajte više"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Učitavanje profila…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Vrijeme"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Kopiraj tablicu"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Nema grupa"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Nije optimizirano: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Stranica"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "skripta učitana iz predmemorije"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "skripta ne ispunjava uvjete"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statistika selektora"
   },
@@ -13262,11 +13283,14 @@
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Ukupno vrijeme"
   },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Praćenje događaja"
+  },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Vrsta"
   },
   "panels/timeline/TimelineUIUtils.ts | url": {
-    "message": "Url"
+    "message": "URL"
   },
   "panels/timeline/TimelineUIUtils.ts | warning": {
     "message": "Upozorenje"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Ponovno povežite kad ste spremni tako da ponovno otvorite Razvojne alate."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Otkaži"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "Podudaranja: {PH1}"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Potraži"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Razlikuj veliko i malo slovo"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 podudaranje"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Pretraži prethodno"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Upotrijebite regularni izraz"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Promijenila se jedna ili više postavki te je potrebno ponovno učitavanje da bi se počele primjenjivati."
@@ -13932,7 +13947,10 @@
     "message": "Nakon ponovnog učitavanja stranice Razvojni alati automatski će se ponovno povezati."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Izbriši unos"
+    "message": "Ukloni"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Filtriranje"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "nije pritisnut"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Snimka zaslona za {PH1} – odaberite da biste pregledali prethodne zahtjeve."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Dodaj skriptu na popis za zanemarivanje"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Konfiguriranje verzije…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Dovrši postavljanje verzije"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Plameni grafikon"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Sakrij podređene elemente koji se ponavljaju"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Ukloni skriptu s popisa za zanemarivanje"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Vrati podređene stavke"
