--- a/front_end/core/i18n/locales/hy.json
+++ b/front_end/core/i18n/locales/hy.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Web SQL-ն այլևս չի աջակցվում։ Օգտագործեք SQLite WebAssembly-ն կամ ինդեքսավորված շտեմարան։"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Թույլտվության window-placement բնութագրիչն այլևս չի աշխատում։ Օգտագործե՞լ window-management-ը։ Լրացուցիչ օգնության համար անցեք https://bit.ly/window-placement-rename։"
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Թույլտվության window-placement կանոնն այլևս չի աջակցվում։ Օգտագործե՞լ window-management-ը։ Լրացուցիչ օգնության համար անցեք https://bit.ly/window-placement-rename։"
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16-ը չի աջակցվում JSON պատասխանի կողմից XMLHttpRequest-ում"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "վտանգավոր"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Երրորդ կողմի քուքիները Privacy Sandbox-ի շրջանակներում արգելափակված են Chrome-ում։"
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Երրորդ կողմի քուքիները Privacy Sandbox-ի շրջանակներում կարգելափակվեն Chrome-ի հետագա տարբերակներում։"
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Հաղորդել վրիպակի մասին"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer օբյեկտի միացում"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Սեղմման գրացուցակի տեղափոխում"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<անանուն>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Անհատականացրեք ձեր PWA-ի անվանագոտու պատուհանների վերահսկման վրադրումը"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Մուգ ֆոնի գույնը"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Մուգ թեմայի գույնը"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Նկարագրություն"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Ռեկուրսիվ ընդլայնում"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Զտել ըստ բանալիների (ցույց տալ բանալիներ, որոնք մեծ են կամ հավասար)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Չհաջողվեց օգտագործել նախաարտապատկերումը, քանի որ ակտիվացման ժամանակ նավիգացիան ունի վերջնական URL, որը տարբերվում է իր սովորական URL-ից (օրինակ՝ ուղղորդում է նոր ներդիրի էջ կամ տեղակայված հավելվածներ)։"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Անհայտ"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Նախաարտապատկերված էջը պահանջել է աուդիո ելք, որը ներկայումս չի աջակցվում։"
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Նախաարտապատկերման նավիգացիան ձախողվեց, քանի որ այն վերաուղղորդում էր URL, որի սխեման http: կամ https: չէր։"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Անհայտ"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Անհայտ"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Նախաարտապատկերման նավիգացիայի համար պահանջվում էր HTTP իսկորոշում, որը ներկայումս չի աջակցվում։"
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Զտել ըստ URL-ի"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Զտել ծածկույթներն ըստ տեսակի"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Բեռնել կայքի միջոցով"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Զտել ըստ URL-ի և սխալի"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Բեռնել մշակողի HTTP(S) ռեսուրսները ձեր կողմից ստուգվող կայքի, այլ ոչ թե ծրագրավորողի գործիքների միջոցով"
@@ -6387,7 +6402,7 @@
     "message": "Կապված կոդ"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "Ցանցային հարցման տվյալները ստանալու համար վերաբեռնեք էջը։"
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "Հաղորդել իրավական խնդրի մասին"
@@ -6435,7 +6450,7 @@
     "message": "Ձեր կազմակերպությունն անջատել է այս գործառույթը։ Լրացուցիչ տեղեկությունների համար դիմեք ձեր ադմինիստրատորներին։"
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "Այս գործառույթը ներկայումս թողարկման փուլում է։ Հետևեք նորություններին։"
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "Այս գործառույթն օգտագործելու համար ծրագրավորողի գործիքների կարգավորումներում ձեր նախընտրելի լեզուն դարձրեք անգլերեն։"
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Ցույց տալ խնդիրները"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Արդյունավետություն"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Գրացնել տվյալներ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Ցույց տալ «Արդյունավետություն» ներդիրը"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Ցույց տալ ժամանակագրության վերջին աշխատաշրջանները"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Սկսել պրոֆիլավորումը և նորից բեռնել էջը"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Կանգնեցնել"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Պատճառների հավաքում"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Սթեքի ժամանակագրություն՝"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Զտել ըստ մատյանի հաղորդագրությունների"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Տեղեկություններ"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Իրադարձության աղբյուրը"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Զտել կանոնավոր արտահայտությունների միջոցով (օրինակ՝ https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Զտիչ"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Զտել կանոնավոր արտահայտության միջոցով (օրինակ՝ (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Երկարությունը"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Պարունակություն"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Կրկնօրինակված տողեր"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Հրապարակել ներքին տեղեկությունները (ներառյալ իրականացման հետ կապված մանրամասները)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Զտիչ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Զտել ըստ կարգի"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Գտնել"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Օբյեկտներ, որոնք բաշխվել են {PH1}-ի և {PH2}-ի միջակայքում"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Օբյեկտներ, որոնք պահվել են ծրագրավորողների գործիքների վահանակի կողմից"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Օբյեկտներ, որոնք պահվել են առանձնացող DOM հանգույցների կողմից"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Վերբեռնում՝ {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Չափազանց դանդաղ նվագարկում"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Չափազանց դանդաղ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Նորից նվագարկել"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Ծայրահեղ դանդաղ արագություն"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Չափազանց դանդաղ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Նորմալ արագություն"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Սովորական (կանխադրված)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Դանդաղ նվագարկել"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Դանդաղ արագություն"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Դանդաղ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Նվագարկել շատ դանդաղ"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Շատ դանդաղ արագություն"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Շատ դանդաղ"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Ընդլայնումներ"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Արագություն"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Ինդեքսավորումը ընդհատվել է։"
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Հաշվի առնել մեծատառ/փոքրատառ գրությունը"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Համընկնումներ չկան։"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Թարմացնել"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Որոնում"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Որոնումն ավարտված է։"
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Որոնումն ընդհատված է։"
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Որոնման հարցում"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Որոնում…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Օգտագործել կանոնավոր արտահայտություն"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1}՝ {PH2}-ի հետ"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Չհաջողվեց բեռնել {PH1} URL-ը՝ {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Անտեսել ընդլայնումների հրահանգաշարերը"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Անտեսել այս ֆայլը"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Երբեք չդադարեցնել այստեղ"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Պատկերի ապակոդավորում"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Պատկերի չափի փոփոխում"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Տեղադրել ժամաչափ"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "– Զգալի ծախսատարություն գոնավորման գործիքների պատճառով"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Գրանցումից հետո քաշեք հետաքրքրող տարածքը համատեսքից։ Ապա մասշտաբավորեք և տեղաշարժեք ժամանակագրությունը մկնիկի անիվի կամ {PH1} ստեղների միջոցով։ {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Բուֆերի օգտագործում"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Մաքրել"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Սեղմեք գրանցման կոճակը {PH1} կամ հպեք {PH2}՝ նոր գրանցում սկսելու համար։"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Սեղմեք վերաբեռնման կոճակը {PH1} կամ հպեք {PH2}՝ էջի բեռնումը գրանցելու համար։"
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Փակել"
@@ -12750,7 +12777,7 @@
     "message": "Միացնել գունավորման լրացուցիչ գործիքավորումը (դանդաղ)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Միացնել CSS ընտրիչի վիճակագրությունը"
+    "message": "Միացնել CSS ընտրիչների վիճակագրությունը (դանդաղ)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Չհաջողվեց պահել ժամանակագրությունը՝ {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Պրոֆայլերի մեկնարկում…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Իմանալ ավելին"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Բեռնել պրոֆիլը…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Ժամանակ"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Պատճենել աղյուսակը"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Առանց խմբավորման"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Առանց օպտիմալացման՝ {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Էջ"
@@ -13011,7 +13029,7 @@
     "message": "Մանրամասներ"
   },
   "panels/timeline/TimelineUIUtils.ts | dimensions": {
-    "message": "Չափերը"
+    "message": "Չափեր"
   },
   "panels/timeline/TimelineUIUtils.ts | duration": {
     "message": "Տևողություն"
@@ -13191,7 +13209,7 @@
     "message": "Հավաքվել է {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | sOfS": {
-    "message": "{PH1}/{PH2}"
+    "message": "{PH1}՝ {PH2}-ից"
   },
   "panels/timeline/TimelineUIUtils.ts | sS": {
     "message": "{PH1}՝ {PH2}"
@@ -13222,6 +13240,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "սկրիպտը բեռնվել է քեշից"
+  },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "սկրիպտը չի աջակցվում"
   },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Ընտրիչի վիճակագրություն"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Ընդհանուր ժամանակը"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Հետագծել իրադարձությունը"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Տեսակը"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Նորից միանալու համար բացեք մշակողի գործիքները։"
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Չեղարկել"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} համընկնում"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Գտնել"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Հաշվի առնել մեծատառ/փոքրատառ գրությունը"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 համընկնում"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Որոնել նախորդը"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Օգտագործել կանոնավոր արտահայտություն"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Մեկ կամ մի քանի կարգավորումներ փոխվել են, և դրանց կիրառման համար անհրաժեշտ է վերաբեռնել մշակողի գործիքները։"
@@ -13932,7 +13947,10 @@
     "message": "Հենց որ էջը վերաբեռնվի, մշակողի գործիքներն ավտոմատ կերպով նորից կմիանան։"
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Մաքրել"
+    "message": "Ջնջել"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Զտիչ"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "սեղմված չէ"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Սքրինշոթ {PH1}-ի համար․ ընտրեք՝ նախորդ հարցումները տեսնելու համար։"
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Ավելացնել սկրիպտը անտեսվածների ցանկում"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Կազմաձևել տարբերակների տեսակները…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Ավարտել տարբերակի տեսակի կազմաձևումը"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Flame Chart գծապատկեր"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Թաքցնել կրկնվող ենթատարրերը"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Հեռացնել սկրիպտը անտեսվածների ցանկից"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Վերակայել ենթատարրերը"
