--- a/front_end/core/i18n/locales/ja.json
+++ b/front_end/core/i18n/locales/ja.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "ウェブ SQL は非推奨となっています。SQLite WebAssembly または Indexed Database を使用してください"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "権限記述子 window-placement は非推奨になりました。代わりに window-management を使用してください。詳しくは、https://bit.ly/window-placement-rename をご覧ください。"
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "権限ポリシー window-placement は非推奨になりました。代わりに window-management を使用してください。詳しくは、https://bit.ly/window-placement-rename をご覧ください。"
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16 は、XMLHttpRequest のレスポンス JSON ではサポートされていません。"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "安全ではない"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "サードパーティ Cookie は、プライバシー サンドボックスの一環として Chrome でブロックされます。"
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "サードパーティ Cookie は、プライバシー サンドボックスの一環として今後の Chrome バージョンでブロックされる予定です。"
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "バグを報告"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer を有効にしています"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "圧縮辞書転送"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<匿名>"
@@ -1869,7 +1872,7 @@
     "message": "タイトルから"
   },
   "panels/accessibility/AccessibilityStrings.ts | hasAutocomplete": {
-    "message": "オートコンプリート対応"
+    "message": "予測入力対応"
   },
   "panels/accessibility/AccessibilityStrings.ts | hasPopup": {
     "message": "ポップアップあり"
@@ -2040,7 +2043,7 @@
     "message": "この要素に対して想定されるライブ アップデートの有無およびその優先度。"
   },
   "panels/accessibility/AccessibilityStrings.ts | whetherAndWhatTypeOfAutocomplete": {
-    "message": "この要素により、どのような種類のオートコンプリートの候補が提示されるかを示します。"
+    "message": "この要素により、どのような種類の予測入力の候補が提示されるかを示します。"
   },
   "panels/accessibility/AccessibilityStrings.ts | whetherTheOptionRepresentedBy": {
     "message": "この要素で表されるオプションが現在選択されているかどうかを示します。"
@@ -2188,12 +2191,6 @@
   },
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "PWA のタイトルバーのウィンドウ コントロール オーバーレイをカスタマイズ"
-  },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "暗い背景の色"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "ダークモードの色"
   },
   "panels/application/AppManifestView.ts | description": {
     "message": "説明"
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "再帰的に展開"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "キーでフィルタ（次の値以上のキーを表示）"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "有効化時に、通常の URL とは異なる有効な URL（新しいタブページ、ホストされているアプリなど）がナビゲーションに含まれていたため、事前レンダリングは使用されませんでした。"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "不明"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "事前レンダリングされたページでリクエストされたオーディオ出力は、現在サポートされていません。"
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "スキームが http: でも https: でもない URL にリダイレクトされたため、事前レンダリング ナビゲーションに失敗しました。"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "不明"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "不明"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "事前レンダリング ナビゲーションには HTTP 認証が必要ですが、現在 HTTP 認証はサポートされていません。"
@@ -4857,7 +4866,7 @@
     "message": "すべてのレベル"
   },
   "panels/console/ConsoleView.ts | autocompleteFromHistory": {
-    "message": "履歴からオートコンプリート"
+    "message": "履歴から予測入力"
   },
   "panels/console/ConsoleView.ts | consoleCleared": {
     "message": "コンソールが消去されました"
@@ -5076,10 +5085,10 @@
     "message": "{n,plural, =1{警告が # 回繰り返されました}other{警告が # 回繰り返されました}}"
   },
   "panels/console/console-meta.ts | autocompleteFromHistory": {
-    "message": "履歴からオートコンプリート"
+    "message": "履歴から予測入力"
   },
   "panels/console/console-meta.ts | autocompleteOnEnter": {
-    "message": "Enter キーでオートコンプリートの候補を採用する"
+    "message": "Enter キーで予測入力の候補を採用する"
   },
   "panels/console/console-meta.ts | clearConsole": {
     "message": "コンソールを消去"
@@ -5097,10 +5106,10 @@
     "message": "ライブ式を作成"
   },
   "panels/console/console-meta.ts | doNotAutocompleteFromHistory": {
-    "message": "履歴に基づいてオートコンプリートしない"
+    "message": "履歴に基づいて予測入力しない"
   },
   "panels/console/console-meta.ts | doNotAutocompleteOnEnter": {
-    "message": "Enter キーでオートコンプリートの候補を採用しない"
+    "message": "Enter キーで予測入力の候補を採用しない"
   },
   "panels/console/console-meta.ts | doNotEagerlyEvaluateConsole": {
     "message": "コンソールのプロンプト テキストを積極的に評価しない"
@@ -5257,6 +5266,9 @@
   },
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
+  },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL でフィルタ"
   },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "カバレッジをタイプ別にフィルタリング"
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "ウェブサイトを介して読み込む"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL とエラーでフィルタ"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "DevTools ではなく、検査するウェブサイトを介して HTTP(S) デベロッパー リソースを読み込みます"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "問題を表示"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "パフォーマンス"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "記録"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "パフォーマンスを表示"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "最近のタイムライン セッションを表示"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "プロファイリングを開始してページを再読み込み"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "停止"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "合成理由"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "スタックトレース:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "ログメッセージでフィルタ"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "情報"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "イベントソース"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "正規表現を使用してフィルタ（例: https?）"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "フィルタ"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "正規表現を使用してフィルタ（例:(web)?socket）"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "長さ"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "包含関係"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "重複する文字列"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "内部データを表示する（実装に固有の追加情報を含む）"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "フィルタ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "クラスでフィルタ"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "検索"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "{PH1} と {PH2} の間にオブジェクトを割り当て"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools コンソールで保持されているオブジェクト"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "デタッチされた DOM ノードで保持されているオブジェクト"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "アップロード: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "極めて遅いリプレイ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "極めて遅い"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "リプレイ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "非常に遅い"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "極めて遅い"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "標準"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "普通（デフォルト）"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "遅いリプレイ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
     "message": "遅い"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "とても遅いリプレイ"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
+    "message": "遅い"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "かなり遅い"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "とても遅い"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "拡張機能"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "速度"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "インデックス登録が中断されました。"
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "大文字と小文字を区別"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "一致するものが見つかりませんでした。"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "更新"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "検索"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "検索が終了しました。"
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "検索が中断されました。"
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "検索クエリ"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "検索しています…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "正規表現を使用"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1}（{PH2}）"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "URL {PH1} の読み込み中にエラーが発生しました: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "拡張機能スクリプトを無視する"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "このファイルを無視"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "ここで一時停止しない"
   },
@@ -11847,7 +11886,7 @@
     "message": "ファイルの終わりを超えるスクロールを許可"
   },
   "panels/sources/sources-meta.ts | autocompletion": {
-    "message": "オートコンプリート"
+    "message": "予測入力"
   },
   "panels/sources/sources-meta.ts | automaticallyPrettyPrintMinifiedSources": {
     "message": "圧縮されたソースを自動的にプリティ プリントする"
@@ -11892,7 +11931,7 @@
     "message": "ブレークポイントのトリガー時にソースパネルを表示しない"
   },
   "panels/sources/sources-meta.ts | disableAutocompletion": {
-    "message": "オートコンプリートを無効にする"
+    "message": "予測入力を無効にする"
   },
   "panels/sources/sources-meta.ts | disableBracketClosing": {
     "message": "閉じかっこの自動入力を無効にする"
@@ -11943,7 +11982,7 @@
     "message": "ブレークポイントのトリガー時にソースパネルを表示する"
   },
   "panels/sources/sources-meta.ts | enableAutocompletion": {
-    "message": "オートコンプリートを有効にする"
+    "message": "予測入力を有効にする"
   },
   "panels/sources/sources-meta.ts | enableBracketClosing": {
     "message": "閉じかっこの自動入力を有効にする"
@@ -12313,9 +12352,6 @@
   },
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "画像デコード"
-  },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "画像のサイズ変更"
   },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "タイマーをインストール"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- 描画パフォーマンスの計測による重大なオーバーヘッド"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "記録後、ドラッグして概要内で関心のある範囲を選択します。選択したら、マウスホイールまたは {PH1} キーでタイムラインのズーム、パンを行います。{PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "バッファ使用量"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "消去"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "新しい記録を開始するには、記録ボタン {PH1} をクリックするか、{PH2} を押します。"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "ページ読み込みを記録するには、再読み込みボタン {PH1} をクリックするか、{PH2} を押してください。"
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "閉じる"
@@ -12750,7 +12777,7 @@
     "message": "高度な描画パフォーマンスの計測（低速）を有効にする"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSS セレクタの統計データを有効にする"
+    "message": "CSS セレクタの統計情報を有効にする（遅い）"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "タイムフレームの保存に失敗しました（{PH1}（{PH2}））"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "プロファイラを初期化しています…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "詳細"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "プロファイルを読み込みます…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "時間"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "テーブルをコピー"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "分類なし"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "最適化されていません: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "ページ"
@@ -13191,7 +13209,7 @@
     "message": "{PH1} 収集済み"
   },
   "panels/timeline/TimelineUIUtils.ts | sOfS": {
-    "message": "{PH1}/{PH2}"
+    "message": "{PH2} 件中 {PH1} 件目"
   },
   "panels/timeline/TimelineUIUtils.ts | sS": {
     "message": "{PH1}: {PH2}"
@@ -13222,6 +13240,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "キャッシュから読み込まれたスクリプト"
+  },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "対象外のスクリプト"
   },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "セレクタの統計データ"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "合計時間"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "トレース イベント"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "タイプ"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "DevTools を再び開いて準備ができたら再接続する"
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "キャンセル"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} 件の一致"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "検索"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "大文字と小文字を区別"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 件の一致"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "前を検索"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "正規表現を使用"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "1 つ以上の設定が変更されました。変更を有効にするには再読み込みが必要です。"
@@ -13932,7 +13947,10 @@
     "message": "ページの再読み込み後、DevTools は自動的に再接続します。"
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "入力内容を削除"
+    "message": "消去"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "フィルタ"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "オフです"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} のスクリーンショット - 前のリクエストを表示するには選択します。"
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "無視リストにスクリプトを追加"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "トラックを設定…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "トラックの設定を終了"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "フレーム チャート"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "繰り返しの子を非表示"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "無視リストからスクリプトを削除"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "子をリセットする"
