--- a/front_end/core/i18n/locales/kn.json
+++ b/front_end/core/i18n/locales/kn.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "ವೆಬ್ SQL ಅನ್ನು ತಡೆಹಿಡಿಯಲಾಗಿದೆ. SQLite WebAssembly ಅಥವಾ ಸೂಚಿಕೆ ಮಾಡಲಾದ ಡೇಟಾಬೇಸ್ ಅನ್ನು ಬಳಸಿ"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "ಅನುಮತಿ ಡಿಸ್ಕ್ರಿಪ್ಟರ್ window-placement ಅನ್ನು ತಡೆಹಿಡಿಯಲಾಗಿದೆ. ಬದಲಿಗೆ window-management ಬಳಸಿ. ಹೆಚ್ಚಿನ ಸಹಾಯಕ್ಕಾಗಿ, https://bit.ly/window-placement-rename ಅನ್ನು ಪರಿಶೀಲಿಸಿ."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "ಅನುಮತಿಯ ಕಾರ್ಯನೀತಿ window-placement ಅನ್ನು ತಡೆಹಿಡಿಯಲಾಗಿದೆ. ಬದಲಿಗೆ window-management ಬಳಸಿ. ಹೆಚ್ಚಿನ ಸಹಾಯಕ್ಕಾಗಿ, https://bit.ly/window-placement-rename ಅನ್ನು ಪರಿಶೀಲಿಸಿ."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16 ಅನ್ನು XMLHttpRequest ನಲ್ಲಿನ ಪ್ರತಿಕ್ರಿಯೆ json ಬೆಂಬಲಿಸುವುದಿಲ್ಲ"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "ಅಸುರಕ್ಷಿತ"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "ಪ್ರೈವೆಸಿ ಸ್ಯಾಂಡ್‌ಬಾಕ್ಸ್‌ನ ಭಾಗವಾಗಿ Chrome ನಲ್ಲಿ ಥರ್ಡ್-ಪಾರ್ಟಿ ಕುಕಿಯನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗಿದೆ."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "ಭವಿಷ್ಯದ Chrome ಆವೃತ್ತಿಗಳಲ್ಲಿ ಪ್ರೈವೆಸಿ ಸ್ಯಾಂಡ್‌ಬಾಕ್ಸ್‌ನ ಭಾಗವಾಗಿ ಥರ್ಡ್-ಪಾರ್ಟಿ ಕುಕಿಯನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗುತ್ತದೆ."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "ಬಗ್ ಅನ್ನು ವರದಿ ಮಾಡಿ"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer ಸಕ್ರಿಯಗೊಳಿಸಲಾಗುತ್ತಿದೆ"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "ಕಂಪ್ರೆಷನ್ ಡಿಕ್ಷನರಿ ಟ್ರಾನ್ಸ್‌ಪೋರ್ಟ್"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<ಅನಾಮಧೇಯ>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "ನಿಮ್ಮ PWA ನ ಶೀರ್ಷಿಕೆ ಪಟ್ಟಿಯ ವಿಂಡೋ ನಿಯಂತ್ರಣಗಳ ಓವರ್‌ಲೇ ಅನ್ನು ಕಸ್ಟಮೈಸ್ ಮಾಡಿ"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "ಗಾಢ ಹಿನ್ನೆಲೆ ಬಣ್ಣ"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "ಡಾರ್ಕ್‌ ಥೀಮ್ ಬಣ್ಣ"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "ವಿವರಣೆ"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "ಪುನರಾವರ್ತಿತವಾಗಿ ವಿಸ್ತರಿಸಿ"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "ಕೀಯಿಂದ ಫಿಲ್ಟರ್ ಮಾಡಿ (ಕೀಲಿಗಳನ್ನು ಹೆಚ್ಚು ಅಥವಾ ಸಮಾನವಾಗಿ ತೋರಿಸಿ)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "ಆಯ್ಕೆ ಮಾಡಿರುವುದನ್ನು ಅಳಿಸಿ"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "ಪಾಥ್ ಪ್ರಕಾರ ಫಿಲ್ಟರ್ ಮಾಡಿ"
+    "message": "ಪಥದ ಮೂಲಕ ಫಿಲ್ಟರ್ ಮಾಡಿ"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "ಹೆಡರ್‌ಗಳು"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "ಸಕ್ರಿಯಗೊಳಿಸುವ ಸಮಯದಲ್ಲಿ, ನ್ಯಾವಿಗೇಷನ್ ಅದರ ಸಾಮಾನ್ಯ URL ಗಿಂತ ವಿಭಿನ್ನವಾದ ಪರಿಣಾಮಕಾರಿ URL ಅನ್ನು ಹೊಂದಿರುವ ಕಾರಣ ಪ್ರೀರೆಂಡರ್ ಅನ್ನು ಬಳಸಲಾಗಿಲ್ಲ. (ಉದಾಹರಣೆಗೆ, ಹೊಸ ಟ್ಯಾಬ್ ಪುಟ, ಅಥವಾ ಹೋಸ್ಟ್ ಮಾಡಿದ ಆ್ಯಪ್‌ಗಳು.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "ಅಪರಿಚಿತ"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "ಪ್ರೀರೆಂಡರ್ ಮಾಡಲಾದ ಪುಟವು ಆಡಿಯೊ ಔಟ್‌ಪುಟ್ ಅನ್ನು ವಿನಂತಿಸಿದೆ, ಇದು ಪ್ರಸ್ತುತ ಬೆಂಬಲಿತವಾಗಿಲ್ಲ."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "ಪ್ರೀರೆಂಡರಿಂಗ್ ನ್ಯಾವಿಗೇಷನ್ ವಿಫಲವಾಗಿದೆ ಏಕೆಂದರೆ ಅದು http: ಅಥವಾ https: ಅಲ್ಲದ ಸ್ಕೀಮ್‌ಗೆ ಮರುನಿರ್ದೇಶಿಸಲ್ಪಟ್ಟಿದೆ."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "ಅಪರಿಚಿತ"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "ಅಪರಿಚಿತ"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "ಪ್ರೀರೆಂಡರಿಂಗ್ ನ್ಯಾವಿಗೇಶನ್‌ಗೆ HTTP ಪ್ರಮಾಣೀಕರಣದ ಅಗತ್ಯವಿದೆ, ಇದು ಪ್ರಸ್ತುತ ಬೆಂಬಲಿತವಾಗಿಲ್ಲ."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL ಮೂಲಕ ಫಿಲ್ಟರ್ ಮಾಡಿ"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "ವಿಧಗಳ ಆಧಾರದಲ್ಲಿ ಫಿಲ್ಟರ್ ಕವರೇಜ್"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "ವೆಬ್‌ಸೈಟ್ ಮೂಲಕ ಲೋಡ್ ಮಾಡಿ"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL ಮತ್ತು ದೋಷದ ಮೂಲಕ ಫಿಲ್ಟರ್ ಮಾಡಿ"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "ನೀವು ತಪಾಸಣೆ ಮಾಡುವ ವೆಬ್‌ಸೈಟ್ ಮೂಲಕ HTTP(S) ಡೆವಲಪರ್ ಮಾಹಿತಿಯ ಮೂಲಗಳನ್ನು ಲೋಡ್ ಮಾಡಿ, DevTools ಮೂಲಕ ಅಲ್ಲ"
@@ -5865,7 +5880,7 @@
     "message": "{PH1}[ಗುಣಲಕ್ಷಣಗಳ ಶೈಲಿ]"
   },
   "panels/elements/StylePropertiesSection.ts | showAllPropertiesSMore": {
-    "message": "ಎಲ್ಲಾ ಪ್ರಾಪರ್ಟಿಗಳನ್ನು ತೋರಿಸಿ (ಇನ್ನೂ {PH1})"
+    "message": "ಎಲ್ಲಾ ಗುಣಲಕ್ಷಣಗಳನ್ನು ತೋರಿಸಿ (ಇನ್ನೂ {PH1})"
   },
   "panels/elements/StylePropertiesSection.ts | styleAttribute": {
     "message": "style ಗುಣಲಕ್ಷಣ"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "ಸಮಸ್ಯೆಗಳನ್ನು ತೋರಿಸಿ"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "ಕಾರ್ಯಕ್ಷಮತೆ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "ರೆಕಾರ್ಡ್"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "ಕಾರ್ಯಕ್ಷಮತೆಯನ್ನು ತೋರಿಸಿ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "ಇತ್ತೀಚಿನ ಟೈಮ್‌ಲೈನ್ ಸೆಶನ್‌ಗಳನ್ನು ತೋರಿಸಿ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "ಪ್ರೊಫೈಲಿಂಗ್ ಪ್ರಾರಂಭಿಸಿ ಮತ್ತು ಪುಟವನ್ನು ಪುನಃ ಲೋಡ್ ಮಾಡಿ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "ನಿಲ್ಲಿಸಿ"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "ಸಂಯೋಜನೆಯ ಕಾರಣಗಳು"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "ಸ್ಟ್ಯಾಕ್‌ಟ್ರೇಸ್:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "ಲಾಗ್ ಸಂದೇಶಗಳ ಮೂಲಕ ಫಿಲ್ಟರ್ ಮಾಡಿ"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "ಮಾಹಿತಿ"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "ಈವೆಂಟ್ ಸೋರ್ಸ್"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "ರೆಗ್ಯುಲರ್ ಎಕ್ಸ್‌ಪ್ರೆಶನ್ ಬಳಸಿ ಫಿಲ್ಟರ್ ಮಾಡಿ (ಉದಾಹರಣೆ: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ಐಡಿ"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "ಫಿಲ್ಟರ್"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "ರೆಗ್ಯುಲರ್ ಎಕ್ಸ್‌ಪ್ರೆಶನ್ ಬಳಸಿ ಫಿಲ್ಟರ್ ಮಾಡಿ (ಉದಾಹರಣೆ: (ವೆಬ್)?ಸಾಕೆಟ್)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "ಉದ್ದ"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "ಕಂಟೈನ್ಮೆಂಟ್"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "ನಕಲಿಸಿದ ಸ್ಟ್ರಿಂಗ್‌ಗಳು"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "ಆಂತರಿಕಗಳನ್ನು ಬಹಿರಂಗಪಡಿಸಿ (ಹೆಚ್ಚುವರಿ ಅನುಷ್ಠಾನ-ನಿರ್ದಿಷ್ಟ ವಿವರಗಳನ್ನು ಒಳಗೊಂಡಿದೆ)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "ಫಿಲ್ಟರ್"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "ವರ್ಗದಿಂದ ಫಿಲ್ಟರ್ ಮಾಡಿ"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "ಹುಡುಕಿ"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "ವಸ್ತುಗಳನ್ನು {PH1} ಮತ್ತು {PH2} ನಡುವೆ ವಿಂಗಡಿಸಲಾಗಿದೆ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools ಕನ್ಸೋಲ್‌ನಿಂದ ಇರಿಸಿಕೊಂಡಿರುವ ಆಬ್ಜೆಕ್ಟ್‌ಗಳು"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "ಬೇರ್ಪಡಿಸಲಾದ DOM ನೋಡ್‌ಗಳಿಂದ ಇರಿಸಿಕೊಂಡಿರುವ ಆಬ್ಜೆಕ್ಟ್‌ಗಳು"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "ಅಪ್‌ಲೋಡ್: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "ಅತ್ಯಂತ ನಿಧಾನವಾದ ಮರುಪ್ಲೇ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "ಅತ್ಯಂತ ನಿಧಾನ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "ಮರುಪ್ಲೇ ಮಾಡಿ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "ಅತ್ಯಂತ ನಿಧಾನಗತಿಯ ವೇಗ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "ಅತ್ಯಂತ ನಿಧಾನ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "ಸಾಮಾನ್ಯ ವೇಗ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "ಸಾಧಾರಣ (ಡೀಫಾಲ್ಟ್)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "ನಿಧಾನಗತಿಯ ಮರುಪ್ಲೇ"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "ನಿಧಾನಗತಿಯ ವೇಗ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "ನಿಧಾನ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "ತುಂಬಾ ನಿಧಾನಗತಿಯ ಮರುಪ್ಲೇ"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "ತುಂಬಾ ನಿಧಾನಗತಿಯ ವೇಗ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "ತುಂಬಾ ನಿಧಾನ"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "ಎಕ್ಸ್‌ಟೆನ್ಷನ್‌‌ಗಳು"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "ವೇಗ"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "ಸೂಚಿಕೆಗೆ ಅಡಚಣೆಯಾಗಿದೆ."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "ಕೇಸ್ ಹೊಂದಿಸಿ"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "ಯಾವುದೇ ಹೊಂದಾಣಿಕೆಗಳು ಕಂಡುಬಂದಿಲ್ಲ."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "ರಿಫ್ರೆಶ್"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "ಹುಡುಕಿ"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "ಹುಡುಕಾಟ ಮುಗಿದಿದೆ."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "ಹುಡುಕಾಟಕ್ಕೆ ಅಡಚಣೆ ಉಂಟಾಗಿದೆ."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "ಹುಡುಕಾಟ ಪ್ರಶ್ನೆ"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "ಹುಡುಕಲಾಗುತ್ತಿದೆ…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "ರೆಗ್ಯುಲರ್ ಎಕ್ಸ್‌ಪ್ರೆಶನ್ ಬಳಸಿ"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2} ಜೊತೆಗೆ {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "{PH1} url ಅನ್ನು ಲೋಡ್ ಮಾಡುವಾಗ ದೋಷ ಸಂಭವಿಸಿದೆ: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "ವಿಸ್ತರಣೆ ಸ್ಕ್ರಿಪ್ಟ್‌ಗಳನ್ನು ನಿರ್ಲಕ್ಷಿಸಿ"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "ಈ ಫೈಲ್ ಅನ್ನು ನಿರ್ಲಕ್ಷಿಸಿ"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "ಇಲ್ಲಿ ಎಂದೂ ವಿರಾಮಗೊಳಿಸಬೇಡಿ"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "ಚಿತ್ರ ಡೀಕೋಡ್ ಮಾಡುವಿಕೆ"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "ಚಿತ್ರ ಮರುಗಾತ್ರ"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "ಟೈಮರ್ ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿ"
   },
@@ -12540,13 +12576,13 @@
     "message": "ಬಿಡ್ಡರ್ ವರ್ಕ್‌ಲೆಟ್ — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | dedicatedWorker": {
-    "message": "ಮೀಸಲು ಕೆಲಸಗಾರ Worker"
+    "message": "ಮೀಸಲು Worker"
   },
   "panels/timeline/ThreadAppender.ts | eventDispatchS": {
     "message": "ಈವೆಂಟ್: {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | frameS": {
-    "message": "ಫ್ರೇಮ್ — {PH1}"
+    "message": "ಫ್ರೇಮ್ - {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | main": {
     "message": "ಪ್ರಧಾನ"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- ಪೇಂಟ್ ಇನ್ಸ್ಟ್ರುಮೆಂಟೇಶನ್‌ನಿಂದಾಗಿ ಗಣನೀಯ ಓವರ್‌ಹೆಡ್"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "ರೆಕಾರ್ಡ್ ಮಾಡಿದ ಬಳಿಕ, ಅವಲೋಕನದಲ್ಲಿ ಆಸಕ್ತಿಯ ಕ್ಷೇತ್ರವನ್ನು ಡ್ರ್ಯಾಗ್ ಮಾಡುವ ಮೂಲಕ ಆಯ್ಕೆ ಮಾಡಿ. ನಂತರ, ಮೌಸ್‌ವ್ಹೀಲ್ ಅಥವಾ {PH1} ಕೀಗಳನ್ನು ಬಳಸಿ ಟೈಮ್‌ಲೈನ್ ಅನ್ನು ಝೂಮ್ ಮಾಡಿ ಮತ್ತು ಪ್ಯಾನ್ ಮಾಡಿ. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "ಬಫರ್ ಬಳಕೆ"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "ತೆರವುಗೊಳಿಸಿ"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "ಹೊಸ ರೆಕಾರ್ಡಿಂಗ್ ಪ್ರಾರಂಭಿಸಲು ರೆಕಾರ್ಡ್ ಬಟನ್ {PH1} ಕ್ಲಿಕ್ ಮಾಡಿ ಅಥವಾ {PH2} ಒತ್ತಿ."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "ಪುಟ ಲೋಡ್ ಮಾಡುವಿಕೆಯನ್ನು ರೆಕಾರ್ಡ್ ಮಾಡಲು ಮರುಲೋಡ್ ಬಟನ್ {PH1} ಕ್ಲಿಕ್ ಮಾಡಿ ಅಥವಾ {PH2} ಒತ್ತಿ."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "ಮುಚ್ಚಿ"
@@ -12750,7 +12777,7 @@
     "message": "ಸುಧಾರಿತ ಪೇಂಟ್ ಇನ್‌ಸ್ಟ್ರುಮೆಂಟೇಶನ್ ಸಕ್ರಿಯಗೊಳಿಸಿ (ನಿಧಾನ)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Enable CSS ಸೆಲೆಕ್ಟರ್ ಅಂಕಿಅಂಶಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿ"
+    "message": "CSS ಸೆಲೆಕ್ಟರ್ ಅಂಕಿಅಂಶಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿ (ನಿಧಾನ)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "ಟೈಮ್‌ಲೈನ್ ಅನ್ನು ಸೇವ್ ಮಾಡಲು ವಿಫಲವಾಗಿದೆ: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "ಪ್ರೊಫೈಲರ್ ಪ್ರಾರಂಭಿಸಲಾಗುತ್ತಿದೆ…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "ಪ್ರೊಫೈಲ್ ಲೋಡ್ ಮಾಡಿ…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "ಸಮಯ"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "ಟೇಬಲ್ ಅನ್ನು ಕಾಪಿ ಮಾಡಿ"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "ಗುಂಪು ಮಾಡುವಿಕೆ ಇಲ್ಲ"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "ಆಪ್ಟಿಮೈಸ್ ಮಾಡಲಾಗಿಲ್ಲ: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "ಪುಟ"
@@ -13119,7 +13137,7 @@
     "message": "ಇಲ್ಲಿಗೆ ಸರಿಸಲಾಗಿದೆ"
   },
   "panels/timeline/TimelineUIUtils.ts | networkRequest": {
-    "message": "ನೆಟ್‌ವರ್ಕ್ ವಿನಂತಿ"
+    "message": "ನೆಟ್‌ವರ್ಕ್ ಕೋರಿಕೆ"
   },
   "panels/timeline/TimelineUIUtils.ts | networkTransfer": {
     "message": "ನೆಟ್‌ವರ್ಕ್ ವರ್ಗಾವಣೆ"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "ಸ್ಕ್ರಿಪ್ಟ್ ಅನ್ನು ಕ್ಯಾಷ್‌ನಿಂದ ಲೋಡ್ ಮಾಡಲಾಗಿದೆ"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "ಸ್ಕ್ರಿಪ್ಟ್ ಅರ್ಹವಾಗಿಲ್ಲ"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "ಸೆಲೆಕ್ಟರ್ ಅಂಕಿಅಂಶಗಳು"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "ಒಟ್ಟು ಸಮಯ"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "ಟ್ರೇಸ್ ಈವೆಂಟ್"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "ಪ್ರಕಾರ"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "ಸಿದ್ಧವಾದಾಗ, DevTools ಅನ್ನು ಪುನಃ ತೆರೆಯುವ ಮೂಲಕ ಮತ್ತೊಮ್ಮೆ ಕನೆಕ್ಟ್ ಮಾಡಿ."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "ರದ್ದುಮಾಡಿ"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} ಹೊಂದಾಣಿಕೆಗಳು"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "ಹುಡುಕಿ"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "ಕೇಸ್ ಹೊಂದಿಸಿ"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 ಹೊಂದಾಣಿಕೆ"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "ಹಿಂದಿನದನ್ನು ಹುಡುಕಿ"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "ರೆಗ್ಯುಲರ್ ಎಕ್ಸ್‌ಪ್ರೆಶನ್ ಬಳಸಿ"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "ಒಂದು ಅಥವಾ ಹೆಚ್ಚಿನ ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಬದಲಾಗಿವೆ, ಇವು ಜಾರಿಗೆ ಬರಲು DevTools ಅನ್ನು ಮರುಪ್ರಾರಂಭಿಸುವ ಅಗತ್ಯವಿರುತ್ತದೆ."
@@ -13932,7 +13947,10 @@
     "message": "ಪುಟವನ್ನು ಪುನಃ ಲೋಡ್ ಮಾಡಿದ ಬಳಿಕ, DevTools ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಮತ್ತೊಮ್ಮೆ ಕನೆಕ್ಟ್ ಆಗುತ್ತದೆ."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "ಇನ್‌ಪುಟ್ ತೆರವು ಮಾಡಿ"
+    "message": "ತೆರವುಗೊಳಿಸಿ"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "ಫಿಲ್ಟರ್"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "ಒತ್ತಿಲ್ಲ"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} ಗಾಗಿ ಸ್ಕ್ರೀನ್‌ಶಾಟ್ - ಹಿಂದಿನ ವಿನಂತಿಗಳನ್ನು ವೀಕ್ಷಿಸಲು ಆಯ್ಕೆಮಾಡಿ."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "ಸ್ಕ್ರಿಪ್ಟ್ ಅನ್ನು ನಿರ್ಲಕ್ಷಿಸಬೇಕಾದವುಗಳ ಪಟ್ಟಿಗೆ ಸೇರಿಸಿ"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "ಟ್ರ್ಯಾಕ್‌ಗಳನ್ನು ಕಾನ್ಫಿಗರ್ ಮಾಡಿ…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "ಟ್ರ್ಯಾಕ್‌ಗಳನ್ನು ಕಾನ್ಫಿಗರ್ ಮಾಡುವುದನ್ನು ಮುಗಿಸಿ"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "ಫ್ಲೇಮ್ ಚಾರ್ಟ್"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "ಮಕ್ಕಳ ಫಂಕ್ಷನ್‌ನ ಪುನರಾವರ್ತನೆಯನ್ನು ಮರೆಮಾಡಿ"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "ನಿರ್ಲಕ್ಷಿಸಬೇಕಾದವುಗಳ ಪಟ್ಟಿಯಿಂದ ಸ್ಕ್ರಿಪ್ಟ್ ಅನ್ನು ತೆಗೆದುಹಾಕಿ"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "ಮಕ್ಕಳನ್ನು ರೀಸೆಟ್ ಮಾಡಿ"
