--- a/front_end/core/i18n/locales/ky.json
+++ b/front_end/core/i18n/locales/ky.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Интернет SQL'и эскирген. SQLite WebAssembly же Индекстелген дайындар базасын колдонуңуз"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Уруксат тууралуу маалымат (window-placement) жактырылган жок. Анын ордуна window-management колдонуңуз. Көбүрөөк жардам алуу үчүн https://bit.ly/window-placement-rename баракчасын караңыз."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Уруксат саясаты (window-placement) жактырылган жок. Анын ордуна window-management колдонуңуз. Көбүрөөк жардам алуу үчүн https://bit.ly/window-placement-rename баракчасын караңыз."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16 XMLHttpRequest ичиндеги json сурамы тарабынан колдоого алынбайт"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "кооптуу"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Үчүнчү тараптын cookie файлы Chrome'до Privacy Sandbox'тун бир бөлүгү катары бөгөттөлгөн."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Үчүнчү тараптын cookie файлы Chrome'дун келечектеги версияларында Privacy Sandbox'тун бир бөлүгү катары бөгөттөлөт."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Мүчүлүштүк тууралуу кабарлоо"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer иштетилүүдө"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Кысуу сөздүгүнүн транспорту"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<жашыруун>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "PWA'дин аталыш тилкесиндеги терезе башкаруу элементтеринин оверлейин ыңгайлаштырыңыз"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Караңгы фондун түсү"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Караңгы теманын түсү"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Учкай маалымат"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Кайталануучу түрдө кеңейтүү"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Ачкыч боюнча чыпкалоо (ачкычтарды чоңураак же барабар көрсөтүү)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Алдын ала көрсөтүү колдонулган жок, анткени иштетүү учурунда багыттоонун кадимки URL дарегинен айырмаланган натыйжалуу URL'и бар. (Мисалы, жаңы өтмөк барагы же жайгаштырылуучу колдонмолор.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Белгисиз"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Алдын ала көрсөтүлгөн барак учурда колдоого алынбаган аудио чыгарылышты суранды."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Алдын ала көрсөтүүгө өтүү аткарылган жок, анткени ал схемасы http: же https: эмес болгон URL дарегине багытталган."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Белгисиз"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Белгисиз"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Алдын ала көрсөтүүгө өтүү үчүн учурда колдоого алынбаган HTTP аныктыгын текшерүү талап кылынды."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL боюнча чыпкалоо"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Жайылуу түрү боюнча чыпкалоо"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Вебсайт аркылуу жүктөө"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL жана ката боюнча чыпкалоо"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "HTTP(S) иштеп чыгуучунун булактарын Иштеп чыгуучунун куралдары аркылуу эмес, сиз текшерген вебсайт аркылуу жүктөңүз"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Маселелерди көрсөтүү"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Иштин майнаптуулугу"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Жаздыруу"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Иштин майнаптуулугун көрсөтүү"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Убакыт түрмөгүнүн акыркы сеанстарын көрсөтүү"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Профилдөөнү баштап, баракты кайра жүктөңүз"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Токтотуу"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Түзүлүштүн себептери"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Стекти трассирлөө:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Журнал билдирүүлөрү боюнча чыпкалоо"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Маалымат"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Иш-чаранын булагы"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Кадимки сөз айкашы аркылуу чыпкалоо (мисалы: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Идентификатор"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Чыпка"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Кадимки сөз айкашы аркылуу чыпкалоо (мисалы: (Интернет)?сокет)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Узактыгы"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Кармануу"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Кайталанган саптар"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Ички элементтерди ачып көрсөтүү (ишке ашыруу боюнча кошумча маалымат камтылган)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Чыпка"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Класс боюнча чыпкалоо"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Табуу"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Объекттер {PH1} жана {PH2} ортосунда жайгашты"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Иштеп чыгуучунун куралдарынын консолунда сакталган объекттер"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Ажыратылган DOM түйүндөрүндө сакталган объекттер"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Жүктөп берүү: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Өтө эле жай кайталоо"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Өтө жай"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Кайра ойнотуу"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Ылдамдыгы өтө жай"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Өтө жай"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Кадимкидей ылдамдык"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Кадимки (демейки)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Жай кайталоо"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Жайлатуу"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Жай"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Өтө жай кайталоо"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Ылдамдыгы өтө жай"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Абдан жай"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Кеңейтүүлөр"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Ылдамдык"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Индекстөө үзгүлтүккө учурады."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Арип өлчөмүн эске алуу"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Эч нерсе табылган жок."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Жаңыртуу"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Издөө"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Издөө аяктады."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Издөө үзгүлтүккө учурады."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Изделген суроо"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Издөөдө…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Көп колдонулуучу сүйлөмдү пайдалануу"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2} менен {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "{PH1} URL дарегин жүктөөдө ката кетти: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Кеңейтүү скрипттерин этибарга албоо"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Бул файлды этибарга албоо"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Бул жерде эч качан тындырылбасын"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Сүрөттүн кодун чечүү"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Сүрөттүн өлчөмүн өзгөртүү"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Таймерди орнотуу"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- Боёк аспаптарынын айынан майнаптуулугу олуттуу төмөндөдү"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Жаздыргандан кийин, назарда кызыккан нерселерди сүйрөп, тандаңыз. Андан кийин убакыт түрмөгүн чычкан дөңгөлөгү же {PH1} баскычтар менен чоңойтуп/кичирейтип жана жылдырып караңыз. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Буферди колдонуу"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Тазалоо"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Жаңы жаздырууну баштоо үчүн {PH1} жаздыруу баскычын же {PH2} баскычын басыңыз."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Баракчанын жүктөлүшүн жаздыруу үчүн кайрадан жүктөө баскычын ({PH1}) же {PH2} баскычын басыңыз."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Жабуу"
@@ -12750,7 +12777,7 @@
     "message": "Өркүндөтүлгөн боёк аспаптарын иштетүү (жай)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSS тандагычтарынын статистикасын иштетүү"
+    "message": "CSS тандагычтарынын статистикасын иштетүү (жай)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Убакыт түрмөгү сакталган жок: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Профиль түзгүчкө баштапкы маани берилүүдө…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Кеңири маалымат"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Профилди жүктөө…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Убакыт"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Жадыбалды көчүрүү"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Топтоштурулбайт"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Оптималдаштырылган эмес: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Барак"
@@ -13011,7 +13029,7 @@
     "message": "Чоо-жайы"
   },
   "panels/timeline/TimelineUIUtils.ts | dimensions": {
-    "message": "Чен-өлчөмү"
+    "message": "Чен-өлчөмдөрү"
   },
   "panels/timeline/TimelineUIUtils.ts | duration": {
     "message": "Узактыгы"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "кештен жүктөлгөн скрипт"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "скрипт жараксыз"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Тандагычтардын статистикасы"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Жалпы убакыт"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Иш-чараны трассирлөө"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Түрү"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Даяр болгондо, DevTools'ту ачуу менен кайра туташыңыз."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Жокко чыгаруу"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} окшоштук"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Табуу"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Арип өлчөмүн эске алуу"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 дал келүү"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Мурункуну издөө"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Көп колдонулуучу сүйлөмдү пайдалануу"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Бир же бир нече жөндөө өзгөртүлдү. Өзгөрүүлөр күчүнө кирүүсү үчүн, кайра жүктөө керектелет."
@@ -13932,7 +13947,10 @@
     "message": "Барак кайра жүктөлгөндөн кийин, DevTools автоматтык түрдө кайра туташат."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Киргизилген нерсени тазалоо"
+    "message": "Күн ачык"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Чыпка"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "басылган жок"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} скриншоту – мурунку сурамдарды көрүү үчүн басыңыз"
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Скриптти эсепке алынбагандардын тизмесине кошуу"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Тректерди конфигурациялоо…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Тректерди конфигурациялап бүтүрүү"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Диаграмма"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Кайталанган туунду элементти жашыруу"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Скриптти эсепке алынбагандардын тизмесинен өчүрүү"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Туунду элементти баштапкы абалга келтирүү"
