--- a/front_end/core/i18n/locales/ms.json
+++ b/front_end/core/i18n/locales/ms.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "SQL Web telah ditamatkan. Sila gunakan SQLite WebAssembly atau Pangkalan Data Berindeks"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "window-placement pemerihal kebenaran telah ditamatkan. Gunakan window-management sebagai ganti. Untuk mendapatkan bantuan lanjut, semak https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "window-placement dasar kebenaran telah ditamatkan. Gunakan window-management sebagai ganti. Untuk mendapatkan bantuan lanjut, semak https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "UTF-16 tidak disokong oleh respons json dalam XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "tidak selamat"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Kuki pihak ketiga telah disekat dalam Chrome sebagai sebahagian daripada Privacy Sandbox."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Kuki pihak ketiga akan disekat dalam versi Chrome akan datang sebagai sebahagian daripada Privacy Sandbox."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Failkan pepijat"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Mendayakan SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Pengangkutan Kamus Pemampatan"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<awanama>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Sesuaikan tindanan kawalan tetingkap bar tajuk PWA anda"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Warna latar belakang gelap"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Warna tema gelap"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Perihalan"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Kembangkan Secara Berulang"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Tapis mengikut kunci (paparkan kunci lebih besar atau sama dengan)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "Padamkan yang Dipilih"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "Tapis mengikut Laluan"
+    "message": "Tapis mengikut laluan"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "Pengepala"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Prapemaparan tidak digunakan kerana semasa tempoh pengaktifan, navigasi mengandungi URL berkesan yang berbeza daripada URL normal. (Contohnya, Halaman Tab Baharu atau apl yang dihoskan.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Tidak diketahui"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Halaman prapemaparan meminta output audio yang tidak disokong pada masa ini."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Navigasi prapemaparan gagal kerana diubah hala kepada URL yang mengandungi skema bukan http: atau https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Tidak diketahui"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Tidak diketahui"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Navigasi prapemaparan memerlukan pengesahan HTTP yang tidak disokong pada masa ini."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Tapis mengikut URL"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Tapis liputan mengikut jenis"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Muatkan melalui laman web"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Tapis mengikut URL dan ralat"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Muatkan sumber pembangun HTTP(S) melalui laman web yang anda semak, bukan melalui DevTools"
@@ -5757,7 +5772,7 @@
     "message": "dedahkan"
   },
   "panels/elements/ElementsTreeOutline.ts | showAllNodesDMore": {
-    "message": "Paparkan Semua Nod ({PH1} Lagi)"
+    "message": "Paparkan semua nod ({PH1} lagi)"
   },
   "panels/elements/ElementsTreeOutline.ts | storeAsGlobalVariable": {
     "message": "Simpan sebagai pemboleh ubah sejagat"
@@ -5865,7 +5880,7 @@
     "message": "{PH1}[Gaya Atribut]"
   },
   "panels/elements/StylePropertiesSection.ts | showAllPropertiesSMore": {
-    "message": "Paparkan Semua Sifat ({PH1} lagi)"
+    "message": "Paparkan semua sifat ({PH1} lagi)"
   },
   "panels/elements/StylePropertiesSection.ts | styleAttribute": {
     "message": "Atribut style"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Paparkan Isu"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Prestasi"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Rakam"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Paparkan Prestasi"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Paparkan sesi garis masa baru-baru ini"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Mulakan pemprofilan dan muatkan semula halaman"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Berhenti"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Sebab Penggubahan"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Surih tindanan:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Tapis mengikut mesej log"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Maklumat"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Sumber Peristiwa"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Tapis menggunakan regex (contoh: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Id"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Tapis"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Tapis menggunakan regex (contohnya: (web)?soket)c"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Panjang"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Pengurungan"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Rentetan dipenduakan"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Dedahkan butiran dalaman (termasuk butiran khusus pelaksanaan tambahan)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Tapis"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Tapis mengikut kelas"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Cari"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Objek yang diuntukkan antara {PH1} hingga {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Objek yang telah dikekalkan oleh konsol Alatan Pembangun"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Objek dikekalkan oleh nod DOM terpisah"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Muat naik: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Main semula yang sangat perlahan"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Teramat perlahan"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Main semula"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Kelajuan yang teramat perlahan"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Teramat perlahan"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Kelajuan biasa"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Biasa (Lalai)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Main semula perlahan"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Kelajuan perlahan"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Perlahan"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Main semula sangat perlahan"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Kelajuan yang amat perlahan"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Sangat perlahan"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Sambungan"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Kelajuan"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Pengindeksan terganggu."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Kes Sepadan"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Tiada padanan ditemukan."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Muat semula"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Cari"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Carian selesai."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Carian terganggu."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Pertanyaan Carian"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Mencari…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Gunakan Ungkapan Nalar"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} dengan {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Ralat semasa memuatkan URL {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Abaikan skrip sambungan"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Abaikan fail ini"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Jangan jeda di sini"
   },
@@ -12144,7 +12183,7 @@
     "message": "Animasi"
   },
   "panels/timeline/AppenderUtils.ts | sSelfS": {
-    "message": "{PH1} (berasingan {PH2})"
+    "message": "{PH1} (individu {PH2})"
   },
   "panels/timeline/CountersGraph.ts | documents": {
     "message": "Dokumen"
@@ -12313,9 +12352,6 @@
   },
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Penyahkodan Imej"
-  },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Pengubahan Saiz Imej"
   },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Pasang Pemasa"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- Overhed yang tinggi disebabkan oleh instrumentasi cat"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Selepas merakam, seret untuk memilih kawasan tarikan dalam ikhtisar. Kemudian, zum dan sorot garis masa menggunakan roda tetikus atau kekunci {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Penggunaan penimbal"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Kosongkan"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Klik butang rakam {PH1} atau tekan {PH2} untuk memulakan rakaman baharu."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Klik butang muat semula {PH1} atau tekan {PH2} untuk merakam pemuatan halaman."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Tutup"
@@ -12750,7 +12777,7 @@
     "message": "Dayakan instrumen cat lanjutan (perlahan)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Dayakan statistik pemilih CSS"
+    "message": "Dayakan statistik pemilih CSS (perlahan)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Gagal menyimpan garis masa: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Mengasalkan pemprofil…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Ketahui lebih lanjut"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Muatkan profil…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Masa"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Salin Jadual"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Tiada Pengumpulan"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Tidak dioptimumkan: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Halaman"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "skrip yang dimuatkan daripada cache"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "skrip tidak layak"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statistik Pemilih"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Jumlah Masa"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Peristiwa Surih"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Taip"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Sambung semula apabila sudah bersedia dengan membuka semula DevTools."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Batal"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} padanan"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Cari"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Kes Sepadan"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 padanan"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Cari sebelumnya"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Gunakan Ungkapan Nalar"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Satu atau beberapa tetapan telah berubah. Pemuatan semula diperlukan untuk menerapkan perubahan."
@@ -13932,7 +13947,10 @@
     "message": "Sebaik sahaja halaman dimuat semula, DevTools akan disambung semula secara automatik."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Kosongkan input"
+    "message": "Kosongkan"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Tapis"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "tidak ditekan"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Tangkapan skrin untuk {PH1} - pilih untuk melihat permintaan sebelumnya."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Tambahkan skrip pada senarai abaikan"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Konfigurasikan jejak…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Selesai mengkonfigurasikan jejak"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Carta Nyala"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Sembunyikan anak yang berulang"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Alih keluar skrip daripada senarai abaikan"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Tetapkan semula anak"
