--- a/front_end/core/i18n/locales/pa.json
+++ b/front_end/core/i18n/locales/pa.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "ਵੈੱਬ SQL ਨੂੰ ਨਾਪਸੰਦ ਕੀਤਾ ਗਿਆ। ਕਿਰਪਾ ਕਰਕੇ SQLite WebAssembly ਜਾਂ ਕ੍ਰਮ-ਸੂਚੀ ਵਾਲੇ ਡਾਟਾਬੇਸ ਦੀ ਵਰਤੋਂ ਕਰੋ।"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "ਇਜਾਜ਼ਤ ਵਰਣਨਕਰਤਾ window-placement ਨੂੰ ਨਾਪਸੰਦ ਕੀਤਾ ਗਿਆ ਹੈ। ਇਸਦੀ ਬਜਾਏ window-management ਵਰਤੋ। ਹੋਰ ਮਦਦ ਲਈ, https://bit.ly/window-placement-rename ਦੇਖੋ।"
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "ਇਜਾਜ਼ਤ ਨੀਤੀ window-placement ਨੂੰ ਨਾਪਸੰਦ ਕੀਤਾ ਗਿਆ ਹੈ। ਇਸਦੀ ਬਜਾਏ window-management ਵਰਤੋ। ਹੋਰ ਮਦਦ ਲਈ, https://bit.ly/window-placement-rename ਦੇਖੋ।"
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "XMLHttpRequest ਵਿੱਚ UTF-16 ਜਵਾਬ json ਨਾਲ ਸਮਰਥਿਤ ਨਹੀਂ ਹੈ"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "ਅਸੁਰੱਖਿਅਤ"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "ਤੀਜੀ-ਧਿਰ ਦੀ ਕੁਕੀ ਨੂੰ ਪ੍ਰਾਈਵੇਸੀ ਸੈਂਡਬਾਕਸ ਦੇ ਹਿੱਸੇ ਵਜੋਂ Chrome ਵਿੱਚ ਬਲਾਕ ਕੀਤਾ ਗਿਆ ਹੈ।"
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "ਪ੍ਰਾਈਵੇਸੀ ਸੈਂਡਬਾਕਸ ਦੇ ਹਿੱਸੇ ਵਜੋਂ ਭਵਿੱਖੀ Chrome ਵਰਜਨਾਂ ਵਿੱਚ ਤੀਜੀ-ਧਿਰ ਦੀ ਕੁਕੀ ਨੂੰ ਬਲਾਕ ਕੀਤਾ ਜਾਵੇਗਾ।"
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "ਬੱਗ ਦੀ ਰਿਪੋਰਟ ਕਰੋ"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer ਨੂੰ ਚਾਲੂ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "ਕੰਪ੍ਰੈਸ਼ਨ ਡਿਕਸ਼ਨਰੀ ਟ੍ਰਾਂਸਪੋਰਟ"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<ਗੁਮਨਾਮ>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "ਆਪਣੇ PWA ਦੀ ਸਿਰਲੇਖ ਪੱਟੀ ਦੇ ਵਿੰਡੋ ਕੰਟਰੋਲ ਓਵਰਲੇ ਨੂੰ ਵਿਉਂਤਬੱਧ ਕਰੋ"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "ਗੂੜ੍ਹਾ ਬੈਕਗ੍ਰਾਊਂਡ ਰੰਗ"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "ਗੂੜ੍ਹਾ ਥੀਮ ਰੰਗ"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "ਵਰਣਨ"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "ਲਗਾਤਾਰ ਵਿਸਤਾਰ ਕਰੋ"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "ਕੁੰਜੀ ਮੁਤਾਬਕ ਫਿਲਟਰ ਕਰੋ (ਵੱਧ ਜਾਂ ਬਰਾਬਰ ਵਾਲੀਆਂ ਕੁੰਜੀਆਂ ਦਿਖਾਓ)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "ਪ੍ਰੀਰੈਂਡਰ ਦੀ ਵਰਤੋਂ ਨਹੀਂ ਕੀਤੀ ਗਈ ਸੀ ਕਿਉਂਕਿ ਕਿਰਿਆਸ਼ੀਲ ਕਰਨ ਦੇ ਸਮੇਂ ਦੌਰਾਨ, ਨੈਵੀਗੇਸ਼ਨ ਵਿੱਚ ਇੱਕ ਪ੍ਰਭਾਵੀ URL ਹੈ ਜੋ ਇਸਦੇ ਸਧਾਰਨ URL ਨਾਲੋਂ ਵੱਖਰਾ ਹੈ। (ਉਦਾਹਰਨ ਲਈ, ਨਵੀਂ ਟੈਬ ਦਾ ਪੰਨਾ ਜਾਂ ਹੋਸਟ ਕੀਤੀਆਂ ਐਪਾਂ।)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "ਅਗਿਆਤ"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "ਪ੍ਰੀਰੈਂਡਰ ਕੀਤੇ ਗਏ ਪੰਨੇ ਵੱਲੋਂ ਜਿਸ ਆਡੀਓ ਆਊਟਪੁੱਟ ਦੀ ਬੇਨਤੀ ਕੀਤੀ ਗਈ ਸੀ, ਉਹ ਫ਼ਿਲਹਾਲ ਸਮਰਥਿਤ ਨਹੀਂ ਹੈ।"
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "ਪ੍ਰੀਰੈਂਡਰਿੰਗ ਨੈਵੀਗੇਸ਼ਨ ਅਸਫਲ ਰਹੀ, ਕਿਉਂਕਿ ਇਸਨੂੰ ਅਜਿਹੇ URL 'ਤੇ ਰੀਡਾਇਰੈਕਟ ਕੀਤਾ ਗਿਆ ਸੀ, ਜਿਸ ਦੀ ਸਕੀਮ http: ਜਾਂ https: ਨਹੀਂ ਸੀ।"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "ਅਗਿਆਤ"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "ਅਗਿਆਤ"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "ਪ੍ਰੀਰੈਂਡਰਿੰਗ ਨੈਵੀਗੇਸ਼ਨ ਲਈ HTTP ਪ੍ਰਮਾਣੀਕਰਨ ਲੋੜੀਂਦਾ ਹੈ, ਜੋ ਫ਼ਿਲਹਾਲ ਸਮਰਥਿਤ ਨਹੀਂ ਹੈ।"
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL ਮੁਤਾਬਕ ਫਿਲਟਰ ਕਰੋ"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "ਕਿਸਮ ਮੁਤਾਬਕ ਕਵਰੇਜ ਨੂੰ ਫਿਲਟਰ ਕਰੋ"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "ਵੈੱਬਸਾਈਟ ਰਾਹੀਂ ਲੋਡ ਕਰੋ"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL ਅਤੇ ਗੜਬੜ ਮੁਤਾਬਕ ਫਿਲਟਰ ਕਰੋ"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "DevTools ਦੀ ਬਜਾਏ, ਤੁਹਾਡੇ ਵੱਲੋਂ ਜਾਂਚੀ ਗਈ ਵੈੱਬਸਾਈਟ ਰਾਹੀਂ HTTP(S) ਵਿਕਾਸਕਾਰ ਸਰੋਤਾਂ ਨੂੰ ਲੋਡ ਕਰੋ"
@@ -6387,7 +6402,7 @@
     "message": "ਸੰਬੰਧਿਤ ਕੋਡ"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "ਇੱਕ ਬਿਹਤਰ ਅੰਦਰੂਨੀ-ਝਾਤ ਬਣਾਉਣ ਲਈ ਇਸ ਸੁਨੇਹੇ ਲਈ ਸੰਬੰਧਿਤ ਨੈੱਟਵਰਕ ਬੇਨਤੀ ਦੇ ਡਾਟੇ ਨੂੰ ਕੈਪਚਰ ਕਰਨ ਲਈ ਪੰਨੇ ਨੂੰ ਰੀਲੋਡ ਕਰੋ।"
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "ਕਨੂੰਨੀ ਸਮੱਸਿਆ ਦੀ ਰਿਪੋਰਟ ਕਰੋ"
@@ -6435,7 +6450,7 @@
     "message": "ਤੁਹਾਡੀ ਸੰਸਥਾ ਨੇ ਇਸ ਵਿਸ਼ੇਸ਼ਤਾ ਨੂੰ ਬੰਦ ਕਰ ਦਿੱਤਾ ਹੈ। ਹੋਰ ਜਾਣਕਾਰੀ ਲਈ ਆਪਣੇ ਪ੍ਰਸ਼ਾਸਕਾਂ ਨੂੰ ਸੰਪਰਕ ਕਰੋ।"
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "ਇਸ ਫੀਚਰ ਨੂੰ ਫ਼ਿਲਹਾਲ ਜਨਤਕ ਰਿਲੀਜ਼ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ। ਦੇਖਦੇ ਰਹੋ।"
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "ਇਸ ਵਿਸ਼ੇਸ਼ਤਾ ਨੂੰ ਵਰਤਣ ਲਈ, DevTools ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਮੌਜੂਦ ਆਪਣੀ ਭਾਸ਼ਾ ਤਰਜੀਹ ਨੂੰ ਅੰਗਰੇਜ਼ੀ ਵਿੱਚ ਅੱਪਡੇਟ ਕਰੋ।"
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "ਸਮੱਸਿਆਵਾਂ ਦਿਖਾਓ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "ਕਾਰਗੁਜ਼ਾਰੀ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "ਰਿਕਾਰਡ ਕਰੋ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "ਕਾਰਗੁਜ਼ਾਰੀ ਦਿਖਾਓ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "ਹਾਲੀਆਂ ਟਾਈਮਲਾਈਨ ਸੈਸ਼ਨਾਂ ਨੂੰ ਦਿਖਾਓ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "ਪ੍ਰੋਫਾਈਲਿੰਗ ਸ਼ੁਰੂ ਕਰੋ ਅਤੇ ਪੰਨੇ ਨੂੰ ਰੀਲੋਡ ਕਰੋ"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "ਬੰਦ ਕਰੋ"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "ਕੰਪੋਜ਼ਿਟ ਕਰਨ ਦੇ ਕਾਰਨ"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "ਸਟੈਕ ਟ੍ਰੇਸ:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "ਲੌਗ ਸੁਨੇਹਿਆਂ ਮੁਤਾਬਕ ਫਿਲਟਰ ਕਰੋ"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "ਜਾਣਕਾਰੀ"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "ਇਵੈਂਟ ਸਰੋਤ"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "regex ਦੀ ਵਰਤੋਂ ਕਰ ਕੇ ਫਿਲਟਰ ਕਰੋ (ਉਦਾਹਰਨ: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ਆਈਡੀ"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "ਫਿਲਟਰ ਕਰੋ"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "regex ਦੀ ਵਰਤੋਂ ਕਰ ਕੇ ਫਿਲਟਰ ਕਰੋ (ਉਦਾਹਰਨ ਲਈ: (ਵੈੱਬ)?ਸਾਕੇਟ)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "ਲੰਬਾਈ"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "ਕੰਟੇਨਮੈਂਟ"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "ਡੁਪਲੀਕੇਟ ਸਤਰਾਂ"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "(ਲਾਗੂ ਕਰਨ ਵਾਲੇ ਖਾਸ ਵਧੀਕ ਵੇਰਵਿਆਂ ਦੇ ਸਮੇਤ) ਅੰਦਰੂਨੀ ਟੂਲਾਂ ਨੂੰ ਪ੍ਰਗਟ ਕਰੋ"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "ਫਿਲਟਰ ਕਰੋ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "ਕਲਾਸ ਮੁਤਾਬਕ ਫਿਲਟਰ ਕਰੋ"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "ਲੱਭੋ"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "ਵਸਤੂਆਂ {PH1} ਅਤੇ {PH2} ਦੇ ਵਿਚਕਾਰ ਵੰਡੀਆਂ ਗਈਆਂ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools ਕੰਸੋਲ ਵੱਲੋਂ ਸੰਭਾਲ ਕੇ ਰੱਖੀਆਂ ਗਈਆਂ ਵਸਤੂਆਂ"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "ਵੱਖ ਕੀਤੇ ਗਏ DOM ਨੋਡਾਂ ਵੱਲੋਂ ਸੰਭਾਲ ਕੇ ਰੱਖੀਆਂ ਗਈਆਂ ਵਸਤੂਆਂ"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "ਅੱਪਲੋਡ ਕਰੋ: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "ਮੁੜ-ਚਲਾਉਣ ਦੀ ਬਹੁਤ ਜ਼ਿਆਦਾ ਹੌਲੀ ਗਤੀ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "ਬਹੁਤ ਹੀ ਜ਼ਿਆਦਾ ਹੌਲੀ"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "ਮੁੜ-ਚਲਾਓ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "ਬਹੁਤ ਜ਼ਿਆਦਾ ਧੀਮੀ ਗਤੀ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "ਬਹੁਤ ਹੀ ਜ਼ਿਆਦਾ ਹੌਲੀ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "ਸਧਾਰਨ ਗਤੀ"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "ਸਧਾਰਨ (ਪੂਰਵ-ਨਿਰਧਾਰਿਤ)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "ਮੁੜ-ਚਲਾਉਣ ਦੀ ਹੌਲੀ ਗਤੀ"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "ਧੀਮੀ ਗਤੀ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "ਹੌਲੀ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "ਮੁੜ-ਚਲਾਉਣ ਦੀ ਬਹੁਤ ਹੌਲੀ ਗਤੀ"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "ਬਹੁਤ ਧੀਮੀ ਗਤੀ"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "ਬਹੁਤ ਹੌਲੀ"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "ਐਕਸਟੈਂਸ਼ਨਾਂ"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "ਗਤੀ"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "ਕ੍ਰਮ-ਸੂਚੀ ਬਣਾਉਣ ਵਿੱਚ ਰੁਕਾਵਟ ਆਈ।"
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "ਮੇਲ ਖਾਂਦਾ ਕੇਸ"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "ਕੋਈ ਮਿਲਾਨ ਨਹੀਂ ਮਿਲਿਆ।"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "ਰਿਫ੍ਰੈਸ਼ ਕਰੋ"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "ਖੋਜ ਕਰੋ"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "ਖੋਜ ਪੂਰੀ ਹੋਈ।"
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "ਖੋਜ ਵਿੱਚ ਰੁਕਾਵਟ ਆਈ।"
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "ਖੋਜ ਪੁੱਛਗਿੱਛ"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "ਖੋਜਿਆ ਜਾ ਰਿਹਾ ਹੈ…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "ਰੈਗੂਲਰ ਐਕਸਪ੍ਰੈਸ਼ਨ ਵਰਤੋ"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2} ਨਾਲ {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "URL {PH1} ਨੂੰ ਲੋਡ ਕਰਨ ਵਿੱਚ ਗੜਬੜ ਹੋਈ: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "ਐਕਸਟੈਂਸ਼ਨ ਸਕ੍ਰਿਪਟਾਂ ਨੂੰ ਅਣਡਿੱਠ ਕਰੋ"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "ਇਸ ਫ਼ਾਈਲ ਨੂੰ ਅਣਡਿੱਠ ਕਰੋ"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "ਇੱਥੇ ਕਦੇ ਨਾ ਰੋਕੋ"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "ਚਿੱਤਰ ਡੀਕੋਡ ਕਰੋ"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "ਚਿੱਤਰ ਦਾ ਆਕਾਰ ਬਦਲੋ"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "ਟਾਈਮਰ ਸਥਾਪਤ ਕਰੋ"
   },
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- ਪੇਂਟ ਉਪਕਰਨ ਦੇ ਕਾਰਨ ਮਹੱਤਵਪੂਰਨ ਓਵਰਹੈੱਡ"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "ਰਿਕਾਰਡਿੰਗ ਤੋਂ ਬਾਅਦ, ਰੂਪ-ਰੇਖਾ ਵਿੱਚ ਘਸੀਟ ਕੇ ਦਿਲਚਸਪੀ ਦਾ ਖੇਤਰ ਚੁਣੋ। ਫਿਰ, ਮਾਊਸਵ੍ਹੀਲ ਜਾਂ {PH1} ਕੁੰਜੀਆਂ ਦੇ ਨਾਲ ਜ਼ੂਮ ਅਤੇ ਪੈਨ ਕਰੋ। {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "ਬਫ਼ਰ ਦੀ ਵਰਤੋਂ"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "ਕਲੀਅਰ ਕਰੋ"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "ਨਵੀਂ ਰਿਕਾਰਡਿੰਗ ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਰਿਕਾਰਡ ਬਟਨ {PH1} 'ਤੇ ਕਲਿੱਕ ਕਰੋ ਜਾਂ {PH2} ਨੂੰ ਦਬਾਓ।"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "ਪੰਨਾ ਲੋਡ ਹੋਣ ਨੂੰ ਰਿਕਾਰਡ ਕਰਨ ਲਈ ਰੀਲੋਡ ਬਟਨ {PH1} 'ਤੇ ਕਲਿੱਕ ਕਰੋ ਜਾਂ {PH2} ਨੂੰ ਦਬਾਓ।"
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "ਬੰਦ ਕਰੋ"
@@ -12750,7 +12777,7 @@
     "message": "ਉੱਨਤ ਪੇਂਟ ਉਪਕਰਨ ਚਾਲੂ ਕਰੋ (ਹੌਲੀ)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSS ਚੋਣਕਾਰ ਅੰਕੜਿਆਂ ਨੂੰ ਚਾਲੂ ਕਰੋ"
+    "message": "CSS ਚੋਣਕਾਰ ਅੰਕੜੇ (ਧੀਮੀ ਗਤੀ) ਦਿਖਾਉਣ ਦੀ ਸੁਵਿਧਾ ਚਾਲੂ ਕਰੋ"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "ਟਾਈਮਲਾਈਨ ਰੱਖਿਅਤ ਕਰਨਾ ਅਸਫਲ ਰਿਹਾ: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "ਪ੍ਰੋਫਾਈਲਰ ਸ਼ੁਰੂ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "ਹੋਰ ਜਾਣੋ"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "ਪ੍ਰੋਫਾਈਲ ਨੂੰ ਲੋਡ ਕਰੋ…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "ਸਮਾਂ"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "ਸਾਰਨੀ ਨੂੰ ਕਾਪੀ ਕਰੋ"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "ਕੋਈ ਗਰੁੱਪ ਨਹੀਂ ਹੈ"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "ਸੁਯੋਗ ਨਹੀਂ ਬਣਾਇਆ ਗਿਆ: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "ਪੰਨਾ"
@@ -13077,7 +13095,7 @@
     "message": "ਆਈਡੀ"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "{PH1} {PH2} ਵਜੇ"
+    "message": "{PH2} 'ਤੇ {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "ਅਪ੍ਰਮਾਣੀਕਰਨ"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "ਕੈਸ਼ੇ ਤੋਂ ਸਕ੍ਰਿਪਟ ਲੋਡ ਕੀਤੀ ਗਈ"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "ਸਕ੍ਰਿਪਟ ਯੋਗ ਨਹੀਂ ਹੈ"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "ਚੋਣਕਾਰ ਅੰਕੜੇ"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "ਕੁੱਲ ਸਮਾਂ"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "ਟ੍ਰੇਸ ਇਵੈਂਟ"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "ਕਿਸਮ"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "ਤਿਆਰ ਹੋ ਜਾਣ 'ਤੇ, DevTools ਨੂੰ ਮੁੜ-ਖੋਲ੍ਹ ਕੇ ਦੁਬਾਰਾ ਤੋਂ ਕਨੈਕਟ ਕਰੋ।"
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "ਰੱਦ ਕਰੋ"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} ਮਿਲਾਨ"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "ਲੱਭੋ"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "ਮੇਲ ਖਾਂਦਾ ਕੇਸ"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 ਮਿਲਾਨ"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "ਪਿਛਲਾ ਖੋਜੋ"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "ਰੈਗੂਲਰ ਐਕਸਪ੍ਰੈਸ਼ਨ ਵਰਤੋ"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "ਇੱਕ ਜਾਂ ਇੱਕ ਤੋਂ ਵੱਧ ਸੈਟਿੰਗਾਂ ਬਦਲ ਗਈਆਂ ਹਨ, ਜਿਨ੍ਹਾਂ ਨੂੰ ਲਾਗੂ ਕਰਨ ਲਈ ਰੀਲੋਡ ਕਰਨਾ ਲੋੜੀਂਦਾ ਹੈ।"
@@ -13932,7 +13947,10 @@
     "message": "ਇੱਕ ਵਾਰ ਪੰਨਾ ਰੀਲੋਡ ਹੋਣ 'ਤੇ, DevTools ਸਵੈਚਲਿਤ ਤੌਰ 'ਤੇ ਮੁੜ-ਕਨੈਕਟ ਹੋ ਜਾਣਗੇ।"
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "ਇਨਪੁੱਟ ਕਲੀਅਰ ਕਰੋ"
+    "message": "ਕਲੀਅਰ ਕਰੋ"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "ਫਿਲਟਰ ਕਰੋ"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "ਦਬਾਈ ਨਹੀਂ ਗਈ"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} ਦਾ ਸਕ੍ਰੀਨਸ਼ਾਟ - ਪਿਛਲੀਆਂ ਬੇਨਤੀਆਂ ਦੇਖਣ ਲਈ ਚੁਣੋ।"
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "ਅਣਡਿੱਠ ਸੂਚੀ ਵਿੱਚ ਸਕ੍ਰਿਪਟ ਸ਼ਾਮਲ ਕਰੋ"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "ਟਰੈਕਾਂ ਦਾ ਸੰਰੂਪਣ ਕਰੋ…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "ਟਰੈਕਾਂ ਦਾ ਸੰਰੂਪਣ ਕਰਨਾ ਪੂਰਾ ਕਰੋ"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "ਫਲੇਮ ਚਾਰਟ"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "ਦੁਹਰਾਈਆਂ ਜਾਣ ਵਾਲੀਆਂ ਚਾਈਲਡ ਐਂਟਰੀਆਂ ਨੂੰ ਲੁਕਾਓ"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "ਅਣਡਿੱਠ ਸੂਚੀ ਵਿੱਚੋਂ ਸਕ੍ਰਿਪਟ ਹਟਾਓ"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "ਚਾਈਲਡ ਐਂਟਰੀ ਨੂੰ ਰੀਸੈੱਟ ਕਰੋ"
