--- a/front_end/core/i18n/locales/pl.json
+++ b/front_end/core/i18n/locales/pl.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Usługa Web SQL została wycofana. Użyj bazy danych SQLite WebAssembly lub Indexed Database"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Deskryptor uprawnień window-placement został wycofany. Użyj w zamian zasady window-management. Więcej informacji znajdziesz na stronie https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Zasada dotycząca uprawnień window-placement została wycofana. Użyj w zamian zasady window-management. Więcej informacji znajdziesz na stronie https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "Kodowanie UTF-16 nie jest obsługiwane w kodzie JSON odpowiedzi na żądanie XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "niezabezpieczonego"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Pliki cookie innych firm są blokowane w Chrome w ramach Piaskownicy prywatności."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Pliki cookie innych firm będą blokowane w przyszłych wersjach Chrome w ramach Piaskownicy prywatności."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Zgłoś błąd"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Włączam SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Transport słownika kompresji"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonimowy>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Dostosuj nakładkę z elementami sterującymi okna w pasku tytułu aplikacji PWA"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Ciemny kolor tła"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Kolor ciemnego motywu"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Opis"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Rozwiń rekursywnie"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Filtruj według klucza (pokaż klucze większe lub równe)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Nie użyto renderowania wstępnego, ponieważ podczas aktywacji nawigacja ma efektywny URL, który różni się od zwykłego adresu URL. Może to być na przykład strona nowej karty lub hostowana aplikacja."
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Brak informacji"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Wstępnie renderowana strona zażądała wyjścia audio, które obecnie nie jest obsługiwane."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Nawigacja związana z renderowaniem wstępnym nie udała się, ponieważ nastąpiło przekierowanie do adresu URL o schemacie innym niż http: lub https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Brak informacji"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Brak informacji"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Nawigacja związana z renderowaniem wstępnym wymagała uwierzytelniania HTTP, które obecnie nie jest obsługiwane."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Filtruj według adresu URL"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Zakres filtra według typu"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Wczytywanie przez stronę"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Filtruj według adresu URL i błędu"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Wczytuj zasoby HTTP(S) dla dewelopera za pomocą sprawdzanej witryny, a nie Narzędzi deweloperskich"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Pokaż problemy"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Wydajność"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Nagraj"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Pokaż narzędzie Wydajność"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Pokaż ostatnie sesje osi czasu"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Rozpocznij profilowanie i załaduj ponownie stronę"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Zatrzymaj"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Przyczyny komponowania"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Zrzut stosu:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Filtruj według komunikatów logu"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Informacje"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Źródło zdarzeń"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Filtruj z użyciem wyrażenia regularnego (np. https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Identyfikator"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Filtr"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Filtruj z użyciem wyrażenia regularnego, np. (web)?socket"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Długość"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Zawieranie"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Zduplikowane ciągi"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Udostępnij dane wewnętrzne (w tym dodatkowe szczegóły charakterystyczne dla implementacji)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Filtr"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Filtruj według klasy"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Znajdź"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Obiekty alokowane między {PH1} a {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Obiekty zachowane przez konsolę Narzędzi deweloperskich"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Obiekty zachowane przez odłączone węzły DOM"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Przesyłanie: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Bardzo wolne odtwarzanie ponowne"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Bardzo wolno"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Odtwórz ponownie"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
-    "message": "Normalnie (domyślnie)"
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Bardzo, bardzo wolno"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Wolne odtwarzanie ponowne"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
-    "message": "Wolno"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Bardzo wolne odtwarzanie ponowne"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
     "message": "Bardzo wolno"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Normalna szybkość"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
+    "message": "Normalnie (domyślnie)"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Wolno"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
+    "message": "Wolno"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Bardzo wolno"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
+    "message": "Bardzo wolno"
+  },
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Rozszerzenia"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Szybkość"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Indeksowanie zostało przerwane."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Uwzględnij wielkość liter"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Brak wyników"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Odśwież"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Szukaj"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Wyszukiwanie zakończone."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Wyszukiwanie zostało przerwane."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Wyszukiwane hasło"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Wyszukuję…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Użyj wyrażenia regularnego"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} – {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Podczas wczytywania adresu URL {PH1} wystąpił błąd: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Ignoruj skrypty rozszerzeń"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Ignoruj ten plik"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Nigdy nie wstrzymuj w tym miejscu"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Dekodowanie obrazu"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Zmiana rozmiaru obrazu"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Zainstaluj licznik czasu"
   },
@@ -12540,7 +12576,7 @@
     "message": "Worklet licytującego – {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | dedicatedWorker": {
-    "message": "Wydzielony Worker"
+    "message": "Dedykowany Worker"
   },
   "panels/timeline/ThreadAppender.ts | eventDispatchS": {
     "message": "Zdarzenie: {PH1}"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "– Znaczny narzut ze względu na instrumentację renderowania"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Po nagraniu wybierz interesujący Cię obszar, przeciągając jego granice w widoku ogólnym. Następnie powiększ i przesuń oś czasu za pomocą kółka myszy lub klawiszy {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Wykorzystanie bufora"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Wyczyść"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Aby rozpocząć nowe nagranie, kliknij przycisk nagrywania {PH1} lub naciśnij {PH2}."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Kliknij przycisk ponownego załadowania {PH1} lub wybierz {PH2}, aby zarejestrować ładowanie strony."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Zamknij"
@@ -12750,7 +12777,7 @@
     "message": "Pokaż zaawansowaną instrumentację renderowania (powolne)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Włącz statystyki selektora arkusza CSS"
+    "message": "Włącz statystyki selektora CSS (powolne)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Nie udało się zapisać osi czasu: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Inicjuję program profilujący…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Więcej informacji"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Załaduj profil…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Czas"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Skopiuj tabelę"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Bez grupowania"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Bez optymalizacji: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Strona"
@@ -13077,7 +13095,7 @@
     "message": "ID"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "{PH1} na stronie {PH2}"
+    "message": "{PH1} w: {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "Unieważnienia"
@@ -13191,7 +13209,7 @@
     "message": "Zebrano {PH1}"
   },
   "panels/timeline/TimelineUIUtils.ts | sOfS": {
-    "message": "{PH1}/{PH2}"
+    "message": "{PH1} z {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | sS": {
     "message": "{PH1}: {PH2}"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "skrypt załadowany z pamięci podręcznej"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "skrypt jest nieodpowiedni"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Statystyki selektora"
   },
@@ -13248,7 +13269,7 @@
     "message": "Czas poświęcony na renderowanie"
   },
   "panels/timeline/TimelineUIUtils.ts | timeout": {
-    "message": "Czas oczekiwania"
+    "message": "Limit czasu"
   },
   "panels/timeline/TimelineUIUtils.ts | timerId": {
     "message": "Identyfikator licznika czasu"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Łączny czas"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Zdarzenie śledzenia"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Typ"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Połącz ponownie po zakończeniu zdalnego debugowania, ponownie otwierając Narzędzia deweloperskie."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Anuluj"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "Dopasowania: {PH1}"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Znajdź"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Uwzględnij wielkość liter"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 wynik"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Wyszukaj wcześniejsze"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Użyj wyrażenia regularnego"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Co najmniej 1 ustawienie zostało zmienione, a jego uwzględnienie wymaga ponownego załadowania."
@@ -13932,7 +13947,10 @@
     "message": "Po ponownym załadowaniu strony nastąpi automatyczne połączenie z Narzędziami deweloperskimi."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Wyczyść wpisane dane"
+    "message": "Wyczyść"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Filtr"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "nienaciśnięty"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Zrzut ekranu elementu {PH1} – wybierz, aby zobaczyć poprzedzające żądania."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Dodaj skrypt do listy ignorowanych fragmentów kodu"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Skonfiguruj ścieżki…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Zakończ konfigurowanie ścieżek"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Wykres płomieniowy"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Ukryj powtarzające się wpisy podrzędne"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Usuń skrypt z listy ignorowanych fragmentów kodu"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Zresetuj elementy podrzędne"
