--- a/front_end/core/i18n/locales/sr.json
+++ b/front_end/core/i18n/locales/sr.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Веб SQL је застарео. Користите SQLite WebAssembly или индексирану базу података"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "Атрибут дозвола window-placement је застарео. Боље користите window-management. Додатну помоћ потражите на https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "Смернице за дозволе window-placement су застареле. Боље користите window-management. Додатну помоћ потражите на https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "JSON за одговор не подржава UTF-16 у атрибуту XMLHttpRequest"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "небезбедно"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Колачић треће стране је блокиран у Chrome-у у оквиру Privacy Sandbox-а."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Колачић треће стране ће бити блокиран у будућим верзијама Chrome-а у оквиру Privacy Sandbox-а."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Пријави грешку"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "Омогућава се SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Пренос речника за компримовање"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<анонимно>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Прилагодите преклопни елемент за контроле прозора за траку наслова у PWA-у"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Боја тамне позадине"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Боја тамне теме"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Опис"
   },
@@ -2648,6 +2645,9 @@
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Прошири уз понављање"
   },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Филтрирајте према тастеру (прикажи тастере веће или једнако)"
+  },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
   },
@@ -2790,7 +2790,7 @@
     "message": "Избришите изабрано"
   },
   "panels/application/ServiceWorkerCacheViews.ts | filterByPath": {
-    "message": "Филтрирај према путањи"
+    "message": "Филтрирајте према путањи"
   },
   "panels/application/ServiceWorkerCacheViews.ts | headers": {
     "message": "Заглавља"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Приказивање унапред није коришћено јер током времена активације навигација има ефикасан URL који се разликује од стандардног URL-а. (На пример, страница нове картице или хостоване апликације.)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Непознато"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Унапред приказана страница захтева аудио излаз, што тренутно није подржано."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Навигација приказивања унапред није успела зато што је преусмерена на URL адресу чија шема није била http: или https:."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Непознато"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Непознато"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Навигација приказивања унапред је захтевала HTTP потврду идентитета, што тренутно није подржано."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "Филтрирајте према URL-у"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Покривеност филтером према типу"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Учитај преко веб-сајта"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "Филтрирајте према URL-у и грешци"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "Учитајте HTTP(S) ресурсе за програмере помоћу веб-сајта који прегледате, а не преко DevTools-а"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Прикажи проблеме"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Учинак"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Снимај"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Прикажи учинак"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Прикажи недавне сесије у хронологији"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Започни профилисање и поново учитај страницу"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Заустави"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Разлози за састављање"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Стање стека:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Филтрирајте према порукама из евиденције"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Информације"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Извор догађаја"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Филтрирајте помоћу регуларних израза (пример: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ИД"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Филтер"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Филтрирајте помоћу регуларних израза (пример: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Дужина"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Сузбијање"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Дуплирани стрингови"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Изложите интерне елементе (обухвата додатне детаље о примени)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Филтер"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Филтрирајте према класи"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Пронађи"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "Објекти су додељени између профила {PH1} и {PH2}"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "Објекти које задржава конзола алатки за програмере"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Објекти које задржавају одвојени DOM чворови"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Отпремање: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Изузетно спора поновна репродукција"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Изузетно споро"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Пусти поново"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Изузетно мала брзина"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "Изузетно споро"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Нормална брзина"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "Нормално (подразумевано)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Спора поновна репродукција"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Мала брзина"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "Споро"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Веома спора поновна репродукција"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Веома мала брзина"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "Врло споро"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Додаци"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Брзина"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Индексирање је прекинуто."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Препознај величину слова"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Нема подударања."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Освежи"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Претрага"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Претрага је завршена."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Претрага је прекинута."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Упит за претрагу"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Тражи се…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Користите регуларни израз"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH1} са: {PH2}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "Грешка при учитавању URL-a {PH1}: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Игнориши скрипте додатака"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Игнориши овај фајл"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Никада не паузирај овде"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Декодирање слика"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Промена величине слике"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Тајмер инсталирања"
   },
@@ -12540,7 +12576,7 @@
     "message": "Радни задатак понуђача – {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | dedicatedWorker": {
-    "message": "Наменски Worker"
+    "message": "Наменски обрађивач: Worker"
   },
   "panels/timeline/ThreadAppender.ts | eventDispatchS": {
     "message": "Догађај: {PH1}"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "– Значајна прекомерна вредност услед инструментације приказивања"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "После снимања превлачењем изаберите област интересовања у прегледу. Затим зумирајте и померајте хронологију помоћу точкића миша или тастера {PH1}. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Коришћење међумеморије"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Обриши"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Кликните на дугме за снимање {PH1} или притисните {PH2} да бисте започели ново снимање."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Кликните на дугме за поново учитавање {PH1} или притисните {PH2} да бисте снимили учитавање странице."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Затвори"
@@ -12750,7 +12777,7 @@
     "message": "Омогућава напредну инструментацију приказивања (споро)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "Омогући статистику CSS бирача"
+    "message": "Омогући статистике CSS бирача (споро)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Чување хронологије није успело: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Покреће се алатка за профиле…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Сазнајте више"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Учитај профил…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Време"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Копирај табелу"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Нема груписања"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Без оптимизације: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Страница"
@@ -13077,7 +13095,7 @@
     "message": "ИД"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "{PH1} на {PH2}"
+    "message": "{PH1} у фајлу {PH2}"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "Поништавања"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "скрипта је учитана из кеша"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "скрипта не испуњава услове"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Статистика бирача"
   },
@@ -13248,7 +13269,7 @@
     "message": "Време проведено у рендеровању"
   },
   "panels/timeline/TimelineUIUtils.ts | timeout": {
-    "message": "Временско ограничење"
+    "message": "Временско ограничење је истекло"
   },
   "panels/timeline/TimelineUIUtils.ts | timerId": {
     "message": "ИД тајмера"
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Укупно време"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Догађај праћења"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Тип"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Поново се повежите када сте спремни тако што ћете отворити Алатке за програмере."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Откажи"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "Подударања: {PH1}"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Пронађи"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Препознај величину слова"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 подударање"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Претражи претходно"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Користите регуларни израз"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Једно или више подешавања је промењено, па је неопходно поновно учитавање да би ступила на снагу."
@@ -13932,7 +13947,10 @@
     "message": "Када се страница поново учита, Алатке за програмере ће се аутоматски поново повезати."
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "Обриши унос"
+    "message": "Обришите"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Филтрирајте"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "није притиснуто"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "Снимак екрана за период од {PH1} – изаберите да бисте видели претходне захтеве."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Додајте скрипту на листу за игнорисање"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Конфигуриши верзије…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Заврши конфигурисање верзија"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Континуирани детаљни графикон"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Сакриј подређене елементе који се понављају"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Уклони скрипту са листе за игнорисање"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Ресетуј подређене елементе"
