--- a/front_end/core/i18n/locales/uz.json
+++ b/front_end/core/i18n/locales/uz.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "Web SQL eskirdi. Oʻrniga SQLite WebAssembly yoki indekslangan axborot omboridan foydalaning"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "window-placement ruxsat deskriptori tugatildi. Oʻrniga window-management ishlating. Batafsil: https://bit.ly/window-placement-rename."
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "window-placement ruxsat qoidalari tugatildi. Oʻrniga window-management ishlating. Batafsil: https://bit.ly/window-placement-rename."
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "XMLHttpRequest json javobida UTF-16 kodlash ishlamaydi"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "ishonchsiz"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "Privacy Sandbox doirasida tashqi cookie fayl bloklandi."
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "Privacy Sandbox doirasida Chromening kelgusi versiyalarida tashqi cookie fayllar bloklanadi."
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "Xatolik haqida xabar berish"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "SharedArrayBuffer yoqilmoqda"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "Arxivlash lugʻati transporti"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<anonim>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "Progressiv veb ilova sarlavha panelidagi oynani boshqarish tugmalari overleyini moslash"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "Tungi for rangi"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "Tungi mavzu rangi"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "Tavsif"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "Rekursiv yoyish"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "Kalit asosida filtrlash (katta yoki barobar kalitlarni chiqarish)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "Oldindan renderlanmadi, chunki sahifa koʻrsatilganda yakuniy URL oddiy URL manzilidan farq qildi (masalan, Yangi varaq sahifasi yoki ichki ilovalar)"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "Noaniq"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "Oldindan renderlangan sahifa audio chiqarishni talab qildi, lekin bu amal hozir ishlamaydi."
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "Sahifa http: yoki https: protokolidagi URL manzilga yoʻnaltirilgani uchun navigatsiya oldindan renderlanmadi."
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "Noaniq"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "Noaniq"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "Hozir ishlamaydigan HTTP autentifikatsiyasi talab etilgani uchun navigatsiya oldindan renderlanmadi."
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "URL asosida filtrlash"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "Qamrov turini filtrlash"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "Sayt orqali yuklash"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "URL yoki xato asosida filtrlash"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "HTTP(S) dasturchi resurslarini DevTools oʻrniga tekshiruvdagi sayt orqali yuklash"
@@ -6824,6 +6839,24 @@
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "Muammolar"
   },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "Unumdorlik"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "Yozib olish"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "Unumdorlikni ochish"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "Oxirgi yilnoma seanslarini ochish"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "Profaylingni boshlash va sahifani qayta yuklash"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "Stop"
+  },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "Tartiblash sababi"
   },
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "Stek trassirovkasi:"
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "Jurnal xabarlari asosida filtrlash"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "Axborot"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "Hodisa manbasi"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "Oddiy ifoda bilan filtrlash (masalan: https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "Id"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "Filtr"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "Oddiy ifoda bilan filtrlash (masalan: (web)?socket)"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "Uzunligi"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "Ushlanish"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "Takroriy qatorlar"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "Ichki axborotni oshkor qilish (jumladan, tatbiq qilishga oid qoʻshimcha tafsilotlarni)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "Filtr"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "Klass asosida filtrlash"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "Qidirish"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "{PH1} va {PH2} orasida ajratilgan obyektlar"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "DevTools konsolida obyektlar ushlanib qoldi"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "Ajratilgan DOM nodlarida obyektlar ushlanib qoldi"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "Yuklash: {value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "Juda sekin qayta ijro"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "Juda sekin"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "Qayta ijro"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
-    "message": "Normal (standart)"
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "Oʻta sekin tezlik"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "Sekin qayta ijro"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
-    "message": "Sekin"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "Juda sekin qayta ijro"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
     "message": "Juda sekin"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "Normal tezlik"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
+    "message": "Normal (standart)"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "Sekin tezlik"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
+    "message": "Sekin"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "Juda sekin tezlik"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
+    "message": "Juda sekin"
+  },
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "Kengaytmalar"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "Tezlik"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "Indekslash uzildi."
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "Yuqori/quyi register"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "Mos keladigani topilmadi."
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "Yangilash"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "Qidiruv"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "Qidiruv tugallandi."
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "Qidiruv uzildi."
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "Qidiruv soʻrovi"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "Qidirilmoqda…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "Odatiy ifodalash"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "{PH2} bilan {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "URL ({PH1}) yuklanmadi: {PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "Kengaytma skriptlarini inkor qilish"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "Bu faylni inkor etish"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "Bu yerda hech qachon pauza qilinmasin"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "Rasmni dekodlash"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "Rasm hajmi oʻzgarishi"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "Taymer oʻrnatish"
   },
@@ -12540,7 +12576,7 @@
     "message": "Ishtirokchi Worklet — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | dedicatedWorker": {
-    "message": "Tanlangan: Worker"
+    "message": "Dedicated Worker"
   },
   "panels/timeline/ThreadAppender.ts | eventDispatchS": {
     "message": "Hodisa: {PH1}"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- Apparatli chizish tufayli qurlima sezilarli sekin ishlashi mumkin"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "Yozilganidan keyin kerakli hududni umumiy panelda sudrab tanlash mumkin. Keyin esa yilnomada kattalashtirish uchun sichqoncha gʻildiragi yoki {PH1} tugmalaridan foydalaning. {PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "Bufer sarfi"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "Tozalash"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "Yozib olish uchun {PH1} tugmasini yoki yangisini yozib olish uchun {PH2} tugmasini bosing."
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "Qayta yuklash uchun {PH1} tugmasini yoki sahifa yuklanishini yozib olish uchun {PH2} tugmalarini bosing."
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "Yopish"
@@ -12750,7 +12777,7 @@
     "message": "Kengaytirilgan apparatli chizishni yoqish (sekin)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "CSS selektorlari statistikasini yoqish"
+    "message": "CSS selektor statistikasini yoqish (sekin)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "Vaqt tasmasi saqlanmadi: {PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "Profayler ishga tushmoqda…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "Batafsil"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "Profil yuklash…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "Vaqt"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "Jadvalni nusxalash"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "Guruhlanmasin"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "Optimizatsiyasiz: {PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "Sahifa"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "skript keshdan yuklandi"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "skript ishlamaydi"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "Selektorlar statistikasi"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "Umumiy vaqt"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "Trassirovka hodisasi"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "Turi"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "Tayyor boʻlganda DevToolsni qayta ochish orqali qayta ulanish."
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "Bekor qilish"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "{PH1} ta natija"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "Qidirish"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "Yuqori/quyi register"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 ta mos natija"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "Avvalgisini qidirish"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "Odatiy ifodalash"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "Bajarilishi uchun qayta yuklanishi kerak bir yoki bir nechta sozlama oʻzgardi."
@@ -13933,6 +13948,9 @@
   },
   "ui/legacy/Toolbar.ts | clearInput": {
     "message": "Tozalash"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "Filtr"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "bosilmadi"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} skrinshoti – oldingi soʻrovlarni koʻrish uchun tanlang."
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "Inkor etish roʻyxatiga skript kiritish"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "Treklarni sozlash…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "Treklarni sozlashni yakunlash"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "Olov jadvali"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "Takroriy quyi elementlarni berkitish"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "Inkor etish roʻyxatidan skript olib tashlash"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "Ichki elementlarni tiklash"
