--- a/front_end/core/i18n/locales/zh-HK.json
+++ b/front_end/core/i18n/locales/zh-HK.json
@@ -1292,12 +1292,6 @@
   "generated/Deprecation.ts | WebSQL": {
     "message": "網絡 SQL 已淘汰。請使用 SQLite WebAssembly 或「已加入索引的資料庫」"
   },
-  "generated/Deprecation.ts | WindowPlacementPermissionDescriptorUsed": {
-    "message": "權限描述項 window-placement 已淘汰。請改用 window-management。如需進一步說明，請查看 https://bit.ly/window-placement-rename。"
-  },
-  "generated/Deprecation.ts | WindowPlacementPermissionPolicyParsed": {
-    "message": "權限政策 window-placement 已淘汰。請改用 window-management。如需進一步說明，請查看 https://bit.ly/window-placement-rename。"
-  },
   "generated/Deprecation.ts | XHRJSONEncodingDetection": {
     "message": "XMLHttpRequest 中的 JSON 回應不支援 UTF-16。"
   },
@@ -1433,6 +1427,12 @@
   "models/issues_manager/CookieIssue.ts | anInsecure": {
     "message": "不安全的項目"
   },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdErrorMessage": {
+    "message": "第三方 Cookie 已在 Chrome 中被封鎖，這是「私隱沙箱」的一部分。"
+  },
+  "models/issues_manager/CookieIssue.ts | consoleTpcdWarningMessage": {
+    "message": "未來的 Chrome 版本將封鎖第三方 Cookie，這是「私隱沙箱」的一部分。"
+  },
   "models/issues_manager/CookieIssue.ts | fileCrosSiteRedirectBug": {
     "message": "報告錯誤"
   },
@@ -1525,6 +1525,9 @@
   },
   "models/issues_manager/SharedArrayBufferIssue.ts | enablingSharedArrayBuffer": {
     "message": "啟用 SharedArrayBuffer"
+  },
+  "models/issues_manager/SharedDictionaryIssue.ts | compressionDictionaryTransport": {
+    "message": "壓縮字典傳輸"
   },
   "models/logs/NetworkLog.ts | anonymous": {
     "message": "<匿名>"
@@ -2189,12 +2192,6 @@
   "panels/application/AppManifestView.ts | customizePwaTitleBar": {
     "message": "自訂 PWA 標題列的視窗控制重疊"
   },
-  "panels/application/AppManifestView.ts | darkBackgroundColor": {
-    "message": "深色背景顏色"
-  },
-  "panels/application/AppManifestView.ts | darkThemeColor": {
-    "message": "深色主題背景顏色"
-  },
   "panels/application/AppManifestView.ts | description": {
     "message": "說明"
   },
@@ -2647,6 +2644,9 @@
   },
   "panels/application/IndexedDBViews.ts | expandRecursively": {
     "message": "重複展開"
+  },
+  "panels/application/IndexedDBViews.ts | filterByKey": {
+    "message": "按鍵篩選 (顯示大於或等於某值的鍵)"
   },
   "panels/application/IndexedDBViews.ts | idb": {
     "message": "IDB"
@@ -4262,6 +4262,9 @@
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusActivationUrlHasEffectiveUrl": {
     "message": "在啟用期間，導覽的有效網址與一般網址不同 (例如新分頁或寄存應用程式)，因此系統未使用預先輸出。"
   },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAllPrerenderingCanceled": {
+    "message": "不明"
+  },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusAudioOutputDeviceRequested": {
     "message": "預先輸出的頁面已要求輸出音訊，但目前不支援。"
   },
@@ -4300,6 +4303,12 @@
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusInvalidSchemeRedirect": {
     "message": "由於系統重新導向至配置並非為 http: 或 https: 的網址，因預先輸出導覽失敗。"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceAdded": {
+    "message": "不明"
+  },
+  "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusJavaScriptInterfaceRemoved": {
+    "message": "不明"
   },
   "panels/application/preloading/components/PreloadingString.ts | prerenderFinalStatusLoginAuthRequested": {
     "message": "預先輸出導覽要求 HTTP 驗證，但目前不支援。"
@@ -5258,6 +5267,9 @@
   "panels/coverage/CoverageView.ts | css": {
     "message": "CSS"
   },
+  "panels/coverage/CoverageView.ts | filterByUrl": {
+    "message": "按網址篩選"
+  },
   "panels/coverage/CoverageView.ts | filterCoverageByType": {
     "message": "按類型篩選覆蓋率"
   },
@@ -5500,6 +5512,9 @@
   },
   "panels/developer_resources/DeveloperResourcesView.ts | enableLoadingThroughTarget": {
     "message": "透過網站載入"
+  },
+  "panels/developer_resources/DeveloperResourcesView.ts | filterByText": {
+    "message": "按網址和錯誤篩選"
   },
   "panels/developer_resources/DeveloperResourcesView.ts | loadHttpsDeveloperResources": {
     "message": "透過檢查的網站 (而非開發人員工具) 載入 HTTP(S) 開發人員資源"
@@ -6387,7 +6402,7 @@
     "message": "相關代碼"
   },
   "panels/explain/components/ConsoleInsight.ts | reloadRecommendation": {
-    "message": "Reload the page to capture related network request data for this message in order to create a better insight."
+    "message": "請重新載入頁面，擷取與此訊息相關的網絡要求資料，製作更完善的分析資料。"
   },
   "panels/explain/components/ConsoleInsight.ts | report": {
     "message": "舉報法律問題"
@@ -6435,7 +6450,7 @@
     "message": "你的機構已關閉此功能。請聯絡管理員以瞭解詳情。"
   },
   "panels/explain/explain-meta.ts | rolloutRestricted": {
-    "message": "This feature is currently being rolled out. Stay tuned."
+    "message": "此功能目前正逐步推出，請密切留意。"
   },
   "panels/explain/explain-meta.ts | wrongLocale": {
     "message": "如要使用此功能，請前往「開發人員工具設定」設定，將語言偏好設定更新為英文。"
@@ -6823,6 +6838,24 @@
   },
   "panels/issues/issues-meta.ts | showIssues": {
     "message": "顯示「問題」工具"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | performance": {
+    "message": "效能"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | record": {
+    "message": "記錄"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showPerformance": {
+    "message": "顯示「效能」工具"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | showRecentTimelineSessions": {
+    "message": "顯示近期的時間軸工作階段"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | startProfilingAndReloadPage": {
+    "message": "開始剖析並重新載入網頁"
+  },
+  "panels/js_timeline/js_timeline-meta.ts | stop": {
+    "message": "停止"
   },
   "panels/layer_viewer/LayerDetailsView.ts | compositingReasons": {
     "message": "正在合成原因"
@@ -7424,6 +7457,9 @@
   "panels/media/PlayerMessagesView.ts | errorStackLabel": {
     "message": "堆疊追蹤："
   },
+  "panels/media/PlayerMessagesView.ts | filterByLogMessages": {
+    "message": "按記錄訊息篩選"
+  },
   "panels/media/PlayerMessagesView.ts | info": {
     "message": "資料"
   },
@@ -7780,6 +7816,9 @@
   },
   "panels/network/EventSourceMessagesView.ts | eventSource": {
     "message": "事件來源"
+  },
+  "panels/network/EventSourceMessagesView.ts | filterByRegex": {
+    "message": "使用規則運算式篩選 (例如：https?)"
   },
   "panels/network/EventSourceMessagesView.ts | id": {
     "message": "ID"
@@ -8714,6 +8753,9 @@
   "panels/network/ResourceWebSocketFrameView.ts | filter": {
     "message": "篩選器"
   },
+  "panels/network/ResourceWebSocketFrameView.ts | filterUsingRegex": {
+    "message": "使用規則運算式 (例如 (web)?socket) 進行篩選"
+  },
   "panels/network/ResourceWebSocketFrameView.ts | length": {
     "message": "長度"
   },
@@ -9362,11 +9404,17 @@
   "panels/profiler/HeapSnapshotView.ts | containment": {
     "message": "容器封裝"
   },
+  "panels/profiler/HeapSnapshotView.ts | duplicatedStrings": {
+    "message": "重覆的字串"
+  },
   "panels/profiler/HeapSnapshotView.ts | exposeInternals": {
     "message": "暴露內部資料 (包含其他執行相關詳情)"
   },
   "panels/profiler/HeapSnapshotView.ts | filter": {
     "message": "篩選器"
+  },
+  "panels/profiler/HeapSnapshotView.ts | filterByClass": {
+    "message": "按類別篩選"
   },
   "panels/profiler/HeapSnapshotView.ts | find": {
     "message": "尋找"
@@ -9397,6 +9445,12 @@
   },
   "panels/profiler/HeapSnapshotView.ts | objectsAllocatedBetweenSAndS": {
     "message": "已在{PH1} 和{PH2} 之間分配物件"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByConsole": {
+    "message": "開發人員工具控制台保留的物件"
+  },
+  "panels/profiler/HeapSnapshotView.ts | objectsRetainedByDetachedDomNodes": {
+    "message": "已分離的 DOM 節點保留的物件"
   },
   "panels/profiler/HeapSnapshotView.ts | percentagePlaceholder": {
     "message": "{PH1}%"
@@ -9998,34 +10052,37 @@
   "panels/recorder/components/RecordingView.ts | upload": {
     "message": "上載：{value}"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowButtonLabel": {
-    "message": "極慢重播"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayExtremelySlowItemLabel": {
-    "message": "極慢"
-  },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalButtonLabel": {
+  "panels/recorder/components/ReplaySection.ts | Replay": {
     "message": "重播"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayNormalItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowButtonLabel": {
+    "message": "極慢速"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayExtremelySlowItemLabel": {
+    "message": "極慢"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalButtonLabel": {
+    "message": "標準速度"
+  },
+  "panels/recorder/components/ReplaySection.ts | ReplayNormalItemLabel": {
     "message": "正常 (預設)"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowButtonLabel": {
-    "message": "慢速重播"
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowButtonLabel": {
+    "message": "慢速"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplaySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplaySlowItemLabel": {
     "message": "慢"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowButtonLabel": {
-    "message": "極慢速重播"
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowButtonLabel": {
+    "message": "非常慢速"
   },
-  "panels/recorder/components/ReplayButton.ts | ReplayVerySlowItemLabel": {
+  "panels/recorder/components/ReplaySection.ts | ReplayVerySlowItemLabel": {
     "message": "非常慢"
   },
-  "panels/recorder/components/ReplayButton.ts | extensionGroup": {
+  "panels/recorder/components/ReplaySection.ts | extensionGroup": {
     "message": "擴充程式"
   },
-  "panels/recorder/components/ReplayButton.ts | speedGroup": {
+  "panels/recorder/components/ReplaySection.ts | speedGroup": {
     "message": "速度"
   },
   "panels/recorder/components/StartView.ts | createRecording": {
@@ -10235,17 +10292,11 @@
   "panels/search/SearchView.ts | indexingInterrupted": {
     "message": "索引已中斷。"
   },
-  "panels/search/SearchView.ts | matchCase": {
-    "message": "大小楷相符"
-  },
   "panels/search/SearchView.ts | noMatchesFound": {
     "message": "找不到相符的搜尋結果。"
   },
   "panels/search/SearchView.ts | refresh": {
     "message": "重新整理"
-  },
-  "panels/search/SearchView.ts | search": {
-    "message": "搜尋"
   },
   "panels/search/SearchView.ts | searchFinished": {
     "message": "搜尋完成。"
@@ -10253,14 +10304,8 @@
   "panels/search/SearchView.ts | searchInterrupted": {
     "message": "搜尋已中斷。"
   },
-  "panels/search/SearchView.ts | searchQuery": {
-    "message": "搜尋查詢"
-  },
   "panels/search/SearchView.ts | searching": {
     "message": "正在搜尋…"
-  },
-  "panels/search/SearchView.ts | useRegularExpression": {
-    "message": "使用規則運算式"
   },
   "panels/security/SecurityModel.ts | cipherWithMAC": {
     "message": "包含 {PH2} 的 {PH1}"
@@ -11390,12 +11435,6 @@
   "panels/sources/DebuggerPlugin.ts | errorLoading": {
     "message": "載入網址 {PH1} 時發生錯誤：{PH2}"
   },
-  "panels/sources/DebuggerPlugin.ts | ignoreContentScripts": {
-    "message": "忽略擴充程式指令碼"
-  },
-  "panels/sources/DebuggerPlugin.ts | ignoreScript": {
-    "message": "忽略此檔案"
-  },
   "panels/sources/DebuggerPlugin.ts | neverPauseHere": {
     "message": "永不在這裡暫停"
   },
@@ -12314,9 +12353,6 @@
   "panels/timeline/EventUICategory.ts | imageDecode": {
     "message": "圖像解碼"
   },
-  "panels/timeline/EventUICategory.ts | imageResize": {
-    "message": "調整圖片大小"
-  },
   "panels/timeline/EventUICategory.ts | installTimer": {
     "message": "安裝計時器"
   },
@@ -12585,10 +12621,10 @@
     "message": "競投 Worklet - {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | workerS": {
-    "message": "Worker - {PH1}"
+    "message": "Worker — {PH1}"
   },
   "panels/timeline/ThreadAppender.ts | workerSS": {
-    "message": "Worker：{PH1} - {PH2}"
+    "message": "Worker：{PH1} — {PH2}"
   },
   "panels/timeline/ThreadAppender.ts | workletService": {
     "message": "競投 Worklet 服務"
@@ -12698,9 +12734,6 @@
   "panels/timeline/TimelinePanel.ts | SignificantOverheadDueToPaint": {
     "message": "- 繪製檢測造成非常高的用量"
   },
-  "panels/timeline/TimelinePanel.ts | afterRecordingSelectAnAreaOf": {
-    "message": "記錄後，請在概覽中以拖曳的方式選取有興趣的區域，然後利用滑鼠滾輪或 {PH1} 鍵來縮放及平移時間軸。{PH2}"
-  },
   "panels/timeline/TimelinePanel.ts | bufferUsage": {
     "message": "緩衝區用量"
   },
@@ -12718,12 +12751,6 @@
   },
   "panels/timeline/TimelinePanel.ts | clear": {
     "message": "清除"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheRecordButtonSOrHitSTo": {
-    "message": "按一下記錄按鈕「{PH1}」或點擊 {PH2}以建立新的記錄。"
-  },
-  "panels/timeline/TimelinePanel.ts | clickTheReloadButtonSOrHitSTo": {
-    "message": "按一下重新載入按鈕 {PH1} 或按 {PH2} 鍵，即可記錄網頁載入。"
   },
   "panels/timeline/TimelinePanel.ts | close": {
     "message": "關閉"
@@ -12750,7 +12777,7 @@
     "message": "啟用進階繪製檢測 (緩慢)"
   },
   "panels/timeline/TimelinePanel.ts | enableSelectorStats": {
-    "message": "啟用 CSS 選取器統計資料"
+    "message": "啟用 CSS 選取器統計資料 (慢速)"
   },
   "panels/timeline/TimelinePanel.ts | failedToSaveTimelineSS": {
     "message": "無法儲存時間軸：{PH1} ({PH2})"
@@ -12760,9 +12787,6 @@
   },
   "panels/timeline/TimelinePanel.ts | initializingProfiler": {
     "message": "分析器正在初始化…"
-  },
-  "panels/timeline/TimelinePanel.ts | learnmore": {
-    "message": "瞭解詳情"
   },
   "panels/timeline/TimelinePanel.ts | loadProfile": {
     "message": "載入設定檔…"
@@ -12814,9 +12838,6 @@
   },
   "panels/timeline/TimelinePanel.ts | time": {
     "message": "時間"
-  },
-  "panels/timeline/TimelinePanel.ts | wasd": {
-    "message": "WASD"
   },
   "panels/timeline/TimelineSelectorStatsView.ts | copyTable": {
     "message": "複製表格"
@@ -12904,9 +12925,6 @@
   },
   "panels/timeline/TimelineTreeView.ts | noGrouping": {
     "message": "不分類"
-  },
-  "panels/timeline/TimelineTreeView.ts | notOptimizedS": {
-    "message": "尚未優化：{PH1}"
   },
   "panels/timeline/TimelineTreeView.ts | page": {
     "message": "網頁"
@@ -13077,7 +13095,7 @@
     "message": "ID"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidationWithCallFrame": {
-    "message": "{PH1} {PH2}"
+    "message": "{PH2} 的「{PH1}」"
   },
   "panels/timeline/TimelineUIUtils.ts | invalidations": {
     "message": "無效判定"
@@ -13223,6 +13241,9 @@
   "panels/timeline/TimelineUIUtils.ts | scriptLoadedFromCache": {
     "message": "已從快取載入指令碼"
   },
+  "panels/timeline/TimelineUIUtils.ts | scriptNotEligibleToBeLoadedFromCache": {
+    "message": "指令碼不符合資格"
+  },
   "panels/timeline/TimelineUIUtils.ts | selectorStatsTitle": {
     "message": "選取器統計資料"
   },
@@ -13261,6 +13282,9 @@
   },
   "panels/timeline/TimelineUIUtils.ts | totalTime": {
     "message": "總時間"
+  },
+  "panels/timeline/TimelineUIUtils.ts | traceEvent": {
+    "message": "追蹤事件"
   },
   "panels/timeline/TimelineUIUtils.ts | type": {
     "message": "類型"
@@ -13844,9 +13868,6 @@
   "ui/legacy/RemoteDebuggingTerminatedScreen.ts | reconnectWhenReadyByReopening": {
     "message": "在準備就緒時重新開啟開發人員工具，即可再次連線。"
   },
-  "ui/legacy/SearchableView.ts | cancel": {
-    "message": "取消"
-  },
   "ui/legacy/SearchableView.ts | dMatches": {
     "message": "找到 {PH1} 個相符結果"
   },
@@ -13855,9 +13876,6 @@
   },
   "ui/legacy/SearchableView.ts | findString": {
     "message": "尋找"
-  },
-  "ui/legacy/SearchableView.ts | matchCase": {
-    "message": "大小楷相符"
   },
   "ui/legacy/SearchableView.ts | matchString": {
     "message": "1 個相符項目"
@@ -13873,9 +13891,6 @@
   },
   "ui/legacy/SearchableView.ts | searchPrevious": {
     "message": "搜尋上一個例項"
-  },
-  "ui/legacy/SearchableView.ts | useRegularExpression": {
-    "message": "使用規則運算式"
   },
   "ui/legacy/SettingsUI.ts | oneOrMoreSettingsHaveChanged": {
     "message": "一項或多項設定已變更，需要重新載入才能生效。"
@@ -13932,7 +13947,10 @@
     "message": "網頁重新載入後，開發人員工具就會自動重新連線。"
   },
   "ui/legacy/Toolbar.ts | clearInput": {
-    "message": "清除輸入內容"
+    "message": "清除"
+  },
+  "ui/legacy/Toolbar.ts | filter": {
+    "message": "篩選器"
   },
   "ui/legacy/Toolbar.ts | notPressed": {
     "message": "未㩒"
@@ -14351,6 +14369,15 @@
   "ui/legacy/components/perf_ui/FilmStripView.ts | screenshotForSSelectToView": {
     "message": "{PH1} 嘅螢幕截圖 - 揀佢就可以睇返之前嘅要求。"
   },
+  "ui/legacy/components/perf_ui/FlameChart.ts | addScriptToIgnoreList": {
+    "message": "新增指令碼至忽略清單"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | enterTrackConfigurationMode": {
+    "message": "設定追蹤項目…"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | exitTrackConfigurationMode": {
+    "message": "完成追蹤項目設定"
+  },
   "ui/legacy/components/perf_ui/FlameChart.ts | flameChart": {
     "message": "火焰圖"
   },
@@ -14362,6 +14389,9 @@
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | hideRepeatingChildren": {
     "message": "隱藏重複的子項"
+  },
+  "ui/legacy/components/perf_ui/FlameChart.ts | removeScriptFromIgnoreList": {
+    "message": "從忽略清單移除指令碼"
   },
   "ui/legacy/components/perf_ui/FlameChart.ts | resetChildren": {
     "message": "重設子項"
